--- a/Урок 03. Программное обеспечение ПК/Python - HW03.html
+++ b/Урок 03. Программное обеспечение ПК/Python - HW03.html
@@ -4,7 +4,9 @@
   <title>Python - HW03</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #333333 0%, #404040 57%, #363636 100%);
@@ -96,17 +98,25 @@
     <div class="right-block">
       <div class="right-rect">
         <h2><strong>Примечание</strong></h2>
-        <p>Создайте 1 текстовый документ. Для этого нажмите <span class="hl-text">Правой Кнопкой Мыши</span> на пустом месте, затем наведите курсор на <span class="hl-text">"New"</span> и нажмите <span class="hl-text">"Text Document"</span>.</p>
+        <p>Создайте 1 текстовый документ. Для этого нажмите <span class="hl-text">Правой Кнопкой Мыши</span> на пустом
+          месте, затем наведите курсор на <span class="hl-text">"New"</span> и нажмите <span class="hl-text">"Text
+            Document"</span>.</p>
         <img src="https://i.imgur.com/pfsltEx.png" alt="Creating Text Document">
-        <p>Откройте созданный документ, быстро нажав по нему 2 раза <span class="hl-text">Левой Кнопкой Мыши</span>. Пронумеруйте задания и записывайте их решения под соответствующим номером.</p>
+        <p>Откройте созданный документ, быстро нажав по нему 2 раза <span class="hl-text">Левой Кнопкой Мыши</span>.
+          Пронумеруйте задания и записывайте их решения под соответствующим номером.</p>
         <img src="https://i.imgur.com/fp50L0g.png" alt="Homework format">
-        <p>После завершения всех заданий заархивируйте документ. Для этого нажмите <span class="hl-text">Правой Кнопкой Мыши</span> по созданному текстовому документу и выберите <span class="hl-text">"Add to "Название""</span>.</p>
+        <p>После завершения всех заданий заархивируйте документ. Для этого нажмите <span class="hl-text">Правой Кнопкой
+            Мыши</span> по созданному текстовому документу и выберите <span class="hl-text">"Add to "Название""</span>.
+        </p>
         <img src="https://i.imgur.com/hL6Rn7n.png" alt="Archiving">
-        <p>Перейдите на сайт <a href="https://mystat.itstep.org">https://mystat.itstep.org</a> и войдите в свой аккаунт. Перейдите во вкладку <span class="hl-text">"Домашние задания"</span>. Наведите курсор на карточку с домашним заданием и нажмите на <span class="hl-text">"Загрузить выполненное задание"</span>.</p>
+        <p>Перейдите на сайт <a href="https://mystat.itstep.org">https://mystat.itstep.org</a> и войдите в свой аккаунт.
+          Перейдите во вкладку <span class="hl-text">"Домашние задания"</span>. Наведите курсор на карточку с домашним
+          заданием и нажмите на <span class="hl-text">"Загрузить выполненное задание"</span>.</p>
         <img src="https://i.imgur.com/s9UmXeE.png" , height="400px">
         <p>Далее нажмите на кнопку <span class="hl-text">"Кликните здесь"</span>.</p>
         <img src="https://i.imgur.com/ssjan5E.png" height="500px">
-        <p> Выберите созданный архив. Затем укажите время в поле <span class="hl-text">"Потрачено времени на выполнение"</span> и нажмите <span class="hl-text">"Отправить"</span>.</p>
+        <p> Выберите созданный архив. Затем укажите время в поле <span class="hl-text">"Потрачено времени на
+            выполнение"</span> и нажмите <span class="hl-text">"Отправить"</span>.</p>
         <img src="https://i.imgur.com/03BtfjB.png" height="100px">
       </div>
       <div class="right-rect">
@@ -125,7 +135,9 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 3.2</h2>
-        <p>На сайте <a href="https://pcpartpicker.com/">https://pcpartpicker.com/</a> сделайте сборку ПК, стоимость которого не превышает <span class="hl-text">1 200</span> долларов (<span class="hl-text">около 2 000 манат</span>) и удовлетворяет следующим требованиям:
+        <p>На сайте <a href="https://pcpartpicker.com/">https://pcpartpicker.com/</a> сделайте сборку ПК, стоимость
+          которого не превышает <span class="hl-text">1 200</span> долларов (<span class="hl-text">около 2 000
+            манат</span>) и удовлетворяет следующим требованиям:
           <br>— Сборка подходит для комфортной игры в компьютерные игры
           <br>— Выбран CPU
           <br>— Выбран CPU Cooler
@@ -137,14 +149,17 @@
           <br>— Выбран Power Supply
           <br>— Присутствует объяснение причины выбора компонентов
         </p>
-        <p>После того, как сделаете сборку, скопируйте ссылку, которая будет у вас над выбранными компонентами, и вставьте её в текстовый документ с домашним заданием.</p>
+        <p>После того, как сделаете сборку, скопируйте ссылку, которая будет у вас над выбранными компонентами, и
+          вставьте её в текстовый документ с домашним заданием.</p>
         <img src="https://i.imgur.com/nsEXUnu.png">
 
         <p>Далее подробно опишите причину выбора компонентов.</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 3.3</h2>
-        <p>На сайте <a href="https://pcpartpicker.com/">https://pcpartpicker.com/</a> сделайте сборку ПК, стоимость которого не превышает <span class="hl-text">600</span> долларов (<span class="hl-text">около 1 000 манат</span>) и удовлетворяет следующим требованиям:
+        <p>На сайте <a href="https://pcpartpicker.com/">https://pcpartpicker.com/</a> сделайте сборку ПК, стоимость
+          которого не превышает <span class="hl-text">600</span> долларов (<span class="hl-text">около 1 000
+            манат</span>) и удовлетворяет следующим требованиям:
           <br>— Сборка подходит для комфортного программирования
           <br>— Выбран CPU
           <br>— Выбран CPU Cooler
@@ -156,14 +171,16 @@
           <br>— Выбран Power Supply
           <br>— Присутствует объяснение причины выбора компонентов
         </p>
-        <p>После того, как сделаете сборку, скопируйте ссылку, которая будет у вас над выбранными компонентами, и вставьте её в текстовый документ с домашним заданием.</p>
+        <p>После того, как сделаете сборку, скопируйте ссылку, которая будет у вас над выбранными компонентами, и
+          вставьте её в текстовый документ с домашним заданием.</p>
         <img src="https://i.imgur.com/nsEXUnu.png">
 
         <p>Далее подробно опишите причину выбора компонентов.</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 3.4</h2>
-        <p>По сборке компьютера и комментарию пользователя объясните, в чём может быть проблема (считайте, что компьютер настроен правильно, а компоненты не бракованные).</p>
+        <p>По сборке компьютера и комментарию пользователя объясните, в чём может быть проблема (считайте, что компьютер
+          настроен правильно, а компоненты не бракованные).</p>
 
         <h3>СБОРКА:</h3>
         <p><span class="hl-text">CPU:</span> Intel Core i9-14900K 3.2 GHz 24-Core Processor
@@ -174,15 +191,21 @@
           <br><span class="hl-text">Storage:</span> Samsung 980 Pro 2 TB M.2-2280 PCIe 4.0 X4 NVME Solid State Drive
           <br><span class="hl-text">Storage:</span> Samsung 870 Evo 2 TB 2.5" Solid State Drive
           <br><span class="hl-text">Video Card:</span> MSI SUPRIM X GeForce RTX 4090 24 GB Video Card
-          <br><span class="hl-text">Power Supply:</span> Deepcool PN650M 650 W 80+ Gold Certified Fully Modular ATX Power Supply
+          <br><span class="hl-text">Power Supply:</span> Deepcool PN650M 650 W 80+ Gold Certified Fully Modular ATX
+          Power Supply
         </p>
 
         <h3>КОММЕНТАРИЙ ПОЛЬЗОВАТЕЛЯ:</h3>
-        <p>"Появились проблемы с моим игровым компьютером - периодически, во время игры, экран просто становится черным, словно его выключили, и все система отключается. Это происходит случайным образом, без каких-либо предупреждений или предшествующих признаков. Иногда он сразу же перезагружается после загрузки ОС. Когда занимаюсь работой (пишу статьи), то таких проблем не возникает. Не могу понять, в чем может быть причина такого поведения."</p>
+        <p>"Появились проблемы с моим игровым компьютером - периодически, во время игры, экран просто становится черным,
+          словно его выключили, и все система отключается. Это происходит случайным образом, без каких-либо
+          предупреждений или предшествующих признаков. Иногда он сразу же перезагружается после загрузки ОС. Когда
+          занимаюсь работой (пишу статьи), то таких проблем не возникает. Не могу понять, в чем может быть причина
+          такого поведения."</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 3.5</h2>
-        <p>По сборке компьютера и комментарию пользователя объясните, в чём может быть проблема (считайте, что компьютер настроен правильно, а компоненты не бракованные).</p>
+        <p>По сборке компьютера и комментарию пользователя объясните, в чём может быть проблема (считайте, что компьютер
+          настроен правильно, а компоненты не бракованные).</p>
 
         <h3>СБОРКА:</h3>
         <p><span class="hl-text">CPU:</span> AMD Ryzen 5 5600X 3.7 GHz 6-Core Processor
@@ -193,16 +216,21 @@
           <br><span class="hl-text">Memory:</span> ADATA XPG SPECTRIX D50 8 GB (1 x 8 GB) DDR4-4133 CL18 Memory
           <br><span class="hl-text">Storage:</span> Kingston A400 240 GB 2.5" Solid State Drive
           <br><span class="hl-text">Storage:</span> Kingston NV2 2 TB M.2-2280 PCIe 4.0 X4 NVME Solid State Drive
-          <br><span class="hl-text">Video Card:</span> MSI GeForce RTX 3060 Ventus 2X 12G GeForce RTX 3060 12GB 12 GB Video Card
+          <br><span class="hl-text">Video Card:</span> MSI GeForce RTX 3060 Ventus 2X 12G GeForce RTX 3060 12GB 12 GB
+          Video Card
           <br><span class="hl-text">Power Supply:</span> Corsair G800 800 W 80+ Certified ATX Power Supply
         </p>
 
         <h3>КОММЕНТАРИЙ ПОЛЬЗОВАТЕЛЯ:</h3>
-        <p>"Собрал новый компьютер, но у него всё время возникают проблемы. Он периодически выдаёт ошибки при выполнении различных задач - игры и обычные рабочие программы. Видеокарта, блок питания и одна планка ОЗУ от старой сборки, две другие планки ОЗУ дал друг (планки рабочие, проверял в сборке друга). Не могу понять, в чём может быть причина этой нестабильности."</p>
+        <p>"Собрал новый компьютер, но у него всё время возникают проблемы. Он периодически выдаёт ошибки при выполнении
+          различных задач - игры и обычные рабочие программы. Видеокарта, блок питания и одна планка ОЗУ от старой
+          сборки, две другие планки ОЗУ дал друг (планки рабочие, проверял в сборке друга). Не могу понять, в чём может
+          быть причина этой нестабильности."</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 3.6</h2>
-        <p>По сборке компьютера и комментарию пользователя объясните, в чём может быть проблема (считайте, что компьютер настроен правильно, а компоненты не бракованные).</p>
+        <p>По сборке компьютера и комментарию пользователя объясните, в чём может быть проблема (считайте, что компьютер
+          настроен правильно, а компоненты не бракованные).</p>
 
         <h3>СБОРКА:</h3>
         <p><span class="hl-text">CPU:</span> Intel Core i9-14900K 3.2 GHz 24-Core Processor
@@ -213,15 +241,20 @@
           <br><span class="hl-text">Storage:</span> Kingston A400 480 GB 2.5" Solid State Drive
           <br><span class="hl-text">Storage:</span> Kingston NV2 1 TB M.2-2280 PCIe 4.0 X4 NVME Solid State Drive
           <br><span class="hl-text">Video Card:</span> Gigabyte WINDFORCE OC GeForce RTX 4070 Ti SUPER 16 GB Video Card
-          <br><span class="hl-text">Power Supply:</span> be quiet! Pure Power 12 M 1000 W 80+ Gold Certified Fully Modular ATX Power Supply
+          <br><span class="hl-text">Power Supply:</span> be quiet! Pure Power 12 M 1000 W 80+ Gold Certified Fully
+          Modular ATX Power Supply
         </p>
 
         <h3>КОММЕНТАРИЙ ПОЛЬЗОВАТЕЛЯ:</h3>
-        <p>"Последнее время мой компьютер стал нестабильно работать - время от времени он просто выключается, без видимых предупреждений. Это случается особенно часто, когда я играю в игры или когда выполняю по работе сложные вычисления. Эта проблема начала проявляться недавно, до этого все работало нормально. Я подозреваю, что дело может быть в процессоре или в его работе."</p>
+        <p>"Последнее время мой компьютер стал нестабильно работать - время от времени он просто выключается, без
+          видимых предупреждений. Это случается особенно часто, когда я играю в игры или когда выполняю по работе
+          сложные вычисления. Эта проблема начала проявляться недавно, до этого все работало нормально. Я подозреваю,
+          что дело может быть в процессоре или в его работе."</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 3.7 (Необязательное)</h2>
-        <p>По сборке компьютера и комментарию пользователя объясните, в чём может быть проблема (считайте, что компоненты не бракованные).</p>
+        <p>По сборке компьютера и комментарию пользователя объясните, в чём может быть проблема (считайте, что
+          компоненты не бракованные).</p>
 
         <h3>СБОРКА:</h3>
         <p><span class="hl-text">CPU:</span> AMD FX-4300 3.8 GHz Quad-Core Processor
@@ -235,7 +268,14 @@
         </p>
 
         <h3>КОММЕНТАРИЙ ПОЛЬЗОВАТЕЛЯ:</h3>
-        <p>"Брал компьютер за 20 000 рублей. Продавец сказал, что это игровая сборка. Как и ожидал, игры более-менее тянет на низких настройках, но спустя примерно 10 минут, компьютер начинает сильно подвисать, частота кадров прыгает от 10 до 20. В тестах вижу, как частота процессора тоже сильно прыгает. Отдал знакомому на проверку. Он провёл разные тесты, потом долго ковырялся в компонентах, проверял их на физические повреждения. Потом он достал пылесос и провёл эксперимент. После эксперимента он сразу же полез в BIOS и начал что-то настраивать. После настройки он опять проводил тесты и потом снова лез в BIOS. Так происходило несколько раз. В итоге частота кадров стала стабильно держаться около 30, картинка стала более плавной, частота процессора тоже стала стабильной."</p>
+        <p>"Брал компьютер за 20 000 рублей. Продавец сказал, что это игровая сборка. Как и ожидал, игры более-менее
+          тянет на низких настройках, но спустя примерно 10 минут, компьютер начинает сильно подвисать, частота кадров
+          прыгает от 10 до 20. В тестах вижу, как частота процессора тоже сильно прыгает. Отдал знакомому на проверку.
+          Он провёл разные тесты, потом долго ковырялся в компонентах, проверял их на физические повреждения. Потом он
+          достал пылесос и провёл эксперимент. После эксперимента он сразу же полез в BIOS и начал что-то настраивать.
+          После настройки он опять проводил тесты и потом снова лез в BIOS. Так происходило несколько раз. В итоге
+          частота кадров стала стабильно держаться около 30, картинка стала более плавной, частота процессора тоже стала
+          стабильной."</p>
       </div>
     </div>
   </div>
