--- a/Урок 03. Программное обеспечение ПК/Python - PT03.html
+++ b/Урок 03. Программное обеспечение ПК/Python - PT03.html
@@ -4,7 +4,9 @@
   <title>Python - PT03</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #CCCCCC 0%, #BFBFBF 52%, #C9C9C9 100%);
@@ -90,7 +92,8 @@
     <div class="right-block">
       <div class="right-rect">
         <h2>Практическое Задание 3.1</h2>
-        <p>Сделайте скриншот экрана и сохраните его как файл на рабочем столе. Затем создайте текстовый документ на рабочем столе, выделите только что созданный документ и скриншот, затем заархивируйте их.</p>
+        <p>Сделайте скриншот экрана и сохраните его как файл на рабочем столе. Затем создайте текстовый документ на
+          рабочем столе, выделите только что созданный документ и скриншот, затем заархивируйте их.</p>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 3.2</h2>
@@ -107,7 +110,8 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 3.3</h2>
-        <p>На сайте <a href="https://pcpartpicker.com/">https://pcpartpicker.com/</a> сделайте сборку ПК, которая удовлетворяет следующим требованиям:
+        <p>На сайте <a href="https://pcpartpicker.com/">https://pcpartpicker.com/</a> сделайте сборку ПК, которая
+          удовлетворяет следующим требованиям:
           <br>— Выбран CPU
           <br>— Выбран CPU Cooler
           <br>— Выбран Motherboard
