--- a/Урок 05. Алгоритмы/Python - PT05.html
+++ b/Урок 05. Алгоритмы/Python - PT05.html
@@ -4,7 +4,9 @@
   <title>Python - PT05</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #CCCCCC 0%, #BFBFBF 52%, #CCCCCC 100%);
@@ -90,7 +92,9 @@
     <div class="right-block">
       <div class="right-rect">
         <h2>Примечание</h2>
-        <p>Используйте сайт <a href="https://programforyou.ru/block-diagram-redactor">https://programforyou.ru/block-diagram-redactor</a> для создания блок-схем.
+        <p>Используйте сайт <a
+            href="https://programforyou.ru/block-diagram-redactor">https://programforyou.ru/block-diagram-redactor</a>
+          для создания блок-схем.
           Словесный алгоритм записывайте при помощи блока <span class="hl-text">"Текст / комментарий"</span>.</p>
       </div>
       <div class="right-rect">
