--- a/Урок 07-09. Введение в Python/Python - HW08.html
+++ b/Урок 07-09. Введение в Python/Python - HW08.html
@@ -351,10 +351,10 @@ to be</code></pre>
             <code><b><span class="number">1</span> * <span class="number">1000</span> + <span class="number">2</span> * <span class="number">100</span> + <span class="number">3</span> * <span class="number">10</span> + <span class="number">4</span> * <span class="number">1</span> = <span class="number">1234</span></b></code>.
           </li>
           <li>
-            <code><b><span class="number">&ltчисло&gt</span> % <span class="number">10</span> = <span class="number">&ltпоследняя_цифра_числа&gt</span></b></code>.
+            <code><b><span class="number">{число}</span> % <span class="number">10</span> = <span class="number">{последняя_цифра_числа}</span></b></code>.
           </li>
           <li>
-            <code><b><span class="number">&ltчисло&gt</span> // <span class="number">10</span> = <span class="number">&ltчисло_без_последней_цифры&gt</span></b></code>.
+            <code><b><span class="number">{число}</span> // <span class="number">10</span> = <span class="number">{число_без_последней_цифры}</span></b></code>.
           </li>
           <li>Используйте смешанные деления, чтобы выделять конкретные цифры в числе.</li>
         </ol>
@@ -364,10 +364,10 @@ to be</code></pre>
             <code><b><span class="number">123</span> * <span class="number">10</span> + <span class="number">4</span> = <span class="number">1234</span></b></code>.
           </li>
           <li>
-            <code><b><span class="number">&ltчисло&gt</span> % <span class="number">10</span> = <span class="number">&ltпоследняя_цифра_числа&gt</span></b></code>.
+            <code><b><span class="number">{число}</span> % <span class="number">10</span> = <span class="number">{последняя_цифра_числа}</span></b></code>.
           </li>
           <li>
-            <code><b><span class="number">&ltчисло&gt</span> // <span class="number">10</span> = <span class="number">&ltчисло_без_последней_цифры&gt</span></b></code>.
+            <code><b><span class="number">{число}</span> // <span class="number">10</span> = <span class="number">{число_без_последней_цифры}</span></b></code>.
           </li>
           <li>Выделите последнюю цифру, избавьтесь от последней цифры в исходном числе. Повторите это ещё
             <code><span class="number"><b>3</b></span></code> раза.
@@ -404,7 +404,7 @@ to be</code></pre>
           <li>Выделите последнюю цифру исходного числа при помощи операции <span class="grey"><b>%</b></span>.</li>
           <li>Умножьте перевёрнутое число на <code><span class="number"><b>10</b></span></code>.</li>
           <li>Прибавьте к нему выделенную цифру.</li>
-          <li>Избавьтесь от последней цифры исходного числа при помощи опеарции <code><b>//</b></code>.</li>
+          <li>Избавьтесь от последней цифры исходного числа при помощи операции <code><b>//</b></code>.</li>
           <li>Повторите шаги
             <code><span class="number"><b>1</b></span></code>-<code><span class="number"><b>4</b></span></code> ещё три
             раза.
