--- a/Урок 07-09. Введение в Python/Python - PT07.html
+++ b/Урок 07-09. Введение в Python/Python - PT07.html
@@ -4,7 +4,9 @@
   <title>Python - PT07</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #CCCCCC 0%, #BFBFBF 52%, #C9C9C9 100%);
@@ -182,7 +184,10 @@ unless you do.</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 7.3</h2>
-        <p>Выведите в консоль одной строкой <code class="python"><b>"H-E-L-L-O W*O*R*L*D"</b></code>, используя два <code class="python"><b>print</b></code>, <code class="python"><b>sep</b></code> и <code class="python"><b>end</b></code>.</p>
+        <p>Выведите в консоль одной строкой <code class="python"><b>"H-E-L-L-O W*O*R*L*D"</b></code>, используя два
+          <code class="python"><b>print</b></code>, <code class="python"><b>sep</b></code> и <code
+            class="python"><b>end</b></code>.
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>H-E-L-L-O W*O*R*L*D</code></pre>
@@ -190,7 +195,9 @@ unless you do.</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 7.4</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли имя</span> и <span class="hl-text">возраст</span>, затем <span class="hl-text">выводит введённые данные с указанием, к чему они принадлежат.</span></p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли имя</span> и <span
+            class="hl-text">возраст</span>, затем <span class="hl-text">выводит введённые данные с указанием, к чему они
+            принадлежат.</span></p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите имя: <span class="input">Teston</span>
@@ -203,9 +210,9 @@ unless you do.</code></pre>
     </div>
   </div>
   <script>
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       const codeBlocks = document.querySelectorAll('code.python');
-      codeBlocks.forEach(function(codeBlock, index) {
+      codeBlocks.forEach(function (codeBlock, index) {
         let innerHTML = codeBlock.innerHTML;
         console.log(index, innerHTML);
         // STRING
