--- a/Урок 07-09. Введение в Python/Python - PT08.html
+++ b/Урок 07-09. Введение в Python/Python - PT08.html
@@ -4,7 +4,9 @@
   <title>Python - PT08</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #CCCCCC 0%, #BFBFBF 52%, #C9C9C9 100%);
@@ -122,7 +124,9 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 8.1</h2>
-        <p>Сотрудник <span class="hl-text">Teston Lebra</span> работает на трёх работах и получает три разные зарплаты. Напишите программу, которая <span class="hl-text">запрашивает с консоли три строки зарплаты</span> и <span class="hl-text">выводит в консоль итоговую сумму этих зарплат</span>.</p>
+        <p>Сотрудник <span class="hl-text">Teston Lebra</span> работает на трёх работах и получает три разные зарплаты.
+          Напишите программу, которая <span class="hl-text">запрашивает с консоли три строки зарплаты</span> и <span
+            class="hl-text">выводит в консоль итоговую сумму этих зарплат</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите первую зарплату: <span class="input">250</span>
@@ -134,7 +138,10 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 8.2</h2>
-        <p><span class="hl-text">Teston Lebra</span> взял кредит в банке. Напишите программу, которая <span class="hl-text">запрашивает с консоли сумму кредита</span> и <span class="hl-text">процент</span>, затем <span class="hl-text">выводит в консоль сумму, которую нужно вернуть в банк</span>.</p>
+        <p><span class="hl-text">Teston Lebra</span> взял кредит в банке. Напишите программу, которая <span
+            class="hl-text">запрашивает с консоли сумму кредита</span> и <span class="hl-text">процент</span>, затем
+          <span class="hl-text">выводит в консоль сумму, которую нужно вернуть в банк</span>.
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите сумму кредита: <span class="input">15000</span>
@@ -145,7 +152,10 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 8.3</h2>
-        <p>На работе <span class="hl-text">Teston Lebra</span> дали задание - определить среднюю температуру за неделю. Напишите программу, которая <span class="hl-text">запрашивает с консоли температуру за каждый день</span> и <span class="hl-text">выводит в консоль среднее значение</span>.</p>
+        <p>На работе <span class="hl-text">Teston Lebra</span> дали задание - определить среднюю температуру за неделю.
+          Напишите программу, которая <span class="hl-text">запрашивает с консоли температуру за каждый день</span> и
+          <span class="hl-text">выводит в консоль среднее значение</span>.
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите температуру в Понедельник: <span class="input">18</span>
@@ -161,9 +171,17 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 8.4</h2>
-        <p><span class="hl-text">Teston Lebra</span> решил покрасить стены, но не знает, сколько банок краски нужно взять. Напишите программу, которая <span class="hl-text">запрашивает с консоли площадь покраски в квадратных метрах</span>, <span class="hl-text">сколько грамм требуется для покраски одного квадратного метра</span> и <span class="hl-text">сколько грамм в банке</span>, затем <span class="hl-text">выводит в консоль количество банок краски</span>.</p>
+        <p><span class="hl-text">Teston Lebra</span> решил покрасить стены, но не знает, сколько банок краски нужно
+          взять. Напишите программу, которая <span class="hl-text">запрашивает с консоли площадь покраски в квадратных
+            метрах</span>, <span class="hl-text">сколько грамм требуется для покраски одного квадратного метра</span> и
+          <span class="hl-text">сколько грамм в банке</span>, затем <span class="hl-text">выводит в консоль количество
+            банок краски</span>.
+        </p>
         <h3>Подсказка</h3>
-        <p>Чтобы получилось целое число, нужно граммы в банке с краской поделить на <code><span class="number"><b>2</b></span></code> и добавить к итоговому количеству граммов, затем нацело поделить на граммы в банке.</p>
+        <p>Чтобы получилось целое число, нужно граммы в банке с краской поделить на
+          <code><span class="number"><b>2</b></span></code> и добавить к итоговому количеству граммов, затем нацело
+          поделить на граммы в банке.
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите площадь покраски (квадратные метры): <span class="input">98</span>
@@ -175,7 +193,8 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 8.5</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число</span> и <span class="hl-text">выводит в консоль самую правую цифру этого числа</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число</span> и <span
+            class="hl-text">выводит в консоль самую правую цифру этого числа</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите число: <span class="input">5869</span>
@@ -185,7 +204,9 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 8.6</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли двузначное число</span> и <span class="hl-text">выводит в консоль каждую цифру поотдельности</span>. <span class="hl-text"><b>(2 способа)</b></span></p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли двузначное число</span> и <span
+            class="hl-text">выводит в консоль каждую цифру по отдельности</span>. <span class="hl-text"><b>(2
+              способа)</b></span></p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите двузначное число: <span class="input">25</span>
@@ -196,7 +217,8 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 8.7</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли трёхзначное число</span> и <span class="hl-text">выводит в консоль каждую цифру поотдельности</span>.
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли трёхзначное число</span> и <span
+            class="hl-text">выводит в консоль каждую цифру по отдельности</span>.
           <span class="hl-text"><b>(2 способа)</b></span>
         </p>
         <h3>Консоль:</h3>
