--- a/Урок 10-14. Операторы ветвлений/Python - PT10.html
+++ b/Урок 10-14. Операторы ветвлений/Python - PT10.html
@@ -4,7 +4,9 @@
   <title>Python - PT10</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #CCCCCC 0%, #BFBFBF 52%, #C9C9C9 100%);
@@ -174,8 +176,11 @@
         <p>Что произойдёт в коде ниже при запуске программы?</p>
         <h3>Код:</h3>
         <div class="console">
-          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
-              <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
+          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15"
+              height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
+              <path fill="currentColor" fill-rule="evenodd"
+                d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z"
+                clip-rule="evenodd"></path>
             </svg>
             Copy code</button>
           <pre><code class="python">num_1 = 5
@@ -188,8 +193,11 @@ print(num_1 > num_2)</code></pre>
         <p>Что произойдёт в коде ниже при запуске программы?</p>
         <h3>Код:</h3>
         <div class="console">
-          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
-              <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
+          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15"
+              height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
+              <path fill="currentColor" fill-rule="evenodd"
+                d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z"
+                clip-rule="evenodd"></path>
             </svg>
             Copy code</button>
           <pre><code class="python">num_1 = 5
@@ -202,8 +210,11 @@ print(num_1 > num_2)</code></pre>
         <p>Что произойдёт в коде ниже при запуске программы?</p>
         <h3>Код:</h3>
         <div class="console">
-          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
-              <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
+          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15"
+              height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
+              <path fill="currentColor" fill-rule="evenodd"
+                d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z"
+                clip-rule="evenodd"></path>
             </svg>
             Copy code</button>
           <pre><code class="python">num_1 = 5
@@ -216,8 +227,11 @@ print(num_1 >= num_2)</code></pre>
         <p>Что произойдёт в коде ниже при запуске программы?</p>
         <h3>Код:</h3>
         <div class="console">
-          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
-              <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
+          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15"
+              height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
+              <path fill="currentColor" fill-rule="evenodd"
+                d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z"
+                clip-rule="evenodd"></path>
             </svg>
             Copy code</button>
           <pre><code class="python">num_1 = 5
@@ -227,7 +241,9 @@ print(num_1 % num_2 == 0)</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 10.5</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число</span> и <span class="hl-text">в зависимости от числа выводит в консоль положительное</span>, <span class="hl-text">отрицательное</span> или <span class="hl-text">равно нулю</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число</span> и <span
+            class="hl-text">в зависимости от числа выводит в консоль положительное</span>, <span
+            class="hl-text">отрицательное</span> или <span class="hl-text">равно нулю</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите число: <span class="input">5</span>
@@ -237,7 +253,10 @@ print(num_1 % num_2 == 0)</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 10.6</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли два числа</span>, затем <span class="hl-text">выводит в консоль выбор</span> - найти сумму чисел или произведение чисел. Затем <span class="hl-text">запрашивает с консоли выбор</span>. В зависимости от выбора программа <span class="hl-text">выводит в консоль сумму</span> или <span class="hl-text">произведение</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли два числа</span>, затем <span
+            class="hl-text">выводит в консоль выбор</span> - найти сумму чисел или произведение чисел. Затем <span
+            class="hl-text">запрашивает с консоли выбор</span>. В зависимости от выбора программа <span
+            class="hl-text">выводит в консоль сумму</span> или <span class="hl-text">произведение</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите первое число: <span class="input">5</span>
@@ -251,7 +270,9 @@ print(num_1 % num_2 == 0)</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 10.7</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число</span> и <span class="hl-text">выводит в консоль</span>, что оно <span class="hl-text">чётное</span> или <span class="hl-text">нечётное</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число</span> и <span
+            class="hl-text">выводит в консоль</span>, что оно <span class="hl-text">чётное</span> или <span
+            class="hl-text">нечётное</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите число: <span class="input">4</span>
@@ -261,7 +282,10 @@ print(num_1 % num_2 == 0)</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 10.8</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли два числа</span>, затем <span class="hl-text">выводит в консоль максимальное из двух чисел</span>. Если числа одинаковые, то программа <span class="hl-text">об этом сообщает</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли два числа</span>, затем <span
+            class="hl-text">выводит в консоль максимальное из двух чисел</span>. Если числа одинаковые, то программа
+          <span class="hl-text">об этом сообщает</span>.
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите первое число: <span class="input">3</span>
@@ -272,7 +296,14 @@ print(num_1 % num_2 == 0)</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 10.9</h2>
-        <p>В магазине <span class="hl-text">"Всё Не Дорого"</span> при покупке на сумму <code><span class="number"><b>1000</b></span></code> клиенту выдают скидку на <code><span class="number"><b>5%</b></span></code>. Если же клиент ещё является постоянным, то дополнительно выдаётся скидка на <code><span class="number"><b>10%</b></span></code>. Напишите программу, которая <span class="hl-text">запрашивает с консоли <code><span class="number"><b>3</b></span></code> стоимости</span>, затем <span class="hl-text">запрашивает с консоли подтверждение того, что клиент является постоянным</span>, и <span class="hl-text">выводит в консоль итоговую стоимость с учётом скидки</span>.</p>
+        <p>В магазине <span class="hl-text">"Всё Не Дорого"</span> при покупке на сумму
+          <code><span class="number"><b>1000</b></span></code> клиенту выдают скидку на
+          <code><span class="number"><b>5%</b></span></code>. Если же клиент ещё является постоянным, то дополнительно
+          выдаётся скидка на <code><span class="number"><b>10%</b></span></code>. Напишите программу, которая <span
+            class="hl-text">запрашивает с консоли <code><span class="number"><b>3</b></span></code> стоимости</span>,
+          затем <span class="hl-text">запрашивает с консоли подтверждение того, что клиент является постоянным</span>, и
+          <span class="hl-text">выводит в консоль итоговую стоимость с учётом скидки</span>.
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите цену первого товара: <span class="input">200</span>
@@ -285,7 +316,10 @@ print(num_1 % num_2 == 0)</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 10.10</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли итоговую стоимость</span> и <span class="hl-text">сумму, которую дал покупатель</span>, затем <span class="hl-text">выводит в консоль сдачу</span>, если покупатель дал больше, чем требуется, или <span class="hl-text">сумму доплаты</span>, если покупатель дал меньше.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли итоговую стоимость</span> и <span
+            class="hl-text">сумму, которую дал покупатель</span>, затем <span class="hl-text">выводит в консоль
+            сдачу</span>, если покупатель дал больше, чем требуется, или <span class="hl-text">сумму доплаты</span>,
+          если покупатель дал меньше.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите итоговую стоимость: <span class="input">1250</span>
@@ -296,7 +330,14 @@ print(num_1 % num_2 == 0)</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 10.11</h2>
-        <p>В магазине <span class="hl-text">"Всё Не Дорого"</span> стала доступна доставка по адресу. Сама доставка стоит <code><span class="number"><b>10%</b></span></code> от стоимости суммы корзины. Если же сумма корзины больше <code><span class="number"><b>700</b></span></code>, то доставка бесплатная. Если же сумма корзины больше <code><span class="number"><b>1000</b></span></code>, то клиенту дополнительно выдают скидку на <code><span class="number"><b>5%</b></span></code>. Напишите программу, которая <span class="hl-text">запрашивает с консоли сумму корзины</span> и <span class="hl-text">выводит в консоль сколько клиент должен оплатить за корзину</span> и <span class="hl-text">за доставку</span>. </p>
+        <p>В магазине <span class="hl-text">"Всё Не Дорого"</span> стала доступна доставка по адресу. Сама доставка
+          стоит <code><span class="number"><b>10%</b></span></code> от стоимости суммы корзины. Если же сумма корзины
+          больше <code><span class="number"><b>700</b></span></code>, то доставка бесплатная. Если же сумма корзины
+          больше <code><span class="number"><b>1000</b></span></code>, то клиенту дополнительно выдают скидку на
+          <code><span class="number"><b>5%</b></span></code>. Напишите программу, которая <span
+            class="hl-text">запрашивает с консоли сумму корзины</span> и <span class="hl-text">выводит в консоль сколько
+            клиент должен оплатить за корзину</span> и <span class="hl-text">за доставку</span>.
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите сумму корзины: <span class="input">1200</span>
@@ -324,13 +365,13 @@ print(num_1 % num_2 == 0)</code></pre>
       button.innerHTML = `
         <svg width="15" height="15" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="icon-sm"><path fill-rule="evenodd" clip-rule="evenodd" d="M18.0633 5.67375C18.5196 5.98487 18.6374 6.607 18.3262 7.06331L10.8262 18.0633C10.6585 18.3093 10.3898 18.4678 10.0934 18.4956C9.79688 18.5234 9.50345 18.4176 9.29289 18.2071L4.79289 13.7071C4.40237 13.3166 4.40237 12.6834 4.79289 12.2929C5.18342 11.9023 5.81658 11.9023 6.20711 12.2929L9.85368 15.9394L16.6738 5.93664C16.9849 5.48033 17.607 5.36263 18.0633 5.67375Z" fill="currentColor"></path></svg>Copied!
     `;
-      setTimeout(function() {
+      setTimeout(function () {
         button.innerHTML = originalHTML;
       }, 2000);
     }
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       const codeBlocks = document.querySelectorAll('code.python');
-      codeBlocks.forEach(function(codeBlock, index) {
+      codeBlocks.forEach(function (codeBlock, index) {
         let innerHTML = codeBlock.innerHTML;
         console.log(index, innerHTML);
         // STRING
