--- a/Урок 15-20. Циклы/Python - HW16.html
+++ b/Урок 15-20. Циклы/Python - HW16.html
@@ -4,7 +4,9 @@
   <title>Python - HW16</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #333333 0%, #404040 57%, #363636 100%);
@@ -213,11 +215,16 @@
     <div class="right-block">
       <div class="right-rect">
         <h2><strong>Примечание</strong></h2>
-        <p>Оформляйте ввод и вывод данных в соответствии с примерами заданий. Используйте только то, что было пройденно до этого урока включительно. Задания выполняйте при помощи цикла <code class="python"><b>while</b></code>. Не используйте в условии оператор <code class="python"><b>in</b></code>.</p>
+        <p>Оформляйте ввод и вывод данных в соответствии с примерами заданий. Используйте только то, что было пройдено
+          до этого урока включительно. Задания выполняйте при помощи цикла <code class="python"><b>while</b></code>. Не
+          используйте в условии оператор <code class="python"><b>in</b></code>.</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 16.1</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли два числа</span> - <span class="hl-text">начало</span> и <span class="hl-text">конец диапазона</span>. Программа должна <span class="hl-text">вывести в консоль в порядке убывания все числа, которые нацело делятся на <code><span class="number"><b>11</b></span></code> в указанном диапазоне</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли два числа</span> - <span
+            class="hl-text">начало</span> и <span class="hl-text">конец диапазона</span>. Программа должна <span
+            class="hl-text">вывести в консоль в порядке убывания все числа, которые нацело делятся на
+            <code><span class="number"><b>11</b></span></code> в указанном диапазоне</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите начало диапазона: <span class="input">1</span>
@@ -230,7 +237,16 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 16.2</h2>
-        <p><span class="hl-text">Teston Lebra</span> написал программу, которая получает данные от пользователя и преобразует эти данные в хэш-код (число). Если в этих данных содержатся ошибки, то цифра <code><span class="number"><b>5</b></span></code> будет встречается в числе больше трёх раз. Напишите программу, которая <span class="hl-text">запрашивает с консоли число</span> и <span class="hl-text">проверяет количество цифр</span> <code><span class="number"><b>5</b></span></code>. Если количество пятёрок больше трёх, то программа должна <span class="hl-text">вывести в консоль</span> <code><span class="string"><b>"В данных пользователя присутствуют ошибки."</b></span></code>. В противном случае программа должна <span class="hl-text">вывести в консоль</span> <code><span class="string"><b>"Данные пользователя в порядке."</b></span></code>.</p>
+        <p><span class="hl-text">Teston Lebra</span> написал программу, которая получает данные от пользователя и
+          преобразует эти данные в хэш-код (число). Если в этих данных содержатся ошибки, то цифра
+          <code><span class="number"><b>5</b></span></code> будет встречается в числе больше трёх раз. Напишите
+          программу, которая <span class="hl-text">запрашивает с консоли число</span> и <span class="hl-text">проверяет
+            количество цифр</span> <code><span class="number"><b>5</b></span></code>. Если количество пятёрок больше
+          трёх, то программа должна <span class="hl-text">вывести в консоль</span>
+          <code><span class="string"><b>"В данных пользователя присутствуют ошибки."</b></span></code>. В противном
+          случае программа должна <span class="hl-text">вывести в консоль</span>
+          <code><span class="string"><b>"Данные пользователя в порядке."</b></span></code>.
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите хэш-код (число): <span class="input">283073481295386363459721836860</span>
@@ -240,7 +256,9 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 16.3</h2>
-        <p>Напишите программу, которая <span class="hl-text">позволяет выбрать пользователю вид такси</span>, <span class="hl-text">запрашивает с консоли расстояние</span> и <span class="hl-text">выводит в консоль стоимость поездки</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">позволяет выбрать пользователю вид такси</span>, <span
+            class="hl-text">запрашивает с консоли расстояние</span> и <span class="hl-text">выводит в консоль стоимость
+            поездки</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>1. Эконом класс (0.3 за 1 км.)
@@ -263,7 +281,9 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 16.4</h2>
-        <p>Напишите программу, которая <span class="hl-text">позволяет пользователю добавить товар в корзину (только стоимость)</span> и <span class="hl-text">оплатить эту корзину (итоговую стоимость)</span>. Считайте, что изначально у пользователя <span class="number"><b>1000</b></span> денег.</p>
+        <p>Напишите программу, которая <span class="hl-text">позволяет пользователю добавить товар в корзину (только
+            стоимость)</span> и <span class="hl-text">оплатить эту корзину (итоговую стоимость)</span>. Считайте, что
+          изначально у пользователя <span class="number"><b>1000</b></span> денег.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Ваш текущий баланс: 1000
@@ -297,7 +317,14 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 16.5</h2>
-        <p>В магазине <span class="hl-text">"Всё Не Дорого"</span> вышло обновление, в котором теперь не нужно вводить итоговую стоимость товара, а достаточно указать стоимость товара и его количество, а программа сама сделает подсчёты итоговой стоимости. Напишите программу, которая <span class="hl-text">запрашивает с консоли сперва стоимость</span>, а затем <span class="hl-text">количество</span>. Так до тех пор, пока <span class="hl-text">пользователь просто не нажмёт клавишу</span> <span class="string"><b>"Enter"</b></span> <span class="hl-text">во время ввода стоимости</span> или <span class="hl-text">количества</span>. Затем программа <span class="hl-text">выводит в консоль итоговую стоимость</span>.</p>
+        <p>В магазине <span class="hl-text">"Всё Не Дорого"</span> вышло обновление, в котором теперь не нужно вводить
+          итоговую стоимость товара, а достаточно указать стоимость товара и его количество, а программа сама сделает
+          подсчёты итоговой стоимости. Напишите программу, которая <span class="hl-text">запрашивает с консоли сперва
+            стоимость</span>, а затем <span class="hl-text">количество</span>. Так до тех пор, пока <span
+            class="hl-text">пользователь просто не нажмёт клавишу</span> <span class="string"><b>"Enter"</b></span>
+          <span class="hl-text">во время ввода стоимости</span> или <span class="hl-text">количества</span>. Затем
+          программа <span class="hl-text">выводит в консоль итоговую стоимость</span>.
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите стоимость товара: <span class="input">100</span>
@@ -313,7 +340,13 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 16.6</h2>
-        <p>В магазине <span class="hl-text">"Всё Не Дорого"</span> стартовала акция на доставку. Если сумму заказа перевернуть и получится та же самая сумма (число палиндром), то выдаётся купон в <span class="number"><b>10%</b></span> на следующую покупку. Напишите программу, которая <span class="hl-text">запрашивает с консоли итоговую сумму</span> и <span class="hl-text">выводит в консоль</span> <span class="string"><b>"Выдаётся <span class="number"><b>10%</b></span> купон."</b></span>, если сумма является палиндромом. В противном случае <span class="hl-text">выводится</span> <span class="string"><b>"Купон не выдаётся."</b></span>.
+        <p>В магазине <span class="hl-text">"Всё Не Дорого"</span> стартовала акция на доставку. Если сумму заказа
+          перевернуть и получится та же самая сумма (число палиндром), то выдаётся купон в <span
+            class="number"><b>10%</b></span> на следующую покупку. Напишите программу, которая <span
+            class="hl-text">запрашивает с консоли итоговую сумму</span> и <span class="hl-text">выводит в консоль</span>
+          <span class="string"><b>"Выдаётся <span class="number"><b>10%</b></span> купон."</b></span>, если сумма
+          является палиндромом. В противном случае <span class="hl-text">выводится</span> <span class="string"><b>"Купон
+              не выдаётся."</b></span>.
         <h3>Подсказка:</h3>
         <p>Вам нужно сделать копию числа и перевернуть его. Затем сравнивать исходное число и перевёрнутое.</p>
         <h3>Консоль:</h3>
@@ -325,13 +358,20 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 16.7</h2>
-        <p><span class="hl-text">Teston Lebra</span> попросили доказать на практике, что шансы выпадения чисел <span class="number"><b>1</b></span>, <span class="number"><b>2</b></span>, <span class="number"><b>3</b></span>, <span class="number"><b>4</b></span>, <span class="number"><b>5</b></span> и <span class="number"><b>6</b></span> на игральной кости около <span class="number"><b>16.6%</b></span>. Напишите программу, которая <span class="hl-text">доказывает это при помощи симуляции</span>.
+        <p><span class="hl-text">Teston Lebra</span> попросили доказать на практике, что шансы выпадения чисел <span
+            class="number"><b>1</b></span>, <span class="number"><b>2</b></span>, <span class="number"><b>3</b></span>,
+          <span class="number"><b>4</b></span>, <span class="number"><b>5</b></span> и <span
+            class="number"><b>6</b></span> на игральной кости около <span class="number"><b>16.6%</b></span>. Напишите
+          программу, которая <span class="hl-text">доказывает это при помощи симуляции</span>.
         </p>
         <h3>Подсказки:</h3>
         <ol>
           <li>Используйте следующий код, чтобы генерировать числа от 1 до 6 включительно:<div class="console">
-              <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
-                  <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
+              <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15"
+                  height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
+                  <path fill="currentColor" fill-rule="evenodd"
+                    d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z"
+                    clip-rule="evenodd"></path>
                 </svg>
                 Copy code</button>
               <pre><code class="python">from random import randint  # Подключение модуля random и импорт функции randint
@@ -340,20 +380,40 @@ number = randint(1, 6)  # Генерация случайного четырёх
             </div>
           </li>
           <li>Программа <span class="hl-text">не требует ввода</span> пользователя.</li>
-          <li>Для решения задания вам понадобится <span class="hl-text">шесть переменных</span>, в которых будут хранится количество выпадений чисел <span class="number"><b>1</b></span>, <span class="number"><b>2</b></span>, <span class="number"><b>3</b></span>, <span class="number"><b>4</b></span>, <span class="number"><b>5</b></span>, <span class="number"><b>6</b></span>, <span class="hl-text">одна переменная</span> для того, чтобы подсчитывать шаги цикла, <span class="hl-text">одна переменная</span> для хранения случайного числа и <span class="hl-text">одна переменная</span> для того, чтобы хранить количество бросков.</li>
-          <li>Генерируйте числа внутри цикла при помощи <code class="python"><b>randint(1, 6)</b></code>. Достаточно <span class="number"><b>1000000</b></span> бросков.</li>
-          <li class="no-padding-bottom">Чтобы найти процент выпадения чисел, нужно <span class="hl-text">количество выпадений числа</span> поделить на <span class="hl-text">количество бросков</span> и умножить на <span class="number"><b>100</b></span>. Например, если бросков <span class="number"><b>1000000</b></span> и количество выпадания числа <span class="number"><b>1</b></span> равно <span class="number"><b>166173</b></span>, то получаем:
-            <br><span class="number"><b>166173 <span class="grey">/</span> 1000000 <span class="grey">*</span> 100 <span class="grey">=</span> 16.6173%</b></span>
+          <li>Для решения задания вам понадобится <span class="hl-text">шесть переменных</span>, в которых будут
+            хранится количество выпадений чисел <span class="number"><b>1</b></span>, <span
+              class="number"><b>2</b></span>, <span class="number"><b>3</b></span>, <span
+              class="number"><b>4</b></span>, <span class="number"><b>5</b></span>, <span
+              class="number"><b>6</b></span>, <span class="hl-text">одна переменная</span> для того, чтобы подсчитывать
+            шаги цикла, <span class="hl-text">одна переменная</span> для хранения случайного числа и <span
+              class="hl-text">одна переменная</span> для того, чтобы хранить количество бросков.</li>
+          <li>Генерируйте числа внутри цикла при помощи <code class="python"><b>randint(1, 6)</b></code>. Достаточно
+            <span class="number"><b>1000000</b></span> бросков.
+          </li>
+          <li class="no-padding-bottom">Чтобы найти процент выпадения чисел, нужно <span class="hl-text">количество
+              выпадений числа</span> поделить на <span class="hl-text">количество бросков</span> и умножить на <span
+              class="number"><b>100</b></span>. Например, если бросков <span class="number"><b>1000000</b></span> и
+            количество выпадания числа <span class="number"><b>1</b></span> равно <span
+              class="number"><b>166173</b></span>, то получаем:
+            <br><span class="number"><b>166173 <span class="grey">/</span> 1000000 <span class="grey">*</span> 100 <span
+                  class="grey">=</span> 16.6173%</b></span>
           </li>
         </ol>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 16.8</h2>
-        <p><span class="hl-text">Teston Lebra</span> написал программу, которая запрашивает с консоли номер карты и выводит в консоль <span class="string"><b>"Номер карты состоит только из чётных цифр."</b></span> или <span class="string"><b>"В номере карты присутствуют нечётные цифры."</b></span> в зависимости от номера. Однако программа работает некорректно. <span class="hl-text">Исправьте программу так, чтобы она работала верно, и рядом напишите комментарии о том, почему изменённый вариант должен работать верно</span>.</p>
+        <p><span class="hl-text">Teston Lebra</span> написал программу, которая запрашивает с консоли номер карты и
+          выводит в консоль <span class="string"><b>"Номер карты состоит только из чётных цифр."</b></span> или <span
+            class="string"><b>"В номере карты присутствуют нечётные цифры."</b></span> в зависимости от номера. Однако
+          программа работает некорректно. <span class="hl-text">Исправьте программу так, чтобы она работала верно, и
+            рядом напишите комментарии о том, почему изменённый вариант должен работать верно</span>.</p>
         <h3>Код:</h3>
         <div class="console">
-          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
-              <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
+          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15"
+              height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
+              <path fill="currentColor" fill-rule="evenodd"
+                d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z"
+                clip-rule="evenodd"></path>
             </svg>
             Copy code</button>
           <pre><code class="python">card_num = int(input("Введите номер карты: "))
@@ -399,13 +459,13 @@ else:
       button.innerHTML = `
         <svg width="15" height="15" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="icon-sm"><path fill-rule="evenodd" clip-rule="evenodd" d="M18.0633 5.67375C18.5196 5.98487 18.6374 6.607 18.3262 7.06331L10.8262 18.0633C10.6585 18.3093 10.3898 18.4678 10.0934 18.4956C9.79688 18.5234 9.50345 18.4176 9.29289 18.2071L4.79289 13.7071C4.40237 13.3166 4.40237 12.6834 4.79289 12.2929C5.18342 11.9023 5.81658 11.9023 6.20711 12.2929L9.85368 15.9394L16.6738 5.93664C16.9849 5.48033 17.607 5.36263 18.0633 5.67375Z" fill="currentColor"></path></svg>Copied!
     `;
-      setTimeout(function() {
+      setTimeout(function () {
         button.innerHTML = originalHTML;
       }, 2000);
     }
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       const codeBlocks = document.querySelectorAll('code.python');
-      codeBlocks.forEach(function(codeBlock, index) {
+      codeBlocks.forEach(function (codeBlock, index) {
         let innerHTML = codeBlock.innerHTML;
         console.log(index, innerHTML);
         // STRING
