--- a/Урок 15-20. Циклы/Python - HW20.html
+++ b/Урок 15-20. Циклы/Python - HW20.html
@@ -246,7 +246,7 @@
         </p>
         <h3>Меню клиента:</h3>
         <div class="console">
-          <pre><code>Пользователь: &ltлогин&gt    Роль: Клиент
+          <pre><code>Пользователь: {логин}    Роль: Клиент
 1. Мой кабинет
 2. Аренда
 3. Выйти из аккаунта
@@ -296,7 +296,7 @@
             аренды</span>:
         </p>
         <div class="console">
-          <pre><code>Ваш текущий баланс: &ltчисло&gt
+          <pre><code>Ваш текущий баланс: {число}
 ==========================================================
 1. Вернуться
 2. Завершить программу
@@ -320,7 +320,7 @@
 
         <h3>Меню администратора:</h3>
         <div class="console">
-          <pre><code>Пользователь: &ltлогин&gt     Роль: Администратор
+          <pre><code>Пользователь: {логин}     Роль: Администратор
 1. Показать данные клиента
 2. Вернуть товар по идентификатору клиента
 3. Магазин
@@ -361,8 +361,8 @@
           <br>— <span class="hl-text">Выводит в консоль меню изменения товара</span>:
         </p>
         <div class="console">
-          <pre><code>СТАРЫЕ ДАННЫЕ: Эконом класс - доступно: 0, цена аренды на 1 день: 13
-НОВЫЕ ДАННЫЕ: Эконом класс - доступно: 0, цена аренды на 1 день: 13
+          <pre><code>СТАРЫЕ ДАННЫЕ: {название_товара} - доступно: {количество}, цена аренды на 1 день: {цена}
+НОВЫЕ ДАННЫЕ: {название_товара} - доступно: {количество}, цена аренды на 1 день: {цена}
 ====================================================
 1. Изменить название
 2. Изменить количество
