--- a/Урок 15-20. Циклы/Python - PT17.html
+++ b/Урок 15-20. Циклы/Python - PT17.html
@@ -4,7 +4,9 @@
   <title>Python - PT17</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #CCCCCC 0%, #BFBFBF 52%, #C9C9C9 100%);
@@ -174,8 +176,11 @@
         <p>Какие последовательности вернут следующие функции в коде ниже?</p>
         <h3>Код:</h3>
         <div class="console">
-          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
-              <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
+          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15"
+              height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
+              <path fill="currentColor" fill-rule="evenodd"
+                d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z"
+                clip-rule="evenodd"></path>
             </svg>
             Copy code</button>
           <pre><code class="python">range(5)
@@ -190,7 +195,11 @@ range(9, 5, -3)</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 17.2</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли два числа</span> - <span class="hl-text">начало</span> и <span class="hl-text">конец диапазона</span>. Программа должна <span class="hl-text">вывести в консоль все числа диапазона в обратном порядке с шагом</span> <code><span class="number"><b>2</b></span></code>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли два числа</span> - <span
+            class="hl-text">начало</span> и <span class="hl-text">конец диапазона</span>. Программа должна <span
+            class="hl-text">вывести в консоль все числа диапазона в обратном порядке с шагом</span>
+          <code><span class="number"><b>2</b></span></code>.
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите начало диапазона: <span class="input">2</span>
@@ -206,7 +215,10 @@ range(9, 5, -3)</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 17.3</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли два числа</span> - <span class="hl-text">начало</span> и <span class="hl-text">конец диапазона</span>. Программа должна <span class="hl-text">вывести в консоль все числа диапазона в порядке убывания</span>, если начало больше конца. В противном случае - <span class="hl-text">в порядке возрастания</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли два числа</span> - <span
+            class="hl-text">начало</span> и <span class="hl-text">конец диапазона</span>. Программа должна <span
+            class="hl-text">вывести в консоль все числа диапазона в порядке убывания</span>, если начало больше конца. В
+          противном случае - <span class="hl-text">в порядке возрастания</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите начало диапазона: <span class="input">7</span>
@@ -220,7 +232,9 @@ range(9, 5, -3)</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 17.4</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли два числа</span> - <span class="hl-text">начало</span> и <span class="hl-text">конец диапазона</span>. Программа должна <span class="hl-text">вывести в консоль все нечётные числа диапазона в порядке убывания</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли два числа</span> - <span
+            class="hl-text">начало</span> и <span class="hl-text">конец диапазона</span>. Программа должна <span
+            class="hl-text">вывести в консоль все нечётные числа диапазона в порядке убывания</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите начало диапазона: <span class="input">1</span>
@@ -234,7 +248,8 @@ range(9, 5, -3)</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 17.5</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число</span> и <span class="hl-text">выводит в консоль таблицу умножения этого числа</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число</span> и <span
+            class="hl-text">выводит в консоль таблицу умножения этого числа</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите число: <span class="input">5</span>
@@ -254,7 +269,12 @@ range(9, 5, -3)</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 17.6</h2>
-        <p>В магазине <span class="hl-text">"Всё Не Дорого"</span> требуется программа, которая будет вести учёт товаров. Напишите программу, которая <span class="hl-text">запрашивает с консоли количество поставок</span>, затем <span class="hl-text">столько же раз запрашивает с консоли номер товара</span> и <span class="hl-text">количество</span>. Программа должна <span class="hl-text">прибавлять введённое количество к товару с указанным номером</span>, а в конце <span class="hl-text">выводить в консоль товары</span> и <span class="hl-text">их количество</span>.</p>
+        <p>В магазине <span class="hl-text">"Всё Не Дорого"</span> требуется программа, которая будет вести учёт
+          товаров. Напишите программу, которая <span class="hl-text">запрашивает с консоли количество поставок</span>,
+          затем <span class="hl-text">столько же раз запрашивает с консоли номер товара</span> и <span
+            class="hl-text">количество</span>. Программа должна <span class="hl-text">прибавлять введённое количество к
+            товару с указанным номером</span>, а в конце <span class="hl-text">выводить в консоль товары</span> и <span
+            class="hl-text">их количество</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите количество поставок: <span class="input">2</span>
@@ -283,7 +303,12 @@ range(9, 5, -3)</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 17.7</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли количество студентов</span> и <span class="hl-text">столько же раз запрашивает оценку</span>. В конце программа <span class="hl-text">выводит в консоль сколько студентов допускается до экзамена</span>. Если оценка <code><span class="number"><b>7</b></span></code> или больше, то <span class="hl-text">студент считается допущенным</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли количество студентов</span> и <span
+            class="hl-text">столько же раз запрашивает оценку</span>. В конце программа <span class="hl-text">выводит в
+            консоль сколько студентов допускается до экзамена</span>. Если оценка
+          <code><span class="number"><b>7</b></span></code> или больше, то <span class="hl-text">студент считается
+            допущенным</span>.
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите количество студентов: <span class="input">5</span>
@@ -315,13 +340,13 @@ range(9, 5, -3)</code></pre>
       button.innerHTML = `
         <svg width="15" height="15" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="icon-sm"><path fill-rule="evenodd" clip-rule="evenodd" d="M18.0633 5.67375C18.5196 5.98487 18.6374 6.607 18.3262 7.06331L10.8262 18.0633C10.6585 18.3093 10.3898 18.4678 10.0934 18.4956C9.79688 18.5234 9.50345 18.4176 9.29289 18.2071L4.79289 13.7071C4.40237 13.3166 4.40237 12.6834 4.79289 12.2929C5.18342 11.9023 5.81658 11.9023 6.20711 12.2929L9.85368 15.9394L16.6738 5.93664C16.9849 5.48033 17.607 5.36263 18.0633 5.67375Z" fill="currentColor"></path></svg>Copied!
     `;
-      setTimeout(function() {
+      setTimeout(function () {
         button.innerHTML = originalHTML;
       }, 2000);
     }
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       const codeBlocks = document.querySelectorAll('code.python');
-      codeBlocks.forEach(function(codeBlock, index) {
+      codeBlocks.forEach(function (codeBlock, index) {
         let innerHTML = codeBlock.innerHTML;
         console.log(index, innerHTML);
         // STRING
