--- a/Урок 21-27. Строки. Списки/Python - HW24.html
+++ b/Урок 21-27. Строки. Списки/Python - HW24.html
@@ -4,7 +4,9 @@
   <title>Python - HW24</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #333333 0%, #404040 57%, #363636 100%);
@@ -213,11 +215,17 @@
     <div class="right-block">
       <div class="right-rect">
         <h2><strong>Примечание</strong></h2>
-        <p>Оформляйте ввод и вывод данных в соответствии с примерами заданий. Используйте только то, что было пройденно до этого урока включительно. Не используйте в условии оператор <code class="python"><b>in</b></code> и конструкцию вида <code class="python"><b>('A' <= char <= 'Z') or ('a' <= char <= 'z')</b></code>. Не используйте готовые методы, только если в заданиях не говорится об использовании тех или иных методов. Не используйте срезы.</p>
+        <p>Оформляйте ввод и вывод данных в соответствии с примерами заданий. Используйте только то, что было пройдено
+          до этого урока включительно. Не используйте в условии оператор <code class="python"><b>in</b></code> и
+          конструкцию вида <code class="python"><b>('A' <= char <= 'Z') or ('a' <= char <= 'z')</b></code>. Не
+          используйте готовые методы, только если в заданиях не говорится об использовании тех или иных методов. Не
+          используйте срезы.</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 24.1</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span>, затем <span class="hl-text">переводит все заглавные английские буквы в строчные</span> и <span class="hl-text">выводит результат в консоль</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span>, затем <span
+            class="hl-text">переводит все заглавные английские буквы в строчные</span> и <span class="hl-text">выводит
+            результат в консоль</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">SoMe TeXT</span>
@@ -227,7 +235,9 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 24.2</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span class="hl-text">выводит в консоль количество слов в строке</span>. Словом является набор символов <span class="hl-text">разделённые пробелами</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span
+            class="hl-text">выводит в консоль количество слов в строке</span>. Словом является набор символов <span
+            class="hl-text">разделённые пробелами</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">abc abc     abc</span>
@@ -237,7 +247,11 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 24.3</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span class="hl-text">выводит в консоль</span> <span class="string"><b>"В строке содержится символ из набора ACEIJOUWaceijouw5869#."</b></span> или <span class="string"><b>"В строке отсутствует символ из набора ACEIJOUWaceijouw5869#."</b></span> <span class="hl-text">в зависимости от строки</span>. Задачу нужно решить <span class="hl-text">вложенными циклами</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span
+            class="hl-text">выводит в консоль</span> <span class="string"><b>"В строке содержится символ из набора
+              ACEIJOUWaceijouw5869#."</b></span> или <span class="string"><b>"В строке отсутствует символ из набора
+              ACEIJOUWaceijouw5869#."</b></span> <span class="hl-text">в зависимости от строки</span>. Задачу нужно
+          решить <span class="hl-text">вложенными циклами</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">12345abc</span>
@@ -247,7 +261,12 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 24.4</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span class="hl-text">выводит в консоль</span> <span class="string"><b>"Строка является палиндромом."</b></span> или <span class="string"><b>"Строка не является палиндромом."</b></span> <span class="hl-text">в зависимости от строки</span>. Палиндром — слово или текст, которое читается одинаково <span class="hl-text">слева направо</span> и <span class="hl-text">справа налево</span>. Считайте, что строка будет на русском языке.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span
+            class="hl-text">выводит в консоль</span> <span class="string"><b>"Строка является палиндромом."</b></span>
+          или <span class="string"><b>"Строка не является палиндромом."</b></span> <span class="hl-text">в зависимости
+            от строки</span>. Палиндром — слово или текст, которое читается одинаково <span class="hl-text">слева
+            направо</span> и <span class="hl-text">справа налево</span>. Считайте, что строка будет на русском языке.
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">А роза упала на лапу Азора</span>
@@ -257,7 +276,11 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 24.5</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span class="hl-text">выводит в консоль</span> <span class="string"><b>"В строке присутствуют только символы из набора ACEIJOUWaceijouw5869#."</b></span> или <span class="string"><b>"В строке присутствуют не только символы из набора ACEIJOUWaceijouw5869#."</b></span> <span class="hl-text">в зависимости от строки</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span
+            class="hl-text">выводит в консоль</span> <span class="string"><b>"В строке присутствуют только символы из
+              набора ACEIJOUWaceijouw5869#."</b></span> или <span class="string"><b>"В строке присутствуют не только
+              символы из набора ACEIJOUWaceijouw5869#."</b></span> <span class="hl-text">в зависимости от строки</span>.
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">abc5de</span>
@@ -267,11 +290,17 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 24.6</h2>
-        <p><span class="hl-text">Teston Lebra</span> написал программу, которая ищет последовательность символов в строке и заменяет их на другую последовательность. Однако она работает некорректно. <span class="hl-text">Исправьте программу так, чтобы она работала верно, и рядом напишите комментарии о том, почему изменённый вариант должен работать верно</span>.</p>
+        <p><span class="hl-text">Teston Lebra</span> написал программу, которая ищет последовательность символов в
+          строке и заменяет их на другую последовательность. Однако она работает некорректно. <span
+            class="hl-text">Исправьте программу так, чтобы она работала верно, и рядом напишите комментарии о том,
+            почему изменённый вариант должен работать верно</span>.</p>
         <h3>Код:</h3>
         <div class="console">
-          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
-              <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
+          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15"
+              height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
+              <path fill="currentColor" fill-rule="evenodd"
+                d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z"
+                clip-rule="evenodd"></path>
             </svg>
             Copy code</button>
           <pre><code class="python">text = input("Введите строку: ")
@@ -308,13 +337,18 @@ print(f"Изменённая строка: {result}")</code></pre>
 Изменённая строка: abcxxabc xx</code></pre>
         </div>
       </div>
-            <div class="right-rect">
+      <div class="right-rect">
         <h2>Домашнее Задание 24.7 (Необязательное)</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку текста на английском</span>, <span class="hl-text">преобразует каждое предложение в тексте так, чтобы оно начиналось с большой буквы</span>, и <span class="hl-text">выводит результат в консоль</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку текста на английском</span>,
+          <span class="hl-text">преобразует каждое предложение в тексте так, чтобы оно начиналось с большой
+            буквы</span>, и <span class="hl-text">выводит результат в консоль</span>.
+        </p>
         <h3>Подсказки:</h3>
         <ol>
-          <li>Создайте булевую переменную, по которой можно будет определить, нужно ли менять текущую букву на заглавную.</li>
-          <li class="no-padding-bottom">Используйте алгоритм, который был рассмотрен на уроке, где заглавные буквы нужно было заменить на строчные.</li>
+          <li>Создайте булеву переменную, по которой можно будет определить, нужно ли менять текущую букву на
+            заглавную.</li>
+          <li class="no-padding-bottom">Используйте алгоритм, который был рассмотрен на уроке, где заглавные буквы нужно
+            было заменить на строчные.</li>
         </ol>
         <h3>Консоль:</h3>
         <div class="console">
@@ -342,13 +376,13 @@ print(f"Изменённая строка: {result}")</code></pre>
       button.innerHTML = `
         <svg width="15" height="15" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="icon-sm"><path fill-rule="evenodd" clip-rule="evenodd" d="M18.0633 5.67375C18.5196 5.98487 18.6374 6.607 18.3262 7.06331L10.8262 18.0633C10.6585 18.3093 10.3898 18.4678 10.0934 18.4956C9.79688 18.5234 9.50345 18.4176 9.29289 18.2071L4.79289 13.7071C4.40237 13.3166 4.40237 12.6834 4.79289 12.2929C5.18342 11.9023 5.81658 11.9023 6.20711 12.2929L9.85368 15.9394L16.6738 5.93664C16.9849 5.48033 17.607 5.36263 18.0633 5.67375Z" fill="currentColor"></path></svg>Copied!
     `;
-      setTimeout(function() {
+      setTimeout(function () {
         button.innerHTML = originalHTML;
       }, 2000);
     }
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       const codeBlocks = document.querySelectorAll('code.python');
-      codeBlocks.forEach(function(codeBlock, index) {
+      codeBlocks.forEach(function (codeBlock, index) {
         let innerHTML = codeBlock.innerHTML;
         console.log(index, innerHTML);
         // STRING
