--- a/Урок 21-27. Строки. Списки/Python - PT21.html
+++ b/Урок 21-27. Строки. Списки/Python - PT21.html
@@ -4,7 +4,9 @@
   <title>Python - PT21</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #CCCCCC 0%, #BFBFBF 52%, #C9C9C9 100%);
@@ -121,7 +123,9 @@
     <div class="right-block">
       <div class="right-rect">
         <h2>Практическое Задание 21.1</h2>
-        <p>Напишите программу, которая <span class="hl-text">выводит в консоль слово</span> <span class="string"><b>"Python"</b></span>, а затем <span class="hl-text">выводит в консоль символы на чётных индексах</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">выводит в консоль слово</span> <span
+            class="string"><b>"Python"</b></span>, а затем <span class="hl-text">выводит в консоль символы на чётных
+            индексах</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Python
@@ -132,7 +136,8 @@ o</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 21.2</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span>, а затем <span class="hl-text">выводит в консоль символы на чётных индексах в одну строку</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span>, а затем <span
+            class="hl-text">выводит в консоль символы на чётных индексах в одну строку</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">Test String</span>
@@ -142,7 +147,9 @@ T s  t i g</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 21.3</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span>, <span class="hl-text">формирует обратную строку</span> и <span class="hl-text">выводит в консоль результат</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span>, <span
+            class="hl-text">формирует обратную строку</span> и <span class="hl-text">выводит в консоль результат</span>.
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">Test String</span>
@@ -152,7 +159,10 @@ gnirtS tesT</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 21.4</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли слово маленькими буквами</span> и <span class="hl-text">выводит в консоль</span> <span class="string"><b>"Это палиндром."</b></span> или <span class="string"><b>"Это не палиндром."</b></span> в зависимости от слова.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли слово маленькими буквами</span> и
+          <span class="hl-text">выводит в консоль</span> <span class="string"><b>"Это палиндром."</b></span> или <span
+            class="string"><b>"Это не палиндром."</b></span> в зависимости от слова.
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите слово: <span class="input">потоп</span>
@@ -162,7 +172,8 @@ gnirtS tesT</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 21.5</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span class="hl-text">выводит в консоль последние <span class="number"><b>3</b></span> символа строки</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span
+            class="hl-text">выводит в консоль последние <span class="number"><b>3</b></span> символа строки</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">abcdef</span>
@@ -172,7 +183,9 @@ gnirtS tesT</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 21.6</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span class="hl-text">выводит в консоль каждый символ</span> и <span class="hl-text">следующий за ним символ в строке</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span
+            class="hl-text">выводит в консоль каждый символ</span> и <span class="hl-text">следующий за ним символ в
+            строке</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">Test String</span>
@@ -182,7 +195,10 @@ gnirtS tesT</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 21.7</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли фамилию</span>, <span class="hl-text">имя</span> и <span class="hl-text">отчество</span>, <span class="hl-text">формирует из первых букв новую строку</span>, а затем <span class="hl-text">выводит в консоль полученную строку</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли фамилию</span>, <span
+            class="hl-text">имя</span> и <span class="hl-text">отчество</span>, <span class="hl-text">формирует из
+            первых букв новую строку</span>, а затем <span class="hl-text">выводит в консоль полученную строку</span>.
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите фамилию: <span class="input">Lebra</span>
@@ -194,7 +210,9 @@ gnirtS tesT</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 21.8</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span class="hl-text">символ</span>, затем <span class="hl-text">выводит в консоль количество вхождения символа в строку</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span
+            class="hl-text">символ</span>, затем <span class="hl-text">выводит в консоль количество вхождения символа в
+            строку</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">Test String</span>
@@ -205,7 +223,8 @@ gnirtS tesT</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 21.9</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли в одной строке дату</span> и <span class="hl-text">выводит в консоль данные на разных строчках</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли в одной строке дату</span> и <span
+            class="hl-text">выводит в консоль данные на разных строчках</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите дату (dd/mm/yyyy): <span class="input">10/12/2023</span>
@@ -217,7 +236,9 @@ gnirtS tesT</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 21.10</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли <span class="number"><b>16</b></span>-значный номер карты</span> и <span class="hl-text">выводит в консоль этот же номер, но с замаскированными символами, кроме последних четырёх</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли <span
+              class="number"><b>16</b></span>-значный номер карты</span> и <span class="hl-text">выводит в консоль этот
+            же номер, но с замаскированными символами, кроме последних четырёх</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите номер карты: <span class="input">5869586958695869</span>
