--- a/Урок 21-27. Строки. Списки/Python - PT25.html
+++ b/Урок 21-27. Строки. Списки/Python - PT25.html
@@ -4,7 +4,9 @@
   <title>Python - PT25</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #CCCCCC 0%, #BFBFBF 52%, #C9C9C9 100%);
@@ -121,7 +123,9 @@
     <div class="right-block">
       <div class="right-rect">
         <h2>Практическое Задание 25.1</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли температуры в одной строке</span> и <span class="hl-text">выводит в консоль среднее значение</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли температуры в одной строке</span> и
+          <span class="hl-text">выводит в консоль среднее значение</span>.
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите температуры через пробел: <span class="input">25 26 30 29 30</span>
@@ -131,7 +135,9 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 25.2</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли оценки до тех пор, пока не введут пустую строку</span>. Затем программа <span class="hl-text">формирует список</span> и <span class="hl-text">выводит в консоль минимальную оценку</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли оценки до тех пор, пока не введут
+            пустую строку</span>. Затем программа <span class="hl-text">формирует список</span> и <span
+            class="hl-text">выводит в консоль минимальную оценку</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите оценку (1): <span class="input">12</span>
@@ -155,16 +161,23 @@
         </div>
         <p>
 
-        <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">запрашивает с консоли числа до тех пор, пока не введут пустую строку</span>. Все числа должны <span class="hl-text">помещаться в список</span>. После этого программа <span class="hl-text">возвращается в главное меню</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">запрашивает с консоли числа
+            до тех пор, пока не введут пустую строку</span>. Все числа должны <span class="hl-text">помещаться в
+            список</span>. После этого программа <span class="hl-text">возвращается в главное меню</span>.</p>
 
-        <p>При выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">выводит в консоль данные из списка по следующему шаблону</span>:
+        <p>При выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">выводит в консоль данные из
+            списка по следующему шаблону</span>:
         <div class="console">
-          <pre><code><индекс> <слово_доход/расход> <число_как_есть></code></pre>
+          <pre><code>{индекс} {слово_доход/расход} {число_как_есть}</code></pre>
         </div>
-        Доходом считается <span class="hl-text">положительное число</span>, а расходом - <span class="hl-text">отрицательное</span>.
+        Доходом считается <span class="hl-text">положительное число</span>, а расходом - <span
+          class="hl-text">отрицательное</span>.
         </p>
 
-        <p>При выборе <span class="hl-text">пункта 3</span> программа <span class="hl-text">запрашивает с консоли начальный индекс</span> и <span class="hl-text">конечный индекс</span>. Затем программа <span class="hl-text">выводит в консоль данные из списка в границах индексов включительно по тому же шаблону, что и выше</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 3</span> программа <span class="hl-text">запрашивает с консоли
+            начальный индекс</span> и <span class="hl-text">конечный индекс</span>. Затем программа <span
+            class="hl-text">выводит в консоль данные из списка в границах индексов включительно по тому же шаблону, что
+            и выше</span>.</p>
       </div>
     </div>
   </div>
