--- a/Урок 21-27. Строки. Списки/Python - PT27.html
+++ b/Урок 21-27. Строки. Списки/Python - PT27.html
@@ -4,7 +4,9 @@
   <title>Python - PT27</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #CCCCCC 0%, #BFBFBF 52%, #C9C9C9 100%);
@@ -182,11 +184,15 @@
     <div class="right-block">
       <div class="right-rect">
         <h2>Практическое Задание 27.1</h2>
-        <p>Выведите <span class="string"><b>"Kid"</b></span>, <span class="string"><b>"Bob"</b></span> и <span class="string"><b>"Python"</b></span> в консоль из списка ниже.</p>
+        <p>Выведите <span class="string"><b>"Kid"</b></span>, <span class="string"><b>"Bob"</b></span> и <span
+            class="string"><b>"Python"</b></span> в консоль из списка ниже.</p>
         <h3>Код:</h3>
         <div class="console">
-          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
-              <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
+          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15"
+              height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
+              <path fill="currentColor" fill-rule="evenodd"
+                d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z"
+                clip-rule="evenodd"></path>
             </svg>
             Copy code</button>
           <pre><code class="python">my_list = ["Teston", "Jim", [True, False], ["Kate", ["Arthur", "Bob", ["Python", "C#"]]], "Kid"]</code></pre>
@@ -197,8 +203,11 @@
         <p>Выведите <span class="string"><b>"sunny"</b></span> в консоль из списка ниже.</p>
         <h3>Код:</h3>
         <div class="console">
-          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
-              <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
+          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15"
+              height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
+              <path fill="currentColor" fill-rule="evenodd"
+                d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z"
+                clip-rule="evenodd"></path>
             </svg>
             Copy code</button>
           <pre><code class="python">my_list = ["weather", [[12, 39.4, "windy"], [13, 39.2, "sunny"]]]</code></pre>
@@ -206,11 +215,15 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 27.3</h2>
-        <p>Используя методы <code class="python"><b>append()</b></code> или <code class="python"><b>insert()</b></code>, из первого списка получите все последующие списки.</p>
+        <p>Используя методы <code class="python"><b>append()</b></code> или <code class="python"><b>insert()</b></code>,
+          из первого списка получите все последующие списки.</p>
         <h3>Код:</h3>
         <div class="console">
-          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
-              <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
+          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15"
+              height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
+              <path fill="currentColor" fill-rule="evenodd"
+                d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z"
+                clip-rule="evenodd"></path>
             </svg>
             Copy code</button>
           <pre><code class="python">my_list_1 = ["Teston", "Jim", ["Kate", "Arthur", [True, False], "Bob"], "Kid", "Max"]
@@ -225,11 +238,18 @@ my_list_7 = ["Teston", "Jim", ["Kate", "Arthur", ["Astrid", "Hiccup"], [True, Fa
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 27.4</h2>
-        <p>Напишите программу, которая <span class="hl-text">находит максимальные элементы в каждом подсписке</span>, <span class="hl-text">формирует из них список</span> и <span class="hl-text">выводит в консоль</span>. Также программа должна <span class="hl-text">выводить в консоль максимальное число среди максимальных</span>. Исходный список указан ниже.</p>
+        <p>Напишите программу, которая <span class="hl-text">находит максимальные элементы в каждом подсписке</span>,
+          <span class="hl-text">формирует из них список</span> и <span class="hl-text">выводит в консоль</span>. Также
+          программа должна <span class="hl-text">выводить в консоль максимальное число среди максимальных</span>.
+          Исходный список указан ниже.
+        </p>
         <h3>Код:</h3>
         <div class="console">
-          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
-              <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
+          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15"
+              height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
+              <path fill="currentColor" fill-rule="evenodd"
+                d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z"
+                clip-rule="evenodd"></path>
             </svg>
             Copy code</button>
           <pre><code class="python">my_list = [[25, 27, 28], [19, 17, 102], [36, 106, 105], [100, 99, 98, 103], [31, 32, 33]]</code></pre>
@@ -257,11 +277,21 @@ my_list_7 = ["Teston", "Jim", ["Kate", "Arthur", ["Astrid", "Hiccup"], [True, Fa
         </div>
         </p>
 
-        <p>При выборе <span class="hl-text">пунктов 1</span>-<span class="hl-text">3</span> программа <span class="hl-text">запрашивает с консоли имя/фамилию/среднюю оценку</span> и <span class="hl-text">указанные данные</span>. Если находит, то <span class="hl-text">все данные помещаются в новый список</span>, а потом <span class="hl-text">выводится в консоль</span>. Если данные не найдены, то <span class="hl-text">выводится в консоль</span> <span class="string"><b>"Не найдено."</b></span>.</p>
+        <p>При выборе <span class="hl-text">пунктов 1</span>-<span class="hl-text">3</span> программа <span
+            class="hl-text">запрашивает с консоли имя/фамилию/среднюю оценку</span> и <span class="hl-text">указанные
+            данные</span>. Если находит, то <span class="hl-text">все данные помещаются в новый список</span>, а потом
+          <span class="hl-text">выводится в консоль</span>. Если данные не найдены, то <span class="hl-text">выводится в
+            консоль</span> <span class="string"><b>"Не найдено."</b></span>.
+        </p>
 
-        <p>В главном меню при выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">запрашивает с консоли имя</span>, <span class="hl-text">фамилию</span> и <span class="hl-text">среднюю оценку на каждой строке</span>. Затем <span class="hl-text">формирует из этих данных список</span> и <span class="hl-text">помещает в общий список</span>.</p>
-        <p>При выборе <span class="hl-text">пункта 3</span> программа <span class="hl-text">запрашивает с консоли индекс</span> и <span class="hl-text">удаляет по индексу</span>.</p>
-        <p>При выборе <span class="hl-text">пункта 4</span> программа <span class="hl-text">выводит в консоль все данные</span>.</p>
+        <p>В главном меню при выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">запрашивает с
+            консоли имя</span>, <span class="hl-text">фамилию</span> и <span class="hl-text">среднюю оценку на каждой
+            строке</span>. Затем <span class="hl-text">формирует из этих данных список</span> и <span
+            class="hl-text">помещает в общий список</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 3</span> программа <span class="hl-text">запрашивает с консоли
+            индекс</span> и <span class="hl-text">удаляет по индексу</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 4</span> программа <span class="hl-text">выводит в консоль все
+            данные</span>.</p>
       </div>
     </div>
   </div>
@@ -282,13 +312,13 @@ my_list_7 = ["Teston", "Jim", ["Kate", "Arthur", ["Astrid", "Hiccup"], [True, Fa
       button.innerHTML = `
         <svg width="15" height="15" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="icon-sm"><path fill-rule="evenodd" clip-rule="evenodd" d="M18.0633 5.67375C18.5196 5.98487 18.6374 6.607 18.3262 7.06331L10.8262 18.0633C10.6585 18.3093 10.3898 18.4678 10.0934 18.4956C9.79688 18.5234 9.50345 18.4176 9.29289 18.2071L4.79289 13.7071C4.40237 13.3166 4.40237 12.6834 4.79289 12.2929C5.18342 11.9023 5.81658 11.9023 6.20711 12.2929L9.85368 15.9394L16.6738 5.93664C16.9849 5.48033 17.607 5.36263 18.0633 5.67375Z" fill="currentColor"></path></svg>Copied!
     `;
-      setTimeout(function() {
+      setTimeout(function () {
         button.innerHTML = originalHTML;
       }, 2000);
     }
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       const codeBlocks = document.querySelectorAll('code.python');
-      codeBlocks.forEach(function(codeBlock, index) {
+      codeBlocks.forEach(function (codeBlock, index) {
         let innerHTML = codeBlock.innerHTML;
         console.log(index, innerHTML);
         // STRING
