--- a/Урок 28-34. Функции. Модули/Python - HW28.html
+++ b/Урок 28-34. Функции. Модули/Python - HW28.html
@@ -4,7 +4,9 @@
   <title>Python - HW28</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #333333 0%, #404040 57%, #363636 100%);
@@ -182,18 +184,25 @@
     <div class="right-block">
       <div class="right-rect">
         <h2><strong>Примечание</strong></h2>
-        <p>Оформляйте ввод и вывод данных в соответствии с примерами заданий. Используйте только то, что было пройденно до этого урока включительно. Не используйте в условии оператор <code class="python"><b>in</b></code>. Не используйте готовые методы, только если в заданиях не говорится об использовании тех или иных методов. Методы <code class="python"><b>format()</b></code>, <code class="python"><b>split()</b></code> и <code class="python"><b>append()</b></code> использовать можно. Не используйте срезы.</p>
+        <p>Оформляйте ввод и вывод данных в соответствии с примерами заданий. Используйте только то, что было пройдено
+          до этого урока включительно. Не используйте в условии оператор <code class="python"><b>in</b></code>. Не
+          используйте готовые методы, только если в заданиях не говорится об использовании тех или иных методов. Методы
+          <code class="python"><b>format()</b></code>, <code class="python"><b>split()</b></code> и <code
+            class="python"><b>append()</b></code> использовать можно. Не используйте срезы.
+        </p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 28.1</h2>
-        <p>У кинотеатра <span class="hl-text">"Посидим, посмотрим"</span> открылась возможность забронировать место на сессию. Реализуйте следующее меню:
+        <p>У кинотеатра <span class="hl-text">"Посидим, посмотрим"</span> открылась возможность забронировать место на
+          сессию. Реализуйте следующее меню:
         <div class="console">
           <pre><code>1. Показать места на сессию
 2. Забронировать место
 3. Завершить программу</code></pre>
         </div>
         </p>
-        <p>При выборе <span class="hl-text">пункта 1</span> программа должна <span class="hl-text">показать места следующим образом</span>:</p>
+        <p>При выборе <span class="hl-text">пункта 1</span> программа должна <span class="hl-text">показать места
+            следующим образом</span>:</p>
         <div class="console">
           <pre><code>  1 2 3 4 5 6 7 8 9
 1 _ _ _ _ _ _ _ _ _
@@ -206,13 +215,22 @@ X - занятые места
 _ - свободные места</code></pre>
         </div>
         <p>Затем программа <span class="hl-text">снова показывает главное меню<span>.</p>
-        <p>При выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">запрашивает с консоли ряд</span> и <span class="hl-text">колонку</span>. Если место свободно, то программа должна <span class="hl-text">вывести в консоль</span> <span class="string"><b>"Место успешно забронировано."</b></span>. В противном случае должна <span class="hl-text">вывести</span> <span class="string"><b>"Место уже занято. Пожалуйста, выберите другое место."</b></span> и после этого программа будет <span class="hl-text">предлагать забронировать место до тех пор, пока не выберется свободное место</span> или же <span class="hl-text">не будут введены пустые строки</span>. После этого программа <span class="hl-text">возвращается в главное меню</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">запрашивает с консоли
+            ряд</span> и <span class="hl-text">колонку</span>. Если место свободно, то программа должна <span
+            class="hl-text">вывести в консоль</span> <span class="string"><b>"Место успешно забронировано."</b></span>.
+          В противном случае должна <span class="hl-text">вывести</span> <span class="string"><b>"Место уже занято.
+              Пожалуйста, выберите другое место."</b></span> и после этого программа будет <span
+            class="hl-text">предлагать забронировать место до тех пор, пока не выберется свободное место</span> или же
+          <span class="hl-text">не будут введены пустые строки</span>. После этого программа <span
+            class="hl-text">возвращается в главное меню</span>.
+        </p>
         <p>После успешного бронирования <span class="hl-text">пункт 1 должен отобразить новые бронирования</span>.</p>
         <p>Используйте <span class="hl-text">вложенные списки</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 28.2</h2>
-        <p>Напишите функцию <span class="function"><b>print_BG</b></span>, которая <span class="hl-text">отображает в консоли форматированный текст, указанный ниже</span>.</p>
+        <p>Напишите функцию <span class="function"><b>print_BG</b></span>, которая <span class="hl-text">отображает в
+            консоли форматированный текст, указанный ниже</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>"Don't compare yourself with anyone in this world...
@@ -222,20 +240,31 @@ if you do so, you are insulting yourself."
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 28.3</h2>
-        <p>Напишите функцию <span class="function"><b>draw_rectangle</b></span>, которая <span class="hl-text">ничего не принимает</span> и <span class="hl-text">рисует в консоли незаполненный прямоугольник <span class="number"><b>3</b></span> на <span class="number"><b>5</b></span> из символов</span> <span class="string"><b>"*"</b></span>.</p>
+        <p>Напишите функцию <span class="function"><b>draw_rectangle</b></span>, которая <span class="hl-text">ничего не
+            принимает</span> и <span class="hl-text">рисует в консоли незаполненный прямоугольник <span
+              class="number"><b>3</b></span> на <span class="number"><b>5</b></span> из символов</span> <span
+            class="string"><b>"*"</b></span>.</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 28.4</h2>
-        <p>Напишите функцию <span class="function"><b>draw_quad</b></span>, которая <span class="hl-text">принимает символ</span>, <span class="hl-text">длину</span>, <span class="hl-text">ширину</span> и <span class="hl-text">рисует в консоли незаполненный прямоугольник из этого символа указанного размера</span>.</p>
+        <p>Напишите функцию <span class="function"><b>draw_quad</b></span>, которая <span class="hl-text">принимает
+            символ</span>, <span class="hl-text">длину</span>, <span class="hl-text">ширину</span> и <span
+            class="hl-text">рисует в консоли незаполненный прямоугольник из этого символа указанного размера</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 28.5</h2>
-        <p>Напишите функцию <span class="function"><b>generate_list</b></span>, которая <span class="hl-text">принимает размер списка</span>, <span class="hl-text">начало</span> и <span class="hl-text">конец диапазона чисел</span>, затем <span class="hl-text">формирует список по параметрам</span> и <span class="hl-text">возвращает результат</span>.</p>
+        <p>Напишите функцию <span class="function"><b>generate_list</b></span>, которая <span class="hl-text">принимает
+            размер списка</span>, <span class="hl-text">начало</span> и <span class="hl-text">конец диапазона
+            чисел</span>, затем <span class="hl-text">формирует список по параметрам</span> и <span
+            class="hl-text">возвращает результат</span>.</p>
         <h3>Подсказка:</h3>
         <p>Используйте следующий код для генерации числа:</p>
         <div class="console">
-          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
-              <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
+          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15"
+              height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
+              <path fill="currentColor" fill-rule="evenodd"
+                d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z"
+                clip-rule="evenodd"></path>
             </svg>
             Copy code</button>
           <pre><code class="python">from random import randint  # Подключение модуля random и импорт функции randint
@@ -245,24 +274,43 @@ number = randint(start, end)  # Использование функции для
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 28.6</h2>
-        <p>Напишите функцию <span class="function"><b>get_indexes</b></span>, которая <span class="hl-text">принимает список</span> и <span class="hl-text">элемент для поиска</span>, затем <span class="hl-text">ищет элементы в списке</span> и <span class="hl-text">добавляет в новый список найденные индексы</span>. После этого <span class="hl-text">возвращает полученный список с найденными индексами</span>.</p>
+        <p>Напишите функцию <span class="function"><b>get_indexes</b></span>, которая <span class="hl-text">принимает
+            список</span> и <span class="hl-text">элемент для поиска</span>, затем <span class="hl-text">ищет элементы в
+            списке</span> и <span class="hl-text">добавляет в новый список найденные индексы</span>. После этого <span
+            class="hl-text">возвращает полученный список с найденными индексами</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 28.7</h2>
-        <p>Напишите функцию <span class="function"><b>has_alpha_eng</b></span>, которая <span class="hl-text">принимает строку</span> и <span class="hl-text">возвращает</span> <code class="python"><b>True</b></code>, если в строке есть английские буквы, и <code class="python"><b>False</b></code> в противном случае.</p>
+        <p>Напишите функцию <span class="function"><b>has_alpha_eng</b></span>, которая <span class="hl-text">принимает
+            строку</span> и <span class="hl-text">возвращает</span> <code class="python"><b>True</b></code>, если в
+          строке есть английские буквы, и <code class="python"><b>False</b></code> в противном случае.</p>
 
-        <p>Затем напишите программу, которая <span class="hl-text">использует эту функцию</span>. Если функция возвращает <code class="python"><b>True</b></code>, то программа должна <span class="hl-text">выводить в консоль</span> <span class="string"><b>"В строке содержатся английские буквы."</b></span>. В противном случае программа должна выводить в консоль <span class="string"><b>"В строке отсутствуют английские буквы."</b></span>.</p>
+        <p>Затем напишите программу, которая <span class="hl-text">использует эту функцию</span>. Если функция
+          возвращает <code class="python"><b>True</b></code>, то программа должна <span class="hl-text">выводить в
+            консоль</span> <span class="string"><b>"В строке содержатся английские буквы."</b></span>. В противном
+          случае программа должна выводить в консоль <span class="string"><b>"В строке отсутствуют английские
+              буквы."</b></span>.</p>
 
         <h3>Подсказка:</h3>
-        <p>Решение Вы можете взять из <span class="hl-text">Домашнего Задания 24.3</span>. Только вместо вывода в консоль функция должна возвращать <code class="python"><b>True</b></code> или <code class="python"><b>False</b></code>, а набор проверяемых символов должен состоять из букв английского алфавита.</p>
+        <p>Решение Вы можете взять из <span class="hl-text">Домашнего Задания 24.3</span>. Только вместо вывода в
+          консоль функция должна возвращать <code class="python"><b>True</b></code> или <code
+            class="python"><b>False</b></code>, а набор проверяемых символов должен состоять из букв английского
+          алфавита.</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 28.8</h2>
-        <p><span class="hl-text">Teston Lebra</span> написал функции и программу. Составьте комментарии по коду - <span class="hl-text">что делает программа</span>, <span class="hl-text">как она работает</span>, <span class="hl-text">какие данные принимает</span>. Также опишите каждую функцию - <span class="hl-text">что она делает</span> и <span class="hl-text">как она работает</span>. Также добавьте в главное меню пункты <span class="string"><b>"Очистить корзину"</b></span> и <span class="string"><b>"Пополнить баланс"</b></span>.</p>
+        <p><span class="hl-text">Teston Lebra</span> написал функции и программу. Составьте комментарии по коду - <span
+            class="hl-text">что делает программа</span>, <span class="hl-text">как она работает</span>, <span
+            class="hl-text">какие данные принимает</span>. Также опишите каждую функцию - <span class="hl-text">что она
+            делает</span> и <span class="hl-text">как она работает</span>. Также добавьте в главное меню пункты <span
+            class="string"><b>"Очистить корзину"</b></span> и <span class="string"><b>"Пополнить баланс"</b></span>.</p>
         <h3>Код:</h3>
         <div class="console">
-          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
-              <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
+          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15"
+              height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
+              <path fill="currentColor" fill-rule="evenodd"
+                d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z"
+                clip-rule="evenodd"></path>
             </svg>
             Copy code</button>
           <pre><code class="python">def main_menu():
@@ -378,13 +426,13 @@ while True:
       button.innerHTML = `
         <svg width="15" height="15" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="icon-sm"><path fill-rule="evenodd" clip-rule="evenodd" d="M18.0633 5.67375C18.5196 5.98487 18.6374 6.607 18.3262 7.06331L10.8262 18.0633C10.6585 18.3093 10.3898 18.4678 10.0934 18.4956C9.79688 18.5234 9.50345 18.4176 9.29289 18.2071L4.79289 13.7071C4.40237 13.3166 4.40237 12.6834 4.79289 12.2929C5.18342 11.9023 5.81658 11.9023 6.20711 12.2929L9.85368 15.9394L16.6738 5.93664C16.9849 5.48033 17.607 5.36263 18.0633 5.67375Z" fill="currentColor"></path></svg>Copied!
     `;
-      setTimeout(function() {
+      setTimeout(function () {
         button.innerHTML = originalHTML;
       }, 2000);
     }
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       const codeBlocks = document.querySelectorAll('code.python');
-      codeBlocks.forEach(function(codeBlock, index) {
+      codeBlocks.forEach(function (codeBlock, index) {
         let innerHTML = codeBlock.innerHTML;
         console.log(index, innerHTML);
         // STRING
