--- a/Урок 28-34. Функции. Модули/Python - PT28.html
+++ b/Урок 28-34. Функции. Модули/Python - PT28.html
@@ -4,7 +4,9 @@
   <title>Python - PT28</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #CCCCCC 0%, #BFBFBF 52%, #C9C9C9 100%);
@@ -111,31 +113,48 @@
     <div class="right-block">
       <div class="right-rect">
         <h2>Практическое Задание 28.1</h2>
-        <p>Напишите функцию <span class="function"><b>draw_square</b></span>, которая на вход <span class="hl-text">принимает размер стороны</span>. Функция должна <span class="hl-text">рисовать в консоли квадрат из <span class="grey"><b>*</b></span> указанного размера</span>.</p>
+        <p>Напишите функцию <span class="function"><b>draw_square</b></span>, которая на вход <span
+            class="hl-text">принимает размер стороны</span>. Функция должна <span class="hl-text">рисовать в консоли
+            квадрат из <span class="grey"><b>*</b></span> указанного размера</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 28.2</h2>
-        <p>Напишите функцию <span class="function"><b>draw_quad</b></span>, которая на вход <span class="hl-text">принимает ширину</span> и <span class="hl-text">длину</span>. Функция должна <span class="hl-text">рисовать в консоли четырёхугольник из <span class="grey"><b>*</b></span> указанного размера</span>.</p>
+        <p>Напишите функцию <span class="function"><b>draw_quad</b></span>, которая на вход <span
+            class="hl-text">принимает ширину</span> и <span class="hl-text">длину</span>. Функция должна <span
+            class="hl-text">рисовать в консоли четырёхугольник из <span class="grey"><b>*</b></span> указанного
+            размера</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 28.3</h2>
-        <p>Напишите функцию <span class="function"><b>get_size</b></span>, которая на вход <span class="hl-text">принимает список</span> и <span class="hl-text">возвращает его длину</span>. Не использовать функцию <span class="built-in"><b>len</span><span class="grey">()</b></span>.</p>
+        <p>Напишите функцию <span class="function"><b>get_size</b></span>, которая на вход <span
+            class="hl-text">принимает список</span> и <span class="hl-text">возвращает его длину</span>. Не использовать
+          функцию <span class="built-in"><b>len</span><span class="grey">()</b></span>.</p>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 28.4</h2>
-        <p>Напишите функцию <span class="function"><b>get_list</b></span>, которая на вход <span class="hl-text">принимает начало</span> и <span class="hl-text">конец диапазона</span>, затем <span class="hl-text">возвращает список</span>.</p>
+        <p>Напишите функцию <span class="function"><b>get_list</b></span>, которая на вход <span
+            class="hl-text">принимает начало</span> и <span class="hl-text">конец диапазона</span>, затем <span
+            class="hl-text">возвращает список</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 28.5</h2>
-        <p>Напишите функцию <span class="function"><b>azn_to_rub</b></span>, которая на вход <span class="hl-text">принимает число</span>, <span class="hl-text">конвертирует манаты в рубли</span> и <span class="hl-text">возвращает результат</span>.</p>
+        <p>Напишите функцию <span class="function"><b>azn_to_rub</b></span>, которая на вход <span
+            class="hl-text">принимает число</span>, <span class="hl-text">конвертирует манаты в рубли</span> и <span
+            class="hl-text">возвращает результат</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 28.6</h2>
-        <p>Напишите функцию <span class="function"><b>count_symb</b></span>, которая на вход <span class="hl-text">принимает строку</span> и <span class="hl-text">символ</span>, <span class="hl-text">считает количество вхождений символа в строке</span> и <span class="hl-text">возвращает результат</span>.</p>
+        <p>Напишите функцию <span class="function"><b>count_symb</b></span>, которая на вход <span
+            class="hl-text">принимает строку</span> и <span class="hl-text">символ</span>, <span class="hl-text">считает
+            количество вхождений символа в строке</span> и <span class="hl-text">возвращает результат</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 28.7</h2>
-        <p>Напишите функцию <span class="function"><b>is_visible</b></span>, которая на вход <span class="hl-text">принимает расстояние в метрах</span> и <span class="hl-text">возвращает</span> <span class="keyword"><b>True</b></span>, если расстояние меньше <span class="number"><b>2</b></span>-х км, и <span class="keyword"><b>False</b></span> в противном случае.</p>
+        <p>Напишите функцию <span class="function"><b>is_visible</b></span>, которая на вход <span
+            class="hl-text">принимает расстояние в метрах</span> и <span class="hl-text">возвращает</span> <span
+            class="keyword"><b>True</b></span>, если расстояние меньше <span class="number"><b>2</b></span>-х км, и
+          <span class="keyword"><b>False</b></span> в противном случае.
+        </p>
       </div>
     </div>
   </div>
