--- a/Урок 28-34. Функции. Модули/Python - PT32.html
+++ b/Урок 28-34. Функции. Модули/Python - PT32.html
@@ -4,7 +4,9 @@
   <title>Python - PT32</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #CCCCCC 0%, #BFBFBF 52%, #C9C9C9 100%);
@@ -95,22 +97,27 @@
     <div class="right-block">
       <div class="right-rect">
         <h2>Практическое Задание 32.1</h2>
-        <p>Создайте рекурсивную функцию <span class="function"><b>factorial</b></span>, которая <span class="hl-text">вычисляет факториал</span>.</p>
+        <p>Создайте рекурсивную функцию <span class="function"><b>factorial</b></span>, которая <span
+            class="hl-text">вычисляет факториал</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 32.2</h2>
-        <p>Создайте рекурсивную функцию <span class="function"><b>get_max</b></span>, которая <span class="hl-text">находит максимальное значение из списка</span>.</p>
+        <p>Создайте рекурсивную функцию <span class="function"><b>get_max</b></span>, которая <span
+            class="hl-text">находит максимальное значение из списка</span>.</p>
 
         <h3>Подсказка:</h3>
         <p>Функция принимает список чисел и количество чисел.</p>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 32.3</h2>
-        <p>Создайте рекурсивную функцию <span class="function"><b>power</b></span>, которая <span class="hl-text">вычисляет число в степени</span>.</p>
+        <p>Создайте рекурсивную функцию <span class="function"><b>power</b></span>, которая <span
+            class="hl-text">вычисляет число в степени</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 32.4</h2>
-        <p>На словах попробуйте создать рекурсивную функцию, которая будет <span class="hl-text">обходить</span> <a href="https://ru.wikipedia.org/wiki/Двоичное_дерево">бинарное дерево</a>. Пример бинарного дерева <a href="https://habrastorage.org/files/826/c95/0ae/826c950ae33346b28fbc5d88505b6abb.png">здесь</a>.</p>
+        <p>На словах попробуйте создать рекурсивную функцию, которая будет <span class="hl-text">обходить</span> <a
+            href="https://ru.wikipedia.org/wiki/Двоичное_дерево">бинарное дерево</a>. Пример бинарного дерева <a
+            href="https://habrastorage.org/files/826/c95/0ae/826c950ae33346b28fbc5d88505b6abb.png">здесь</a>.</p>
       </div>
     </div>
   </div>
