--- a/Урок 05. Алгоритмы/Python - HW05.html
+++ b/Урок 05. Алгоритмы/Python - HW05.html
@@ -4,7 +4,9 @@
   <title>Python - HW05</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #333333 0%, #404040 57%, #333333 100%);
@@ -96,11 +98,15 @@
     <div class="right-block">
       <div class="right-rect">
         <h2><strong>Примечание</strong></h2>
-        <p>Используйте сайт <a href="https://programforyou.ru/block-diagram-redactor">https://programforyou.ru/block-diagram-redactor</a> для создания блок-схем.
+        <p>Используйте сайт <a
+            href="https://programforyou.ru/block-diagram-redactor">https://programforyou.ru/block-diagram-redactor</a>
+          для создания блок-схем.
           Словесный алгоритм записывайте при помощи блока <span class="hl-text">"Текст / комментарий"</span>.</p>
         <img src="https://i.imgur.com/UZktLG6.png" alt="Text/Comments" height="150px">
-        <p>После того, как выполните все задания, нажмите <span class="hl-text">"Сохранить схему (json)"</span>. Сохранённый файл заархивируйте и отправьте полученный архив в качестве домашнего задания.
-          <span class="hl-text">Линейные алгоритмы не принимаются!</span></p>
+        <p>После того, как выполните все задания, нажмите <span class="hl-text">"Сохранить схему (json)"</span>.
+          Сохранённый файл заархивируйте и отправьте полученный архив в качестве домашнего задания.
+          <span class="hl-text">Линейные алгоритмы не принимаются!</span>
+        </p>
         <img src="https://i.imgur.com/9KIIhnl.png" alt="Save as json" height="150px">
         <h3>Пример блок-схемы и словесного алгоритма:</h3>
         <img src="https://i.imgur.com/BXcNO4m.png" alt="Example" width="900px">
@@ -112,19 +118,31 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 5.2</h2>
-        <p>Каждый день в ресторане посетителей просят поставить балл <span class="hl-text">от 1 до 5 включительно</span>, где 1 - очень плохо, а 5 - очень хорошо. В конце рабочей смены подсчитывают средний балл. Если средний балл <span class="hl-text">от 4.7 и до 4.9 не включительно</span>, то работникам выдают премию. Если средний балл <span class="hl-text">от 4.9 и выше</span>, то работникам выдают двойную премию. Если средний балл <span class="hl-text">ниже 4.0</span>, то работников штрафуют. Напишите в словесной форме и составьте блок-схему алгоритма подсчёта среднего балла и выдачи премии или штрафа.</p>
+        <p>Каждый день в ресторане посетителей просят поставить балл <span class="hl-text">от 1 до 5
+            включительно</span>, где 1 - очень плохо, а 5 - очень хорошо. В конце рабочей смены подсчитывают средний
+          балл. Если средний балл <span class="hl-text">от 4.7 и до 4.9 не включительно</span>, то работникам выдают
+          премию. Если средний балл <span class="hl-text">от 4.9 и выше</span>, то работникам выдают двойную премию.
+          Если средний балл <span class="hl-text">ниже 4.0</span>, то работников штрафуют. Напишите в словесной форме и
+          составьте блок-схему алгоритма подсчёта среднего балла и выдачи премии или штрафа.</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 5.3</h2>
-        <p>На фотосессию пришли 7 спортсменов. Фотограф решил сделать общую фотографию, где спортсмены стоят по <span class="hl-text">возрастанию роста</span>. Напишите в словесной форме и составьте блок-схему алгоритма выставления спортсменов по возрастанию роста.</p>
+        <p>На фотосессию пришли 7 спортсменов. Фотограф решил сделать общую фотографию, где спортсмены стоят по <span
+            class="hl-text">возрастанию роста</span>. Напишите в словесной форме и составьте блок-схему алгоритма
+          выставления спортсменов по возрастанию роста.</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 5.4</h2>
-        <p>Преподавателю дали задание подсчитать среднюю оценку студентов по одному предмету. Если средняя оценка <span class="hl-text">ниже 7 баллов</span>, то студенту нужно поставить метку <span class="hl-text">"Недопущен"</span>. В противном случае нужно поставить метку <span class="hl-text">"Допущен"</span>. Напишите в словесной форме и составьте блок-схему алгоритма подсчёта средней оценки и допуска.</p>
+        <p>Преподавателю дали задание подсчитать среднюю оценку студентов по одному предмету. Если средняя оценка <span
+            class="hl-text">ниже 7 баллов</span>, то студенту нужно поставить метку <span class="hl-text">"Не
+            допущен"</span>. В противном случае нужно поставить метку <span class="hl-text">"Допущен"</span>. Напишите в
+          словесной форме и составьте блок-схему алгоритма подсчёта
+          средней оценки и допуска.</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 5.5</h2>
-        <p>После хорошего ужина осталась куча грязной посуды. Напишите в словесной форме и составьте блок-схему алгоритма мытья посуды.</p>
+        <p>После хорошего ужина осталась куча грязной посуды. Напишите в словесной форме и составьте блок-схему
+          алгоритма мытья посуды.</p>
       </div>
     </div>
   </div>
