--- a/Урок 07-09. Введение в Python/Python - PT09.html
+++ b/Урок 07-09. Введение в Python/Python - PT09.html
@@ -4,7 +4,9 @@
   <title>Python - PT09</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #CCCCCC 0%, #BFBFBF 52%, #C9C9C9 100%);
@@ -123,7 +125,11 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 9.1</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли два положительных числа</span> и <span class="hl-text">выводит в консоль сумму</span>, <span class="hl-text">разность</span>, <span class="hl-text">произведение</span> и <span class="hl-text">частное этих двух чисел</span>. Вывод оформите в соответствии с примером.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли два положительных числа</span> и
+          <span class="hl-text">выводит в консоль сумму</span>, <span class="hl-text">разность</span>, <span
+            class="hl-text">произведение</span> и <span class="hl-text">частное этих двух чисел</span>. Вывод оформите в
+          соответствии с примером.
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите первое положительное число: <span class="input">8</span>
@@ -137,7 +143,10 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 9.2</h2>
-        <p><span class="hl-text">Teston Lebra</span> и его четверо друзей решили собрать деньги для совместного отпуска. Напишите программу, которая <code><span class="number"><b>5</b></span></code> <span class="hl-text">раз запрашивает ввод денег как числа с консоли</span> и <span class="hl-text">выводит в консоль итоговую сумму денег</span>. Используйте сокращённую запись для суммирования.</p>
+        <p><span class="hl-text">Teston Lebra</span> и его четверо друзей решили собрать деньги для совместного отпуска.
+          Напишите программу, которая <code><span class="number"><b>5</b></span></code> <span class="hl-text">раз
+            запрашивает ввод денег как числа с консоли</span> и <span class="hl-text">выводит в консоль итоговую сумму
+            денег</span>. Используйте сокращённую запись для суммирования.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите первую сумму: <span class="input">150</span>
@@ -151,15 +160,21 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 9.3</h2>
-        <p>Выполните <span class="hl-text">Практическое Задание 9.2</span>, используя <span class="hl-text">только <code><span class="number"><b>2</b></span></code> переменные</span>.</p>
+        <p>Выполните <span class="hl-text">Практическое Задание 9.2</span>, используя <span class="hl-text">только
+            <code><span class="number"><b>2</b></span></code> переменные</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 9.4</h2>
-        <p>Выполните <span class="hl-text">Практическое Задание 9.2</span>, <span class="hl-text">не использовав переменные</span>.</p>
+        <p>Выполните <span class="hl-text">Практическое Задание 9.2</span>, <span class="hl-text">не использовав
+            переменные</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 9.5</h2>
-        <p>Руководитель попросил <span class="hl-text">Teston Lebra</span> поработать над системой безопасности. <span class="hl-text">Teston</span>, недолго думая, решил ввести для всех сотрудников уникальный четырёхзначный код, который проверяется умножением цифр. Напишите программу, которая <span class="hl-text">запрашивает с консоли четырёхзначное число</span> и <span class="hl-text">выводит в консоль произведение цифр числа</span>. Используйте сокращённую запись для произведения.</p>
+        <p>Руководитель попросил <span class="hl-text">Teston Lebra</span> поработать над системой безопасности. <span
+            class="hl-text">Teston</span>, недолго думая, решил ввести для всех сотрудников уникальный четырёхзначный
+          код, который проверяется умножением цифр. Напишите программу, которая <span class="hl-text">запрашивает с
+            консоли четырёхзначное число</span> и <span class="hl-text">выводит в консоль произведение цифр
+            числа</span>. Используйте сокращённую запись для произведения.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите четырёхзначное число: <span class="input">5869</span>
@@ -169,7 +184,11 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 9.6</h2>
-        <p><span class="hl-text">Teston Lebra</span> нужно оформить четырёхзначное число в виде <code><b>X---X---X---X</b></code>, где <code><b>X</b></code> - это число. Напишите программу, которая <span class="hl-text">запрашивает с консоли четырёхзначное число</span> и <span class="hl-text">выводит в консоль в требуемом виде</span>. Используйте разделитель при выводе.</p>
+        <p><span class="hl-text">Teston Lebra</span> нужно оформить четырёхзначное число в виде
+          <code><b>X---X---X---X</b></code>, где <code><b>X</b></code> - это число. Напишите программу, которая <span
+            class="hl-text">запрашивает с консоли четырёхзначное число</span> и <span class="hl-text">выводит в консоль
+            в требуемом виде</span>. Используйте разделитель при выводе.
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите четырёхзначное число: <span class="input">5869</span>
@@ -179,9 +198,16 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 9.7</h2>
-        <p><span class="hl-text">Teston Lebra</span> решил поклеить обои, но не знает, сколько нужно взять рулонов и во сколько денег это обойдётся. Напишите программу, которая <span class="hl-text">запрашивает с консоли площадь поклейки в метрах</span>, <span class="hl-text">сколько метров в рулоне</span>, <span class="hl-text">цену за рулон</span>, затем <span class="hl-text">выводит в консоль количество рулонов</span> и <span class="hl-text">итоговую цену</span>.</p>
+        <p><span class="hl-text">Teston Lebra</span> решил поклеить обои, но не знает, сколько нужно взять рулонов и во
+          сколько денег это обойдётся. Напишите программу, которая <span class="hl-text">запрашивает с консоли площадь
+            поклейки в метрах</span>, <span class="hl-text">сколько метров в рулоне</span>, <span class="hl-text">цену
+            за рулон</span>, затем <span class="hl-text">выводит в консоль количество рулонов</span> и <span
+            class="hl-text">итоговую цену</span>.</p>
         <h3>Подсказка</h3>
-        <p>Чтобы получилось целое число, нужно метры в рулоне поделить на <code><span class="number"><b>2</b></span></code> и добавить к итоговому количеству площади поклейки, затем нацело поделить на метры в рулоне.</p>
+        <p>Чтобы получилось целое число, нужно метры в рулоне поделить на
+          <code><span class="number"><b>2</b></span></code> и добавить к итоговому количеству площади поклейки, затем
+          нацело поделить на метры в рулоне.
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите площадь поклейки (метры): <span class="input">98</span>
@@ -194,7 +220,12 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 9.8</h2>
-        <p><span class="hl-text">Teston Lebra</span> любит путешествовать на своей машине. Он собрался в долгую дорогу, но не знает, сколько денег ему понадобится на бензин. Напишите программу, которая <span class="hl-text">запрашивает с консоли общее расстояние поездки в километрах</span>, <span class="hl-text">средний расход топлива на 100 км (в литрах)</span> и <span class="hl-text">стоимость литра бензина</span>, затем <span class="hl-text">выводит в консоль общую стоимость бензина для поездки</span>.</p>
+        <p><span class="hl-text">Teston Lebra</span> любит путешествовать на своей машине. Он собрался в долгую дорогу,
+          но не знает, сколько денег ему понадобится на бензин. Напишите программу, которая <span
+            class="hl-text">запрашивает с консоли общее расстояние поездки в километрах</span>, <span
+            class="hl-text">средний расход топлива на 100 км (в литрах)</span> и <span class="hl-text">стоимость литра
+            бензина</span>, затем <span class="hl-text">выводит в консоль общую стоимость бензина для поездки</span>.
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите общее расстояние поездки в километрах: <span class="input">500</span>
@@ -206,7 +237,8 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 9.9</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли месяц как число</span> и <span class="hl-text">выводит в консоль, к какому кварталу относится этот месяц</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли месяц как число</span> и <span
+            class="hl-text">выводит в консоль, к какому кварталу относится этот месяц</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите номер месяца: <span class="input">1</span>
@@ -216,9 +248,13 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 9.10</h2>
-        <p><span class="hl-text">Teston Lebra</span> хочет сделать вклад в банк под годовой процент, но не хочет долго высчитывать, сколько денег у него будет через несколько лет. Напишите программу, которая <span class="hl-text">запрашивает с консоли начальную сумму вклада</span>, <span class="hl-text">годовую процентную ставку</span> и <span class="hl-text">количество лет</span>, затем <span class="hl-text">выводит в консоль сумму вклада через указанное количество лет</span>.</p>
+        <p><span class="hl-text">Teston Lebra</span> хочет сделать вклад в банк под годовой процент, но не хочет долго
+          высчитывать, сколько денег у него будет через несколько лет. Напишите программу, которая <span
+            class="hl-text">запрашивает с консоли начальную сумму вклада</span>, <span class="hl-text">годовую
+            процентную ставку</span> и <span class="hl-text">количество лет</span>, затем <span class="hl-text">выводит
+            в консоль сумму вклада через указанное количество лет</span>.</p>
         <p>Программа должна считать по формуле:
-          <br><code><b><span class="number">&ltсумма_вклада&gt</span> = <span class="number">&ltначальная_сумма_вклада&gt</span> * ((<span class="number">1</span> + <span class="number">&ltгодовая_процентная_ставка&gt</span> / <span class="number">100</span>) ** <span class="number">&ltколичество_лет&gt</span>)</b></code>
+          <br><code><b><span class="number">{сумма_вклада}</span> = <span class="number">{начальная_сумма_вклада}</span> * ((<span class="number">1</span> + <span class="number">{годовая_процентная_ставка}</span> / <span class="number">100</span>) ** <span class="number">{количество_лет}</span>)</b></code>
         </p>
         <h3>Консоль:</h3>
         <div class="console">
@@ -231,7 +267,10 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 9.11</h2>
-        <p>На корпоративе у <span class="hl-text">Teston Lebra</span> была корзина с подарками для сотрудников. Напишите программу, которая <span class="hl-text">запрашивает с консоли количество сотрудников</span> и <span class="hl-text">количество подарков</span>, затем <span class="hl-text">выводит в консоль сколько подарков досталось каждому сотруднику</span> и <span class="hl-text">сколько подарков осталось в корзине</span>.</p>
+        <p>На корпоративе у <span class="hl-text">Teston Lebra</span> была корзина с подарками для сотрудников. Напишите
+          программу, которая <span class="hl-text">запрашивает с консоли количество сотрудников</span> и <span
+            class="hl-text">количество подарков</span>, затем <span class="hl-text">выводит в консоль сколько подарков
+            досталось каждому сотруднику</span> и <span class="hl-text">сколько подарков осталось в корзине</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите количество сотрудников: <span class="input">4</span>
