--- a/Урок 10-14. Операторы ветвлений/Python - PT13.html
+++ b/Урок 10-14. Операторы ветвлений/Python - PT13.html
@@ -4,7 +4,9 @@
   <title>Python - PT13</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #CCCCCC 0%, #BFBFBF 52%, #C9C9C9 100%);
@@ -187,7 +189,12 @@
     <div class="right-block">
       <div class="right-rect">
         <h2>Практическое Задание 13.1</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли два числа</span>, <span class="hl-text">выводит в консоль меню</span>, <span class="hl-text">запрашивает ввод выбора с консоли</span>, затем <span class="hl-text">выводит в консоль результат работы выбора</span>. Учтите, что пользователь в качестве выбора может вписать число не в диапазоне <code><span class="number"><b>1</b></span></code>-<code><span class="number"><b>3</b></span></code>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли два числа</span>, <span
+            class="hl-text">выводит в консоль меню</span>, <span class="hl-text">запрашивает ввод выбора с
+            консоли</span>, затем <span class="hl-text">выводит в консоль результат работы выбора</span>. Учтите, что
+          пользователь в качестве выбора может вписать число не в диапазоне
+          <code><span class="number"><b>1</b></span></code>-<code><span class="number"><b>3</b></span></code>.
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите первое число: <span class="input">10</span>
@@ -197,17 +204,26 @@
 3. Найти произведение
 Выберите действие: <span class="input">3</span>
 ===========================
-Произвдение чисел равно 50.</code></pre>
+Произведение чисел равно 50.</code></pre>
         </div>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 13.2</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число от <code><span class="number"><b>0</b></span></code> до <code><span class="number"><b>23</b></span></code> включительно</span> и <span class="hl-text">выводит в консоль время суток</span>. Учтите, что пользователь может вписать число не в диапазоне <code><span class="number"><b>0</b></span></code>-<code><span class="number"><b>23</b></span></code>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число от
+            <code><span class="number"><b>0</b></span></code> до <code><span class="number"><b>23</b></span></code>
+            включительно</span> и <span class="hl-text">выводит в консоль время суток</span>. Учтите, что пользователь
+          может вписать число не в диапазоне
+          <code><span class="number"><b>0</b></span></code>-<code><span class="number"><b>23</b></span></code>.
+        </p>
         <p>Время суток следующее:
-          <br>— <span class="hl-text"><b>Ночь:</b></span> от <code><span class="number"><b>0</b></span></code> до <code><span class="number"><b>6</b></span></code>.
-          <br>— <span class="hl-text"><b>Утро:</b></span> от <code><span class="number"><b>6</b></span></code> до <code><span class="number"><b>12</b></span></code>.
-          <br>— <span class="hl-text"><b>День:</b></span> от <code><span class="number"><b>12</b></span></code> до <code><span class="number"><b>18</b></span></code>.
-          <br>— <span class="hl-text"><b>Вечер:</b></span> от <code><span class="number"><b>18</b></span></code> до <code><span class="number"><b>24</b></span></code>.
+          <br>— <span class="hl-text"><b>Ночь:</b></span> от <code><span class="number"><b>0</b></span></code> до
+          <code><span class="number"><b>6</b></span></code>.
+          <br>— <span class="hl-text"><b>Утро:</b></span> от <code><span class="number"><b>6</b></span></code> до
+          <code><span class="number"><b>12</b></span></code>.
+          <br>— <span class="hl-text"><b>День:</b></span> от <code><span class="number"><b>12</b></span></code> до
+          <code><span class="number"><b>18</b></span></code>.
+          <br>— <span class="hl-text"><b>Вечер:</b></span> от <code><span class="number"><b>18</b></span></code> до
+          <code><span class="number"><b>24</b></span></code>.
         </p>
         <h3>Консоль:</h3>
         <div class="console">
@@ -218,17 +234,30 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 13.3</h2>
-        <p>В магазине <span class="hl-text">"Всё Не Дорого"</span> решили сделать акцию <span class="hl-text">"Накопи скидку"</span> для своих клиентов. Если клиент выполняет определённые условия, то он получает скидку.</p>
+        <p>В магазине <span class="hl-text">"Всё Не Дорого"</span> решили сделать акцию <span class="hl-text">"Накопи
+            скидку"</span> для своих клиентов. Если клиент выполняет определённые условия, то он получает скидку.</p>
         <p>Условия следующие:
-          <br>— Если клиент закупался в магазине на протяжении <code><span class="number"><b>7</b></span></code> <span class="hl-text">дней подряд</span>, то получает скидку <code><span class="number"><b>2%</b></span></code>.
-          <br>— Если клиент закупался в магазине на протяжении <code><span class="number"><b>14</b></span></code> <span class="hl-text">дней подряд</span>, то получает ещё скидку <code><span class="number"><b>3%</b></span></code>.
-          <br>— Если клиент закупался в магазине на протяжении <code><span class="number"><b>21</b></span></code> <span class="hl-text">день подряд</span>, то получает ещё скидку <code><span class="number"><b>5%</b></span></code>.
-          <br>— Если стоимость корзины клиента от <span class="number"><b>1000</b></span> <span class="hl-text">и больше</span>, то получает ещё скидку <span class="number"><b>10%</b></span>.
-          <br>— Если клиент оставил <span class="hl-text">положительный отзыв</span> в текущем месяце, то получает ещё скидку <span class="number"><b>5%</b></span>.
+          <br>— Если клиент закупался в магазине на протяжении <code><span class="number"><b>7</b></span></code> <span
+            class="hl-text">дней подряд</span>, то получает скидку <code><span class="number"><b>2%</b></span></code>.
+          <br>— Если клиент закупался в магазине на протяжении <code><span class="number"><b>14</b></span></code> <span
+            class="hl-text">дней подряд</span>, то получает ещё скидку
+          <code><span class="number"><b>3%</b></span></code>.
+          <br>— Если клиент закупался в магазине на протяжении <code><span class="number"><b>21</b></span></code> <span
+            class="hl-text">день подряд</span>, то получает ещё скидку
+          <code><span class="number"><b>5%</b></span></code>.
+          <br>— Если стоимость корзины клиента от <span class="number"><b>1000</b></span> <span class="hl-text">и
+            больше</span>, то получает ещё скидку <span class="number"><b>10%</b></span>.
+          <br>— Если клиент оставил <span class="hl-text">положительный отзыв</span> в текущем месяце, то получает ещё
+          скидку <span class="number"><b>5%</b></span>.
         </p>
         <p>Скидка действует только для следующей покупки и только с подтверждения клиентом.</p>
         <br>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли стоимость корзины клиента</span>, <span class="hl-text">количество дней непрерывной покупки</span>, <span class="hl-text">подтверждение положительного отзыва</span>. Затем программа <span class="hl-text">выводит в консоль сумму накопленной скидки</span> и <span class="hl-text">запрашивает с консоли подтверждение применения скидки</span>. После этого программа <span class="hl-text">выводит в консоль сумму оплаты в зависимости от текущей скидки</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли стоимость корзины клиента</span>,
+          <span class="hl-text">количество дней непрерывной покупки</span>, <span class="hl-text">подтверждение
+            положительного отзыва</span>. Затем программа <span class="hl-text">выводит в консоль сумму накопленной
+            скидки</span> и <span class="hl-text">запрашивает с консоли подтверждение применения скидки</span>. После
+          этого программа <span class="hl-text">выводит в консоль сумму оплаты в зависимости от текущей скидки</span>.
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите стоимость корзины клиента: <span class="input">500</span>
@@ -243,7 +272,9 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 13.4</h2>
-        <p>Напишите программу, которая <span class="hl-text">выводит в консоль текущую дату</span>, <span class="hl-text">время</span>, <span class="hl-text">день недели</span> или <span class="hl-text">текущий месяц</span> в зависимости от введённого выбора.</p>
+        <p>Напишите программу, которая <span class="hl-text">выводит в консоль текущую дату</span>, <span
+            class="hl-text">время</span>, <span class="hl-text">день недели</span> или <span class="hl-text">текущий
+            месяц</span> в зависимости от введённого выбора.</p>
 
         <h3>Подсказки:</h3>
         <ol>
@@ -281,11 +312,17 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 13.5</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли расстояние в километрах</span> и <span class="hl-text">выводит в консоль рекомендацию по перевозке</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли расстояние в километрах</span> и
+          <span class="hl-text">выводит в консоль рекомендацию по перевозке</span>.
+        </p>
         <p>Рекомендации следующие:
-          <br>— Рекомендуется доставка <span class="hl-text">автомобилем</span>, если расстояние менее <code><span class="number"><b>100</b></span></code> км.
-          <br>— Рекомендуется доставка <span class="hl-text">грузовым автомобилем</span>, если расстояние от <code><span class="number"><b>100</b></span></code> км до <code><span class="number"><b>1000</b></span></code> км.
-          <br>— Рекомендуется доставка <span class="hl-text">поездом или самолётом</span>, если расстояние от <code><span class="number"><b>1000</b></span></code> и более км.
+          <br>— Рекомендуется доставка <span class="hl-text">автомобилем</span>, если расстояние менее
+          <code><span class="number"><b>100</b></span></code> км.
+          <br>— Рекомендуется доставка <span class="hl-text">грузовым автомобилем</span>, если расстояние от
+          <code><span class="number"><b>100</b></span></code> км до <code><span class="number"><b>1000</b></span></code>
+          км.
+          <br>— Рекомендуется доставка <span class="hl-text">поездом или самолётом</span>, если расстояние от
+          <code><span class="number"><b>1000</b></span></code> и более км.
         </p>
         <h3>Консоль:</h3>
         <div class="console">
@@ -296,21 +333,31 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 13.6</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли уровень освещённости (в люксах)</span>, <span class="hl-text">температуру (в градусах Цельсия)</span>, <span class="hl-text">влажность воздуха (в процентах)</span>, <span class="hl-text">уровень кислотности почвы (pH)</span>, затем <span class="hl-text">выводит в консоль оценку условия жизни растения</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли уровень освещённости (в
+            люксах)</span>, <span class="hl-text">температуру (в градусах Цельсия)</span>, <span
+            class="hl-text">влажность воздуха (в процентах)</span>, <span class="hl-text">уровень кислотности почвы
+            (pH)</span>, затем <span class="hl-text">выводит в консоль оценку условия жизни растения</span>.</p>
 
         <p>Градация оценки:
           <br>— <span class="hl-text"><b>Очень высокая:</b></span> все параметры в оптимальных границах.
-          <br>— <span class="hl-text"><b>Высокая:</b></span> <code><span class="number"><b>1</b></span></code> параметр вне оптимальных границ.
-          <br>— <span class="hl-text"><b>Средняя:</b></span> <code><span class="number"><b>2</b></span></code> параметра вне оптимальных границ.
-          <br>— <span class="hl-text"><b>Низкая:</b></span> <code><span class="number"><b>3</b></span></code> параметра вне оптимальных границ.
+          <br>— <span class="hl-text"><b>Высокая:</b></span> <code><span class="number"><b>1</b></span></code> параметр
+          вне оптимальных границ.
+          <br>— <span class="hl-text"><b>Средняя:</b></span> <code><span class="number"><b>2</b></span></code> параметра
+          вне оптимальных границ.
+          <br>— <span class="hl-text"><b>Низкая:</b></span> <code><span class="number"><b>3</b></span></code> параметра
+          вне оптимальных границ.
           <br>— <span class="hl-text"><b>Очень низкая:</b></span> все параметры вне оптимальных границ.
         </p>
 
         <p>Оптимальные границы:
-          <br>— <span class="hl-text"><b>Уровень освещённости:</b></span> <code><span class="number"><b>2000</b></span></code>-<code><span class="number"><b>10000 лк</b></span></code>.
-          <br>— <span class="hl-text"><b>Температура:</b></span> <code><span class="number"><b>15</b></span></code>-<code><span class="number"><b>28°C</b></span></code>.
-          <br>— <span class="hl-text"><b>Влажность воздуха:</b></span> <code><span class="number"><b>50</b></span></code>-<code><span class="number"><b>70%</b></span></code>.
-          <br>— <span class="hl-text"><b>Уровень кислотности почвы:</b></span> <code><span class="number"><b>6</b></span></code>-<code><span class="number"><b>7 pH</b></span></code>.
+          <br>— <span class="hl-text"><b>Уровень освещённости:</b></span>
+          <code><span class="number"><b>2000</b></span></code>-<code><span class="number"><b>10000 лк</b></span></code>.
+          <br>— <span class="hl-text"><b>Температура:</b></span>
+          <code><span class="number"><b>15</b></span></code>-<code><span class="number"><b>28°C</b></span></code>.
+          <br>— <span class="hl-text"><b>Влажность воздуха:</b></span>
+          <code><span class="number"><b>50</b></span></code>-<code><span class="number"><b>70%</b></span></code>.
+          <br>— <span class="hl-text"><b>Уровень кислотности почвы:</b></span>
+          <code><span class="number"><b>6</b></span></code>-<code><span class="number"><b>7 pH</b></span></code>.
         </p>
         <h3>Консоль:</h3>
         <div class="console">
@@ -325,9 +372,9 @@
     </div>
   </div>
   <script>
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       const codeBlocks = document.querySelectorAll('code.python');
-      codeBlocks.forEach(function(codeBlock, index) {
+      codeBlocks.forEach(function (codeBlock, index) {
         let innerHTML = codeBlock.innerHTML;
         console.log(index, innerHTML);
         // STRING
