--- a/Урок 10-14. Операторы ветвлений/Python - PT14.html
+++ b/Урок 10-14. Операторы ветвлений/Python - PT14.html
@@ -4,7 +4,9 @@
   <title>Python - PT14</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #CCCCCC 0%, #BFBFBF 52%, #C9C9C9 100%);
@@ -126,8 +128,11 @@
         </div>
         </p>
         <p>Затем программа <span class="hl-text">запрашивает ввод выбора с консоли</span>.</p>
-        <p>Если выбран <span class="hl-text">первый пункт</span>, то программа <span class="hl-text">запрашивает с консоли число</span> и <span class="hl-text">определяет его чётность</span>.</p>
-        <p>Если выбран <span class="hl-text">второй пункт</span>, то программа <span class="hl-text">запрашивает с консоли два числа</span> и <span class="hl-text">операцию (+, -, *, /)</span>, затем <span class="hl-text">выводит в консоль результат операции</span>.</p>
+        <p>Если выбран <span class="hl-text">первый пункт</span>, то программа <span class="hl-text">запрашивает с
+            консоли число</span> и <span class="hl-text">определяет его чётность</span>.</p>
+        <p>Если выбран <span class="hl-text">второй пункт</span>, то программа <span class="hl-text">запрашивает с
+            консоли два числа</span> и <span class="hl-text">операцию (+, -, *, /)</span>, затем <span
+            class="hl-text">выводит в консоль результат операции</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>1. Определить чётность числа
@@ -150,8 +155,22 @@
         </div>
         </p>
         <p>Затем программа <span class="hl-text">запрашивает ввод выбора с консоли</span>.</p>
-        <p>Если выбран <span class="hl-text">первый пункт</span>, то программа <span class="hl-text">запрашивает ввод суммы с консоли</span>. Если сумма отрицательная, то программа должна <span class="hl-text">вывести в консоль</span> <code><span class="string"><b>"Невозможно положить на счёт отрицательную сумму."</b></span></code>. Если же сумма положительная, то <span class="hl-text">деньги кладутся на счёт</span> и <span class="hl-text">выводится сумма счёта</span>.</p>
-        <p>Если выбран <span class="hl-text">второй пункт</span>, то программа <span class="hl-text">запрашивает ввод суммы с консоли</span>. Если сумма отрицательная, то программа должна <span class="hl-text">вывести в консоль</span> <code><span class="string"><b>"Невозможно снять со счёта отрицательную сумму."</b></span></code>. Если сумма превышает количество денег на счету, то программа <span class="hl-text">сообщает</span> <code><span class="string"><b>"На счету недостаточно денег."</b></span></code>. В противном случае, программа <span class="hl-text">снимает со счёта деньги</span> и <span class="hl-text">выводит в консоль текущий счёт</span>.</p>
+        <p>Если выбран <span class="hl-text">первый пункт</span>, то программа <span class="hl-text">запрашивает ввод
+            суммы с консоли</span>. Если сумма отрицательная, то программа должна <span class="hl-text">вывести в
+            консоль</span>
+          <code><span class="string"><b>"Невозможно положить на счёт отрицательную сумму."</b></span></code>. Если же
+          сумма положительная, то <span class="hl-text">деньги кладутся на счёт</span> и <span class="hl-text">выводится
+            сумма счёта</span>.
+        </p>
+        <p>Если выбран <span class="hl-text">второй пункт</span>, то программа <span class="hl-text">запрашивает ввод
+            суммы с консоли</span>. Если сумма отрицательная, то программа должна <span class="hl-text">вывести в
+            консоль</span>
+          <code><span class="string"><b>"Невозможно снять со счёта отрицательную сумму."</b></span></code>. Если сумма
+          превышает количество денег на счету, то программа <span class="hl-text">сообщает</span>
+          <code><span class="string"><b>"На счету недостаточно денег."</b></span></code>. В противном случае, программа
+          <span class="hl-text">снимает со счёта деньги</span> и <span class="hl-text">выводит в консоль текущий
+            счёт</span>.
+        </p>
         <p>Считайте, что изначально на счету находится <code><span class="number"><b>250</b></span></code> денег.</p>
         <h3>Консоль:</h3>
         <div class="console">
