--- a/Урок 15-20. Циклы/Python - HW18.html
+++ b/Урок 15-20. Циклы/Python - HW18.html
@@ -4,7 +4,9 @@
   <title>Python - HW18</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #333333 0%, #404040 57%, #363636 100%);
@@ -177,11 +179,18 @@
     <div class="right-block">
       <div class="right-rect">
         <h2><strong>Примечание</strong></h2>
-        <p>Оформляйте ввод и вывод данных в соответствии с примерами заданий. Используйте только то, что было пройденно до этого урока включительно. Задания выполняйте при помощи цикла <code class="python"><b>for</b></code>. Не используйте в условии оператор <code class="python"><b>in</b></code>.</p>
+        <p>Оформляйте ввод и вывод данных в соответствии с примерами заданий. Используйте только то, что было пройдено
+          до этого урока включительно. Задания выполняйте при помощи цикла <code class="python"><b>for</b></code>. Не
+          используйте в условии оператор <code class="python"><b>in</b></code>.</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 18.1</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли <span class="number"><b>3</b></span> числа</span> - <span class="hl-text">начало</span> и <span class="hl-text">конец диапазона</span>, а также <span class="hl-text">шаг</span>. Если шаг положительный, то программа должна <span class="hl-text">выводить в консоль числа в порядке возрастания</span>. В противном случае - <span class="hl-text">в порядке убывания</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли <span class="number"><b>3</b></span>
+            числа</span> - <span class="hl-text">начало</span> и <span class="hl-text">конец диапазона</span>, а также
+          <span class="hl-text">шаг</span>. Если шаг положительный, то программа должна <span class="hl-text">выводить в
+            консоль числа в порядке возрастания</span>. В противном случае - <span class="hl-text">в порядке
+            убывания</span>.
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите начало диапазона: <span class="input">5</span>
@@ -197,7 +206,9 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 18.2</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли два числа</span> - <span class="hl-text">начало</span> и <span class="hl-text">конец диапазона</span>. Затем <span class="hl-text">выводит в консоль таблицу умножения чисел из диапазона</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли два числа</span> - <span
+            class="hl-text">начало</span> и <span class="hl-text">конец диапазона</span>. Затем <span
+            class="hl-text">выводит в консоль таблицу умножения чисел из диапазона</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите начало диапазона: <span class="input">3</span>
@@ -239,7 +250,10 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 18.3</h2>
-        <p><span class="hl-text">Teston Lebra</span> попросили посчитать среднюю температуру за несколько дней. Напишите программу, которая <span class="hl-text">запрашивает с консоли количество дней</span> и затем <span class="hl-text">столько же раз запрашивает с консоли температуру</span>. Затем программа <span class="hl-text">выводит в консоль среднюю температуру за указанные дни</span>.</p>
+        <p><span class="hl-text">Teston Lebra</span> попросили посчитать среднюю температуру за несколько дней. Напишите
+          программу, которая <span class="hl-text">запрашивает с консоли количество дней</span> и затем <span
+            class="hl-text">столько же раз запрашивает с консоли температуру</span>. Затем программа <span
+            class="hl-text">выводит в консоль среднюю температуру за указанные дни</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите количество дней: <span class="input">5</span>
@@ -254,7 +268,8 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 18.4</h2>
-        <p>Реализуйте меню по примеру из консоли. Используйте вложенный цикл <code class="python"><b>for</b></code> для рисования фигур и цикл <code class="python"><b>while</b></code> для меню.</p>
+        <p>Реализуйте меню по примеру из консоли. Используйте вложенный цикл <code class="python"><b>for</b></code> для
+          рисования фигур и цикл <code class="python"><b>while</b></code> для меню.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>1. Нарисовать треугольник ниже главной диагонали
@@ -285,7 +300,12 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 18.5</h2>
-        <p><span class="hl-text">Teston Lebra</span> узнал, что в магазине <span class="hl-text">"Всё Не Дорого"</span> стартовала акция на доставку. Если сумму заказа перевернуть и получится та же самая сумма (число палиндром), то выдаётся купон в <span class="number"><b>10%</b></span> на следующую покупку. Поэтому <span class="hl-text">Teston Lebra</span> решил найти все числа, которые принесут ему купон. Напишите программу, которая <span class="hl-text">запрашивает с консоли начальное число</span> и <span class="hl-text">конечное число</span>, а затем <span class="hl-text">выводит в консоль все числа палиндромы</span>.</p>
+        <p><span class="hl-text">Teston Lebra</span> узнал, что в магазине <span class="hl-text">"Всё Не Дорого"</span>
+          стартовала акция на доставку. Если сумму заказа перевернуть и получится та же самая сумма (число палиндром),
+          то выдаётся купон в <span class="number"><b>10%</b></span> на следующую покупку. Поэтому <span
+            class="hl-text">Teston Lebra</span> решил найти все числа, которые принесут ему купон. Напишите программу,
+          которая <span class="hl-text">запрашивает с консоли начальное число</span> и <span class="hl-text">конечное
+            число</span>, а затем <span class="hl-text">выводит в консоль все числа палиндромы</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите начало диапазона: <span class="input">90</span>
@@ -299,9 +319,9 @@
     </div>
   </div>
   <script>
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       const codeBlocks = document.querySelectorAll('code.python');
-      codeBlocks.forEach(function(codeBlock, index) {
+      codeBlocks.forEach(function (codeBlock, index) {
         let innerHTML = codeBlock.innerHTML;
         console.log(index, innerHTML);
         // STRING
