--- a/Урок 15-20. Циклы/Python - PT16.html
+++ b/Урок 15-20. Циклы/Python - PT16.html
@@ -4,7 +4,9 @@
   <title>Python - PT16</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #CCCCCC 0%, #BFBFBF 52%, #C9C9C9 100%);
@@ -171,7 +173,9 @@
     <div class="right-block">
       <div class="right-rect">
         <h2>Практическое Задание 16.1</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число</span> и <span class="hl-text">выводит в консоль первое число, которое делится на <code><span class="number"><b>7</b></span></code> нацело после введённого числа</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число</span> и <span
+            class="hl-text">выводит в консоль первое число, которое делится на
+            <code><span class="number"><b>7</b></span></code> нацело после введённого числа</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите число: <span class="input">14</span>
@@ -189,18 +193,33 @@
         </div>
         </p>
 
-        <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">запрашивает с консоли два числа</span> и <span class="hl-text">выводит в консоль сумму чисел</span>.</p>
-        <p>При выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">запрашивает с консоли одно число</span> и <span class="hl-text">выводит в консоль чётное ли оно</span> или <span class="hl-text">нет</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">запрашивает с консоли два
+            числа</span> и <span class="hl-text">выводит в консоль сумму чисел</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">запрашивает с консоли одно
+            число</span> и <span class="hl-text">выводит в консоль чётное ли оно</span> или <span
+            class="hl-text">нет</span>.</p>
         <p>При выборе <span class="hl-text">пункта 3</span> программа <span class="hl-text">завершается</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 16.3</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число, состоящее из цифр от <code><span class="number"><b>0</b></span></code> до <code><span class="number"><b>3</b></span></code> включительно</span>, и <span class="hl-text">выводит в консоль данные в зависимости от условий</span>.
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число, состоящее из цифр от
+            <code><span class="number"><b>0</b></span></code> до <code><span class="number"><b>3</b></span></code>
+            включительно</span>, и <span class="hl-text">выводит в консоль данные в зависимости от условий</span>.
         <p>Условия следующие:
-          <br>— Цифра <code><span class="number"><b>0</b></span></code> считается <span class="hl-text">началом новой команды</span>. Если встречается цифра <code><span class="number"><b>0</b></span></code>, то <span class="hl-text">счётчик команд увеличивается на</span> <code><span class="number"><b>1</b></span></code>. Счётчик <span class="hl-text">выводится в конце</span>.
-          <br>— Цифры <code><span class="number"><b>2</b></span></code>, <code><span class="number"><b>3</b></span></code> просто <span class="hl-text">выводятся в консоль на каждой новой строке</span>.
-          <br>— Цифра <code><span class="number"><b>1</b></span></code> даёт команду на <span class="hl-text">пропуск вывода всех последующих цифр до следующей цифры</span> <code><span class="number"><b>0</b></span></code>. После вывода цифры <code><span class="number"><b>1</b></span></code>, <span class="hl-text">выводится</span> <code><span class="string"><b>"Пропуск"</b></span></code>.
-          <br>— Цифра <code><span class="number"><b>0</b></span></code> даёт команду на <span class="hl-text">выполнение всех последующих цифр до следующей цифры</span> <code><span class="number"><b>1</b></span></code>. <span class="hl-text">Выводится</span> <code><span class="string"><b>"Выполнение"</b></span></code>.
+          <br>— Цифра <code><span class="number"><b>0</b></span></code> считается <span class="hl-text">началом новой
+            команды</span>. Если встречается цифра <code><span class="number"><b>0</b></span></code>, то <span
+            class="hl-text">счётчик команд увеличивается на</span> <code><span class="number"><b>1</b></span></code>.
+          Счётчик <span class="hl-text">выводится в конце</span>.
+          <br>— Цифры <code><span class="number"><b>2</b></span></code>,
+          <code><span class="number"><b>3</b></span></code> просто <span class="hl-text">выводятся в консоль на каждой
+            новой строке</span>.
+          <br>— Цифра <code><span class="number"><b>1</b></span></code> даёт команду на <span class="hl-text">пропуск
+            вывода всех последующих цифр до следующей цифры</span> <code><span class="number"><b>0</b></span></code>.
+          После вывода цифры <code><span class="number"><b>1</b></span></code>, <span class="hl-text">выводится</span>
+          <code><span class="string"><b>"Пропуск"</b></span></code>.
+          <br>— Цифра <code><span class="number"><b>0</b></span></code> даёт команду на <span class="hl-text">выполнение
+            всех последующих цифр до следующей цифры</span> <code><span class="number"><b>1</b></span></code>. <span
+            class="hl-text">Выводится</span> <code><span class="string"><b>"Выполнение"</b></span></code>.
           <br>— Проход должен быть с конца числа.
         </p>
         <h3>Консоль:</h3>
@@ -222,7 +241,12 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 16.4</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает числа с консоли до тех пор, пока не введут</span> <code><span class="number"><b>0</b></span></code>. После этого программа <span class="hl-text">выводит в консоль</span> <code><span class="string"><b>"Последовательность неубывающая."</b></span></code>, если каждое следующее введённое число больше-равно предыдущего, и <span class="hl-text">ничего</span> в противном случае.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает числа с консоли до тех пор, пока не
+            введут</span> <code><span class="number"><b>0</b></span></code>. После этого программа <span
+            class="hl-text">выводит в консоль</span>
+          <code><span class="string"><b>"Последовательность неубывающая."</b></span></code>, если каждое следующее
+          введённое число больше-равно предыдущего, и <span class="hl-text">ничего</span> в противном случае.
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите число: <span class="input">2</span>
@@ -235,7 +259,13 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 16.5</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает число с консоли</span> и <span class="hl-text">находит произведение цифр числа</span>. Если во время перебора цифр программа встречает цифру <code><span class="number"><b>0</b></span></code>, то программа должна <span class="hl-text">остановиться</span> и <span class="hl-text">вывести в консоль произведение цифр</span>, а также <code><span class="string"><b>"Все цифры рассмотрены."</b></span></code>, если программа прошлась по всем цифрам, и <code><span class="string"><b>"Перебор цифр был прерван."</b></span></code> в противном случае.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает число с консоли</span> и <span
+            class="hl-text">находит произведение цифр числа</span>. Если во время перебора цифр программа встречает
+          цифру <code><span class="number"><b>0</b></span></code>, то программа должна <span
+            class="hl-text">остановиться</span> и <span class="hl-text">вывести в консоль произведение цифр</span>, а
+          также <code><span class="string"><b>"Все цифры рассмотрены."</b></span></code>, если программа прошлась по
+          всем цифрам, и <code><span class="string"><b>"Перебор цифр был прерван."</b></span></code> в противном случае.
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите число: <span class="input">12032</span>
@@ -246,13 +276,28 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 16.6</h2>
-        <p>Напишите программу, которая <span class="hl-text">загадывает число от <code><span class="number"><b>1</b></span></code> до <code><span class="number"><b>100</b></span></code> включительно</span>, затем <span class="hl-text">запрашивает с консоли число</span>. Если число угаданно, то программа <span class="hl-text">выводит в консоль количество попыток</span>, затем <span class="hl-text">запрашивает с консоли ввод на вопрос</span> <code><span class="string"><b>"Сыграть ещё раз (Y/N): "</b></span></code>. Если ввели <code><span class="string"><b>"Y"</b></span></code>, то <span class="hl-text">игра начинается заново</span>. В противном случае программа <span class="hl-text">завершается</span>. Если же число не угаданно, то программа <span class="hl-text">выводит в консоль</span> <code><span class="string"><b>"Загаданное число больше."</b></span></code> или <code><span class="string"><b>"Загаданное число меньше."</b></span></code>.</p>
+        <p>Напишите программу, которая <span class="hl-text">загадывает число от
+            <code><span class="number"><b>1</b></span></code> до <code><span class="number"><b>100</b></span></code>
+            включительно</span>, затем <span class="hl-text">запрашивает с консоли число</span>. Если число угадано, то
+          программа <span class="hl-text">выводит в консоль количество попыток</span>, затем <span
+            class="hl-text">запрашивает с консоли ввод на вопрос</span>
+          <code><span class="string"><b>"Сыграть ещё раз (Y/N): "</b></span></code>. Если ввели
+          <code><span class="string"><b>"Y"</b></span></code>, то <span class="hl-text">игра начинается заново</span>. В
+          противном случае программа <span class="hl-text">завершается</span>. Если же число не угадано, то программа
+          <span class="hl-text">выводит в консоль</span>
+          <code><span class="string"><b>"Загаданное число больше."</b></span></code> или
+          <code><span class="string"><b>"Загаданное число меньше."</b></span></code>.
+        </p>
 
         <h3>Подсказка:</h3>
-        <p>Используйте следующий код, чтобы генерировать число от <code><span class="number"><b>1</b></span></code> до <code><span class="number"><b>100</b></span></code> включительно:
+        <p>Используйте следующий код, чтобы генерировать число от <code><span class="number"><b>1</b></span></code> до
+          <code><span class="number"><b>100</b></span></code> включительно:
         <div class="console">
-          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
-              <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
+          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15"
+              height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
+              <path fill="currentColor" fill-rule="evenodd"
+                d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z"
+                clip-rule="evenodd"></path>
             </svg>
             Copy code</button>
           <pre><code class="python">from random import randint  # Подключение модуля random и импорт функции randint
@@ -277,7 +322,14 @@ randint(1, 100)  # Использование функции для генера
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 16.7</h2>
-        <p>Напишите программу, которая <span class="hl-text">проверяет корректность IP</span>. Программа <span class="hl-text">запрашивает с консоли числа от <code><span class="number"><b>0</b></span></code> до <code><span class="number"><b>255</b></span></code> включительно</span>. Если из <code><span class="number"><b>4</b></span></code>-х запросов хотя бы одно число было вне диапазона, то программа <span class="hl-text">выводит в консоль</span> <code><span class="string"><b>"Неверный IP адрес."</b></span></code>. В противном случае <span class="hl-text">выводит</span> <code><span class="string"><b>"IP адрес корректный."</b></span></code>.</p>
+        <p>Напишите программу, которая <span class="hl-text">проверяет корректность IP</span>. Программа <span
+            class="hl-text">запрашивает с консоли числа от <code><span class="number"><b>0</b></span></code> до
+            <code><span class="number"><b>255</b></span></code> включительно</span>. Если из
+          <code><span class="number"><b>4</b></span></code>-х запросов хотя бы одно число было вне диапазона, то
+          программа <span class="hl-text">выводит в консоль</span>
+          <code><span class="string"><b>"Неверный IP адрес."</b></span></code>. В противном случае <span
+            class="hl-text">выводит</span> <code><span class="string"><b>"IP адрес корректный."</b></span></code>.
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите первую часть IP: <span class="input">243</span>
@@ -288,13 +340,29 @@ randint(1, 100)  # Использование функции для генера
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 16.8</h2>
-        <p>На работе у <span class="hl-text">Teston Lebra</span> используются транзакции для передачи денег. Транзакции имеют список пронумерованных команд от <code><span class="number"><b>1</b></span></code> до <code><span class="number"><b>9</b></span></code> включительно. Вместе эти числа составляют идентификатор транзакции.</p>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли цифры от <code><span class="number"><b>1</b></span></code> до <code><span class="number"><b>9</b></span></code> включительно до тех пор, пока не встретит два нуля подряд</span>. Эти цифры программа <span class="hl-text">соединяет в одно число - идентификатор</span>. Если проблем никаких нет, то программа <span class="hl-text">выводит в консоль</span> <code><span class="string"><b>"Транзакция <span class="number">&ltидентификатор&gt</span> успешно выполнена."</b></span></code>. В противном случае программа должна <span class="hl-text">писать</span> <code><span class="string"><b>"Ошибка транзакции."</b></span></code>, а затем <code><span class="string"><b>"Откат команды <span class="number">&ltпоследняя_цифра_идентификатора&gt</span>."</b></span></code> <span class="hl-text">до тех пор, пока не останутся цифры в транзакции</span>.</p>
+        <p>На работе у <span class="hl-text">Teston Lebra</span> используются транзакции для передачи денег. Транзакции
+          имеют список пронумерованных команд от <code><span class="number"><b>1</b></span></code> до
+          <code><span class="number"><b>9</b></span></code> включительно. Вместе эти числа составляют идентификатор
+          транзакции.
+        </p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли цифры от
+            <code><span class="number"><b>1</b></span></code> до <code><span class="number"><b>9</b></span></code>
+            включительно до тех пор, пока не встретит два нуля подряд</span>. Эти цифры программа <span
+            class="hl-text">соединяет в одно число - идентификатор</span>. Если проблем никаких нет, то программа <span
+            class="hl-text">выводит в консоль</span>
+          <code><span class="string"><b>"Транзакция <span class="number">{идентификатор}</span> успешно выполнена."</b></span></code>.
+          В противном случае программа должна <span class="hl-text">писать</span>
+          <code><span class="string"><b>"Ошибка транзакции."</b></span></code>, а затем
+          <code><span class="string"><b>"Откат команды <span class="number">{последняя_цифра_идентификатора}</span>."</b></span></code>
+          <span class="hl-text">до тех пор, пока не останутся цифры в транзакции</span>.
+        </p>
         <p>Условия прерывания транзакции:
           <br>— После цифры <span class="number"><b>0</b></span> идёт не цифра <span class="number"><b>0</b></span>.
           <br>— Транзакция не начинается с цифры <span class="number"><b>1</b></span>.
-          <br>— После цифры <span class="number"><b>6</b></span> не идёт <span class="number"><b>7</b></span> или <span class="number"><b>8</b></span>.
-          <br>— После цифры <span class="number"><b>7</b></span> или <span class="number"><b>8</b></span> идёт <span class="number"><b>7</b></span> или <span class="number"><b>8</b></span>.
+          <br>— После цифры <span class="number"><b>6</b></span> не идёт <span class="number"><b>7</b></span> или <span
+            class="number"><b>8</b></span>.
+          <br>— После цифры <span class="number"><b>7</b></span> или <span class="number"><b>8</b></span> идёт <span
+            class="number"><b>7</b></span> или <span class="number"><b>8</b></span>.
         </p>
         <h3>Пример 1:</h3>
         <div class="console">
@@ -340,13 +408,13 @@ randint(1, 100)  # Использование функции для генера
       button.innerHTML = `
         <svg width="15" height="15" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="icon-sm"><path fill-rule="evenodd" clip-rule="evenodd" d="M18.0633 5.67375C18.5196 5.98487 18.6374 6.607 18.3262 7.06331L10.8262 18.0633C10.6585 18.3093 10.3898 18.4678 10.0934 18.4956C9.79688 18.5234 9.50345 18.4176 9.29289 18.2071L4.79289 13.7071C4.40237 13.3166 4.40237 12.6834 4.79289 12.2929C5.18342 11.9023 5.81658 11.9023 6.20711 12.2929L9.85368 15.9394L16.6738 5.93664C16.9849 5.48033 17.607 5.36263 18.0633 5.67375Z" fill="currentColor"></path></svg>Copied!
     `;
-      setTimeout(function() {
+      setTimeout(function () {
         button.innerHTML = originalHTML;
       }, 2000);
     }
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       const codeBlocks = document.querySelectorAll('code.python');
-      codeBlocks.forEach(function(codeBlock, index) {
+      codeBlocks.forEach(function (codeBlock, index) {
         let innerHTML = codeBlock.innerHTML;
         console.log(index, innerHTML);
         // STRING
