--- a/Урок 15-20. Циклы/Python - PT18.html
+++ b/Урок 15-20. Циклы/Python - PT18.html
@@ -4,7 +4,9 @@
   <title>Python - PT18</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #CCCCCC 0%, #BFBFBF 52%, #C9C9C9 100%);
@@ -171,11 +173,17 @@
     <div class="right-block">
       <div class="right-rect">
         <h2>Практическое Задание 18.1</h2>
-        <p>Что произойдёт в коде ниже при запуске программы? При каких значениях <code class="python"><b>i</b></code>, <code class="python"><b>j</b></code>, <code class="python"><b>k</b></code> завершатся все циклы? Как сделать так, чтобы <span class="hl-text">программа полностью завершила все циклы</span>?</p>
+        <p>Что произойдёт в коде ниже при запуске программы? При каких значениях <code class="python"><b>i</b></code>,
+          <code class="python"><b>j</b></code>, <code class="python"><b>k</b></code> завершатся все циклы? Как сделать
+          так, чтобы <span class="hl-text">программа полностью завершила все циклы</span>?
+        </p>
         <h3>Код:</h3>
         <div class="console">
-          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
-              <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
+          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15"
+              height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
+              <path fill="currentColor" fill-rule="evenodd"
+                d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z"
+                clip-rule="evenodd"></path>
             </svg>
             Copy code</button>
           <pre><code class="python">for i in range(5):
@@ -188,7 +196,8 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 18.2</h2>
-        <p>Напишите программу, которая <span class="hl-text">с помощью вложенного цикла рисует в консоли квадрат указанный ниже</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">с помощью вложенного цикла рисует в консоли квадрат
+            указанный ниже</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>0 1 2 3
@@ -199,7 +208,9 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 18.3</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли ширину</span> и <span class="hl-text">высоту четырёхугольника</span>, затем <span class="hl-text">выводит в консоль четырёхугольник из символа звёздочки</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли ширину</span> и <span
+            class="hl-text">высоту четырёхугольника</span>, затем <span class="hl-text">выводит в консоль
+            четырёхугольник из символа звёздочки</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите ширину: <span class="input">5</span>
@@ -212,7 +223,9 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 18.4</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли ширину</span> и <span class="hl-text">высоту четырёхугольника</span>, затем <span class="hl-text">выводит в консоль полый четырёхугольник из символа звёздочки</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли ширину</span> и <span
+            class="hl-text">высоту четырёхугольника</span>, затем <span class="hl-text">выводит в консоль полый
+            четырёхугольник из символа звёздочки</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите ширину: <span class="input">5</span>
@@ -225,7 +238,9 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 18.5</h2>
-        <p>Напишите программу, которая <span class="hl-text">использует цикл <code class="python"><b>for</b></code> внутри другого цикла</span> <code class="python"><b>for</b></code> и <span class="hl-text">рисует в консоли прямоугольный треугольник из чисел</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">использует цикл <code class="python"><b>for</b></code>
+            внутри другого цикла</span> <code class="python"><b>for</b></code> и <span class="hl-text">рисует в консоли
+            прямоугольный треугольник из чисел</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>0 1 2 3
@@ -236,7 +251,9 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 18.6</h2>
-        <p>Напишите программу, которая <span class="hl-text">использует цикл <code class="python"><b>for</b></code> внутри другого цикла</span> <code class="python"><b>for</b></code> и <span class="hl-text">рисует в консоли прямоугольный треугольник из чисел</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">использует цикл <code class="python"><b>for</b></code>
+            внутри другого цикла</span> <code class="python"><b>for</b></code> и <span class="hl-text">рисует в консоли
+            прямоугольный треугольник из чисел</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>      3
@@ -256,15 +273,21 @@
         </p>
 
         <p>Выбор <span class="hl-text">пункта 1</span>:
-          <br>— <span class="hl-text">Выводит в консоль</span> <code><span class="string"><b>"На ваш телефон был отправлен код доступа. Введите его: "</b></span></code> и <span class="hl-text">запрашивает с консоли код</span>.
-          <br>— Если верно указан код доступа, то <span class="hl-text">запрашивает с консоли новый логин</span> и <span class="hl-text">пароль</span>, затем <span class="hl-text">возвращает в главное меню</span>.
-          <br>— Если неверно указан код доступа, то <span class="hl-text">снова запрашивает с консоли код доступа</span>.
+          <br>— <span class="hl-text">Выводит в консоль</span>
+          <code><span class="string"><b>"На ваш телефон был отправлен код доступа. Введите его: "</b></span></code> и
+          <span class="hl-text">запрашивает с консоли код</span>.
+          <br>— Если верно указан код доступа, то <span class="hl-text">запрашивает с консоли новый логин</span> и <span
+            class="hl-text">пароль</span>, затем <span class="hl-text">возвращает в главное меню</span>.
+          <br>— Если неверно указан код доступа, то <span class="hl-text">снова запрашивает с консоли код
+            доступа</span>.
         </p>
 
         <p>Выбор <span class="hl-text">пункта 2</span>:
           <br>— <span class="hl-text">Запрашивает с консоли логин</span> и <span class="hl-text">пароль</span>.
           <br>— Если логин и пароль неверные, то <span class="hl-text">возвращает в главное меню</span>.
-          <br>— Если логин и пароль верные, то <span class="hl-text">выводит в консоль</span> <code><span class="string"><b>"Добро пожаловать &ltлогин&gt"</b></span></code> и <span class="hl-text">выводит в консоль меню управления</span>.
+          <br>— Если логин и пароль верные, то <span class="hl-text">выводит в консоль</span>
+          <code><span class="string"><b>"Добро пожаловать {логин}"</b></span></code> и <span class="hl-text">выводит
+            в консоль меню управления</span>.
         </p>
 
         <h3>Меню управления:</h3>
@@ -304,13 +327,13 @@
       button.innerHTML = `
         <svg width="15" height="15" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="icon-sm"><path fill-rule="evenodd" clip-rule="evenodd" d="M18.0633 5.67375C18.5196 5.98487 18.6374 6.607 18.3262 7.06331L10.8262 18.0633C10.6585 18.3093 10.3898 18.4678 10.0934 18.4956C9.79688 18.5234 9.50345 18.4176 9.29289 18.2071L4.79289 13.7071C4.40237 13.3166 4.40237 12.6834 4.79289 12.2929C5.18342 11.9023 5.81658 11.9023 6.20711 12.2929L9.85368 15.9394L16.6738 5.93664C16.9849 5.48033 17.607 5.36263 18.0633 5.67375Z" fill="currentColor"></path></svg>Copied!
     `;
-      setTimeout(function() {
+      setTimeout(function () {
         button.innerHTML = originalHTML;
       }, 2000);
     }
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       const codeBlocks = document.querySelectorAll('code.python');
-      codeBlocks.forEach(function(codeBlock, index) {
+      codeBlocks.forEach(function (codeBlock, index) {
         let innerHTML = codeBlock.innerHTML;
         console.log(index, innerHTML);
         // STRING
