--- a/Урок 15-20. Циклы/Python - PT19-20.html
+++ b/Урок 15-20. Циклы/Python - PT19-20.html
@@ -4,7 +4,9 @@
   <title>Python - PT19-20</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #CCCCCC 0%, #BFBFBF 52%, #C9C9C9 100%);
@@ -127,22 +129,29 @@
 </code></pre>
         </div>
 
-        <p>В программе есть две роли - <span class="hl-text">клиент</span> и <span class="hl-text">администратор</span>. Условимся, что на всю программу у нас может быть только <span class="hl-text">один клиент</span> и только <span class="hl-text">один администратор</span>.</p>
+        <p>В программе есть две роли - <span class="hl-text">клиент</span> и <span class="hl-text">администратор</span>.
+          Условимся, что на всю программу у нас может быть только <span class="hl-text">один клиент</span> и только
+          <span class="hl-text">один администратор</span>.
+        </p>
         <p>Выбор <span class="hl-text">пункта 1</span>:
-          <br>— Программа <span class="hl-text">запрашивает с консоли логин</span>, <span class="hl-text">пароль</span>, <span class="hl-text">имя</span>, <span class="hl-text">фамилию</span>, <code><span class="number"><b>16</b></span></code>-<span class="hl-text">значный номер карты</span> и <span class="hl-text">CVV/CVC код</span>.
+          <br>— Программа <span class="hl-text">запрашивает с консоли логин</span>, <span class="hl-text">пароль</span>,
+          <span class="hl-text">имя</span>, <span class="hl-text">фамилию</span>,
+          <code><span class="number"><b>16</b></span></code>-<span class="hl-text">значный номер карты</span> и <span
+            class="hl-text">CVV/CVC код</span>.
           <br>— Программа <span class="hl-text">заменяет данные старого клиента</span> на новые данные.
           <br>— Возвращается в <span class="hl-text">меню входа</span>.
         </p>
 
         <p>Выбор <span class="hl-text">пункта 2</span>:
-          <br>— Программа <span class="hl-text">запрашивает с консоли логин</span> и <span class="hl-text">пароль</span>.
+          <br>— Программа <span class="hl-text">запрашивает с консоли логин</span> и <span
+            class="hl-text">пароль</span>.
           <br>— Если вводятся данные клиента, то <span class="hl-text">показывается меню клиента</span>.
           <br>— Если вводятся данные администратора, то <span class="hl-text">показывается меню администратора</span>.
         </p>
 
         <h3>Меню клиента:</h3>
         <div class="console">
-          <pre><code>Пользователь: &ltлогин&gt    Роль: Клиент
+          <pre><code>Пользователь: {логин}    Роль: Клиент
 1. Мой кабинет
 2. Магазин
 3. Выйти из аккаунта
@@ -150,14 +159,16 @@
 </code></pre>
         </div>
         <p>В <span class="hl-text">меню клиента</span> выбор <span class="hl-text">пункта 1</span>:
-          <br>— Программа <span class="hl-text">выводит в консоль идентификатор клиента</span>, <span class="hl-text">имя</span>, <span class="hl-text">фамилию</span>, <span class="hl-text">текущий баланс аккаунта</span>.
+          <br>— Программа <span class="hl-text">выводит в консоль идентификатор клиента</span>, <span
+            class="hl-text">имя</span>, <span class="hl-text">фамилию</span>, <span class="hl-text">текущий баланс
+            аккаунта</span>.
           <br>— Программа <span class="hl-text">выводит в консоль меню</span>:
         </p>
         <div class="console">
-          <pre><code>Идентификатор: &ltстрока&gt
-Имя: &ltстрока&gt
-Фамилия: &ltстрока&gt
-Текущий баланс: &ltчисло&gt
+          <pre><code>Идентификатор: {идентификатор}
+Имя: {имя}
+Фамилия: {фамилия}
+Текущий баланс: {баланс}
 =============================
 1. Изменить имя
 2. Изменить фамилию
@@ -168,21 +179,28 @@
 </code></pre>
         </div>
         <p>В <span class="hl-text">меню кабинета</span> выбор <span class="hl-text">пункта 3</span>:
-          <br>— Программа <span class="hl-text">запрашивает с консоли <code><span class="number"><b>16</b></span></code>-значный номер карты</span> и <span class="hl-text">CVV/CVC код</span>.
-          <br>— Если они совпадают с данными клиента, то программа <span class="hl-text">запрашивает с консоли сумму</span> и <span class="hl-text">добавляет на баланс карты</span>. В противном случае программа <span class="hl-text">возвращает в меню кабинета</span>.
+          <br>— Программа <span class="hl-text">запрашивает с консоли
+            <code><span class="number"><b>16</b></span></code>-значный номер карты</span> и <span
+            class="hl-text">CVV/CVC код</span>.
+          <br>— Если они совпадают с данными клиента, то программа <span class="hl-text">запрашивает с консоли
+            сумму</span> и <span class="hl-text">добавляет на баланс карты</span>. В противном случае программа <span
+            class="hl-text">возвращает в меню кабинета</span>.
         </p>
         <p>Выбор <span class="hl-text">пункта 4</span>:
-          <br>— Программа <span class="hl-text">запрашивает с консоли <code><span class="number"><b>16</b></span></code>-значный номер карты</span> и <span class="hl-text">CVV/CVC код</span>.
+          <br>— Программа <span class="hl-text">запрашивает с консоли
+            <code><span class="number"><b>16</b></span></code>-значный номер карты</span> и <span
+            class="hl-text">CVV/CVC код</span>.
           <br>— Программа <span class="hl-text">заменяет данные карты на введённые</span>.
         </p>
         <p>Выбор <span class="hl-text">пункта 5</span>:
           <br>— Программа <span class="hl-text">возвращается в меню клиента</span>.
         </p>
         <p>В <span class="hl-text">меню клиента</span> выбор <span class="hl-text">пункта 2</span>:
-          <br>— Программа <span class="hl-text">выводит в консоль следующие данные</span> и <span class="hl-text">меню магазина</span>:
+          <br>— Программа <span class="hl-text">выводит в консоль следующие данные</span> и <span class="hl-text">меню
+            магазина</span>:
         </p>
         <div class="console">
-          <pre><code>Ваш текущий баланс: &ltчисло&gt
+          <pre><code>Ваш текущий баланс: {баланс}
 ====================================================
 1. Вернуться
 2. Завершить программу
@@ -195,11 +213,13 @@
         </div>
         <p>Выбор <span class="hl-text">товара</span>:
           <br>— Программа <span class="hl-text">запрашивает с консоли количество</span>.
-          <br>— Если товара достаточно, то <span class="hl-text">уменьшает количество товара</span>, <span class="hl-text">вычисляет стоимость</span> и <span class="hl-text">вычитывает из текущего баланса карты</span>.
+          <br>— Если товара достаточно, то <span class="hl-text">уменьшает количество товара</span>, <span
+            class="hl-text">вычисляет стоимость</span> и <span class="hl-text">вычитывает из текущего баланса
+            карты</span>.
         </p>
         <h3>Меню администратора:</h3>
         <div class="console">
-          <pre><code>Пользователь: &ltлогин&gt    Роль: Администратор
+          <pre><code>Пользователь: {логин}    Роль: Администратор
 1. Показать данные клиента
 2. Магазин
 3. Выйти из аккаунта
@@ -208,10 +228,12 @@
         </div>
         <p>Выбор <span class="hl-text">пункта 1</span>:
           <br>— Программа <span class="hl-text">запрашивает с консоли идентификатор клиента</span>.
-          <br>— Если введённый идентификатор верный, то программа <span class="hl-text">выводит в консоль имя</span>, <span class="hl-text">фамилию</span>, <span class="hl-text">текущий баланс</span>.
+          <br>— Если введённый идентификатор верный, то программа <span class="hl-text">выводит в консоль имя</span>,
+          <span class="hl-text">фамилию</span>, <span class="hl-text">текущий баланс</span>.
         </p>
         <p>Выбор <span class="hl-text">пункта 2</span>:
-          <br>— Программа <span class="hl-text">выводит в консоль следующие данные</span> и <span class="hl-text">меню</span>:
+          <br>— Программа <span class="hl-text">выводит в консоль следующие данные</span> и <span
+            class="hl-text">меню</span>:
         </p>
         <div class="console">
           <pre><code>1. Вернуться
@@ -225,12 +247,13 @@
         </div>
         <p>Выбор <span class="hl-text">товара</span>:
           <br>— Программа <span class="hl-text">делает копию данных выбранного товара</span>.
-          <br>— <span class="hl-text">Выводит в консоль данные выбранного товара</span> и <span class="hl-text">данные копии</span>.
+          <br>— <span class="hl-text">Выводит в консоль данные выбранного товара</span> и <span class="hl-text">данные
+            копии</span>.
           <br>— <span class="hl-text">Выводит в консоль меню изменения товара</span>:
         </p>
         <div class="console">
-          <pre><code>СТАРЫЕ ДАННЫЕ: Хлеб - количество: 100, цена: 0.4
-НОВЫЕ ДАННЫЕ: Хлеб - количество: 100, цена: 0.4
+          <pre><code>СТАРЫЕ ДАННЫЕ: {название_товара} - количество: {количество}, цена: {цена}
+НОВЫЕ ДАННЫЕ: {название_товара} - количество: {количество}, цена: {цена}
 ====================================================
 1. Изменить название
 2. Изменить количество
@@ -239,7 +262,10 @@
 5. Вернуться
 </code></pre>
         </div>
-        <p><span class="hl-text">Пункты 1</span>-<span class="hl-text">3</span> меняют данные только у <span class="hl-text">копии</span>. При выборе <span class="hl-text">пункта 4</span> программа <span class="hl-text">проверяет</span>, в порядке ли данные у копии и, если да, то <span class="hl-text">меняет старые данные на изменённые</span>.</p>
+        <p><span class="hl-text">Пункты 1</span>-<span class="hl-text">3</span> меняют данные только у <span
+            class="hl-text">копии</span>. При выборе <span class="hl-text">пункта 4</span> программа <span
+            class="hl-text">проверяет</span>, в порядке ли данные у копии и, если да, то <span class="hl-text">меняет
+            старые данные на изменённые</span>.</p>
       </div>
     </div>
   </div>
