--- a/Урок 21-27. Строки. Списки/Python - PT22.html
+++ b/Урок 21-27. Строки. Списки/Python - PT22.html
@@ -4,7 +4,9 @@
   <title>Python - PT22</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #CCCCCC 0%, #BFBFBF 52%, #C9C9C9 100%);
@@ -121,7 +123,8 @@
     <div class="right-block">
       <div class="right-rect">
         <h2>Практическое Задание 22.1</h2>
-        <p>Напишите программу, которая <span class="hl-text">реализует понятие <span class="string"><b>"Срезы"</b></span> для строк</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">реализует понятие <span
+              class="string"><b>"Срезы"</b></span> для строк</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">Test String</span>
@@ -134,7 +137,9 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 22.2</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span class="hl-text">символ, который нужно удалить</span>. Затем программа <span class="hl-text">выводит в консоль исходную строку с удалёнными символами</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span
+            class="hl-text">символ, который нужно удалить</span>. Затем программа <span class="hl-text">выводит в
+            консоль исходную строку с удалёнными символами</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">abcabcdabc abcd</span>
@@ -145,7 +150,10 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 22.3</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span class="hl-text">символ, который нужно заменить</span>. Затем <span class="hl-text">запрашивает с консоли символ замены</span>. После этого программа <span class="hl-text">выводит в консоль исходную строку с заменёнными символами</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span
+            class="hl-text">символ, который нужно заменить</span>. Затем <span class="hl-text">запрашивает с консоли
+            символ замены</span>. После этого программа <span class="hl-text">выводит в консоль исходную строку с
+            заменёнными символами</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">abcabcdabc abcd</span>
@@ -157,7 +165,9 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 22.4</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span class="hl-text">символ, который нужно удалить</span>. Затем программа <span class="hl-text">выводит в консоль исходную строку с удалённым вторым по счёту символом</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span
+            class="hl-text">символ, который нужно удалить</span>. Затем программа <span class="hl-text">выводит в
+            консоль исходную строку с удалённым вторым по счёту символом</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">abcabcdabc abcd</span>
@@ -168,7 +178,10 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 22.5</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span class="hl-text">символ для поиска</span>. Программа должна <span class="hl-text">найти все вхождения символа</span> и <span class="hl-text">добавить их индексы в новую строку</span>, затем <span class="hl-text">вывести в консоль</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли строку</span> и <span
+            class="hl-text">символ для поиска</span>. Программа должна <span class="hl-text">найти все вхождения
+            символа</span> и <span class="hl-text">добавить их индексы в новую строку</span>, затем <span
+            class="hl-text">вывести в консоль</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите строку: <span class="input">abcabcdabc abcd</span>
