--- a/Урок 21-27. Строки. Списки/Python - PT26.html
+++ b/Урок 21-27. Строки. Списки/Python - PT26.html
@@ -4,7 +4,9 @@
   <title>Python - PT26</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #CCCCCC 0%, #BFBFBF 52%, #C9C9C9 100%);
@@ -125,14 +127,26 @@
         </div>
         </p>
 
-        <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">показывает в консоли все оценки</span>.</p>
-        <p>При выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">запрашивает с консоли оценки до тех пор, пока не введут пустую строку</span>. Из введённых данных программа должна <span class="hl-text">формировать список</span>.</p>
-        <p>При выборе <span class="hl-text">пункта 3</span> программа <span class="hl-text">запрашивает с консоли оценки до тех пор, пока не введут пустую строку</span>. Введённые данные программа должна <span class="hl-text">добавлять список</span>.</p>
-        <p>При выборе <span class="hl-text">пункта 4</span> программа <span class="hl-text">запрашивает с консоли индекс</span> и <span class="hl-text">удаляет оценку по индексу</span>.</p>
-        <p>При выборе <span class="hl-text">пункта 5</span> программа <span class="hl-text">запрашивает с консоли индекс</span>, затем <span class="hl-text">показывает в консоли оценку под выбранным индексом</span>. После этого программа <span class="hl-text">запрашивает с консоли новую оценку</span> и <span class="hl-text">запрашивает подтверждение на изменение</span>.</p>
-        <p>При выборе <span class="hl-text">пункта 6</span> программа <span class="hl-text">запрашивает с консоли оценку</span>, затем <span class="hl-text">показывает в консоли количество указанной оценки</span>.</p>
-        <p>При выборе <span class="hl-text">пункта 7</span> программа <span class="hl-text">выводит в консоль среднюю арифметическую оценку</span>.</p>
-        <p>При выборе <span class="hl-text">пункта 8</span> программа <span class="hl-text">выводит в консоль медианную оценку</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">показывает в консоли все
+            оценки</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">запрашивает с консоли оценки
+            до тех пор, пока не введут пустую строку</span>. Из введённых данных программа должна <span
+            class="hl-text">формировать список</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 3</span> программа <span class="hl-text">запрашивает с консоли оценки
+            до тех пор, пока не введут пустую строку</span>. Введённые данные программа должна <span
+            class="hl-text">добавлять список</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 4</span> программа <span class="hl-text">запрашивает с консоли
+            индекс</span> и <span class="hl-text">удаляет оценку по индексу</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 5</span> программа <span class="hl-text">запрашивает с консоли
+            индекс</span>, затем <span class="hl-text">показывает в консоли оценку под выбранным индексом</span>. После
+          этого программа <span class="hl-text">запрашивает с консоли новую оценку</span> и <span
+            class="hl-text">запрашивает подтверждение на изменение</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 6</span> программа <span class="hl-text">запрашивает с консоли
+            оценку</span>, затем <span class="hl-text">показывает в консоли количество указанной оценки</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 7</span> программа <span class="hl-text">выводит в консоль среднюю
+            арифметическую оценку</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 8</span> программа <span class="hl-text">выводит в консоль медианную
+            оценку</span>.</p>
       </div>
     </div>
   </div>
