--- a/Урок 28-34. Функции. Модули/Python - HW30.html
+++ b/Урок 28-34. Функции. Модули/Python - HW30.html
@@ -4,7 +4,9 @@
   <title>Python - HW30</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #333333 0%, #404040 57%, #363636 100%);
@@ -187,17 +189,33 @@
     <div class="right-block">
       <div class="right-rect">
         <h2><strong>Примечание</strong></h2>
-        <p>Оформляйте ввод и вывод данных в соответствии с примерами заданий. Используйте только то, что было пройденно до этого урока включительно. Не используйте в условии оператор <code class="python"><b>in</b></code>. Не используйте готовые методы, только если в заданиях не говорится об использовании тех или иных методов. Методы <code class="python"><b>format()</b></code>, <code class="python"><b>split()</b></code> и <code class="python"><b>append()</b></code> использовать можно. Не используйте срезы.</p>
+        <p>Оформляйте ввод и вывод данных в соответствии с примерами заданий. Используйте только то, что было пройдено
+          до этого урока включительно. Не используйте в условии оператор <code class="python"><b>in</b></code>. Не
+          используйте готовые методы, только если в заданиях не говорится об использовании тех или иных методов. Методы
+          <code class="python"><b>format()</b></code>, <code class="python"><b>split()</b></code> и <code
+            class="python"><b>append()</b></code> использовать можно. Не используйте срезы.
+        </p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 30.1</h2>
-        <p>Напишите функцию <span class="function"><b>generate_password</b></span>, которая <span class="hl-text">принимает необязательную длину</span> (по умолчанию <span class="number"><b>8</b></span>) и <span class="number"><b>3</b></span> <span class="hl-text">необязательных параметра</span> (по умолчанию <code class="python"><b>False</b></code>), которые принимают только <code class="python"><b>True</b></code> или <code class="python"><b>False</b></code> - <span class="hl-text">содержит цифры</span>, <span class="hl-text">заглавные буквы</span>, <span class="hl-text">специальные символы</span>. Функция должна <span class="hl-text">сформировать строку пароля по указанным параметрам</span> и <span class="hl-text">вернуть её</span>.</p>
+        <p>Напишите функцию <span class="function"><b>generate_password</b></span>, которая <span
+            class="hl-text">принимает необязательную длину</span> (по умолчанию <span class="number"><b>8</b></span>) и
+          <span class="number"><b>3</b></span> <span class="hl-text">необязательных параметра</span> (по умолчанию <code
+            class="python"><b>False</b></code>), которые принимают только <code class="python"><b>True</b></code> или
+          <code class="python"><b>False</b></code> - <span class="hl-text">содержит цифры</span>, <span
+            class="hl-text">заглавные буквы</span>, <span class="hl-text">специальные символы</span>. Функция должна
+          <span class="hl-text">сформировать строку пароля по указанным параметрам</span> и <span
+            class="hl-text">вернуть её</span>.
+        </p>
         <h3>Подсказка:</h3>
         <p>Решение можете взять из <span class="hl-text">Домашнего Задания 22.8</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 30.2</h2>
-        <p>Напишите функцию <span class="function"><b>convert_seconds</b></span>, которая <span class="hl-text">принимает секунды</span> и <span class="hl-text">необязательный символ</span> (по умолчанию <span class="string"><b>"m"</b></span>). Функция должна <span class="hl-text">перевести секунды</span> и <span class="hl-text">вернуть результат</span>. Переводы зависят от необязательного символа:
+        <p>Напишите функцию <span class="function"><b>convert_seconds</b></span>, которая <span
+            class="hl-text">принимает секунды</span> и <span class="hl-text">необязательный символ</span> (по умолчанию
+          <span class="string"><b>"m"</b></span>). Функция должна <span class="hl-text">перевести секунды</span> и <span
+            class="hl-text">вернуть результат</span>. Переводы зависят от необязательного символа:
           <br>— Если символ <span class="string"><b>"m"</b></span>, то перевод в <span class="hl-text">минуты</span>
           <br>— Если символ <span class="string"><b>"h"</b></span>, то перевод в <span class="hl-text">часы</span>
           <br>— Если символ <span class="string"><b>"d"</b></span>, то перевод в <span class="hl-text">дни</span>
@@ -205,21 +223,40 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 30.3</h2>
-        <p>Напишите функцию <span class="function"><b>find_str_index</b></span>, которая <span class="hl-text">принимает строку</span>, <span class="hl-text">символ</span> и <span class="hl-text">необязательный индекс</span> (по умолчанию <span class="number"><b>0</b></span>). Функция должна <span class="hl-text">вернуть индекс первого вхождения символа в строку, начиная поиск с указанного индекса</span>. Если индекс не найден, то функция должна <span class="hl-text">вернуть</span> <span class="grey"><b>-</span><span class="number">1</span></b>.</p>
+        <p>Напишите функцию <span class="function"><b>find_str_index</b></span>, которая <span class="hl-text">принимает
+            строку</span>, <span class="hl-text">символ</span> и <span class="hl-text">необязательный индекс</span> (по
+          умолчанию <span class="number"><b>0</b></span>). Функция должна <span class="hl-text">вернуть индекс первого
+            вхождения символа в строку, начиная поиск с указанного индекса</span>. Если индекс не найден, то функция
+          должна <span class="hl-text">вернуть</span> <span class="grey"><b>-</span><span class="number">1</span></b>.
+        </p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 30.4</h2>
-        <p>Напишите функцию <span class="function"><b>users_expiration_check</b></span>, которая <span class="hl-text">принимает список пользователей</span>, <span class="hl-text">необязательные количество дней как число</span> (по умолчанию <span class="number"><b>30</b></span>) и <span class="hl-text">режим как строку</span> (по умолчанию <span class="string"><b>"safe"</b></span>). Функция должна <span class="hl-text">найти всех пользователей, у которых число дней с последнего захода больше, чем указано во втором параметре функции</span>, и <span class="hl-text">действовать в зависимости от режима</span>:
-          <br>— <span class="hl-text"><b>safe:</b></span> не изменяет список пользователей, возвращает список из найденных индексов пользователей
-          <br>— <span class="hl-text"><b>pop:</b></span> добавляет найденного пользователя в новый список, удаляет из списка пользователей, возвращает новый список
-          <br>— <span class="hl-text"><b>remove:</b></span> удаляет из списка пользователей найденных пользователей, возвращает пустой список
+        <p>Напишите функцию <span class="function"><b>users_expiration_check</b></span>, которая <span
+            class="hl-text">принимает список пользователей</span>, <span class="hl-text">необязательные количество дней
+            как число</span> (по умолчанию <span class="number"><b>30</b></span>) и <span class="hl-text">режим как
+            строку</span> (по умолчанию <span class="string"><b>"safe"</b></span>). Функция должна <span
+            class="hl-text">найти всех пользователей, у которых число дней с последнего захода больше, чем указано во
+            втором параметре функции</span>, и <span class="hl-text">действовать в зависимости от режима</span>:
+          <br>— <span class="hl-text"><b>safe:</b></span> не изменяет список пользователей, возвращает список из
+          найденных индексов пользователей
+          <br>— <span class="hl-text"><b>pop:</b></span> добавляет найденного пользователя в новый список, удаляет из
+          списка пользователей, возвращает новый список
+          <br>— <span class="hl-text"><b>remove:</b></span> удаляет из списка пользователей найденных пользователей,
+          возвращает пустой список
         </p>
-        <p>Пользователь это список, у которого по индексу <span class="number"><b>0</b></span> находится <span class="hl-text">логин</span>, по индексу <span class="number"><b>1</b></span> находится <span class="hl-text">пароль</span>, по индексу <span class="number"><b>2</b></span> находится <span class="hl-text">число дней с последнего захода</span>.</p>
+        <p>Пользователь это список, у которого по индексу <span class="number"><b>0</b></span> находится <span
+            class="hl-text">логин</span>, по индексу <span class="number"><b>1</b></span> находится <span
+            class="hl-text">пароль</span>, по индексу <span class="number"><b>2</b></span> находится <span
+            class="hl-text">число дней с последнего захода</span>.</p>
 
         <h3>Тестовый список пользователей:</h3>
         <div class="console">
-          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
-              <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
+          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15"
+              height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
+              <path fill="currentColor" fill-rule="evenodd"
+                d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z"
+                clip-rule="evenodd"></path>
             </svg>
             Copy code</button>
           <pre><code class="python">user_list = [
@@ -248,11 +285,17 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 30.5</h2>
-        <p><span class="hl-text">Teston Lebra</span> написал фронтенд программы. Но другой программист не смог составить бэкенд. <span class="hl-text">Опишите только функции, соблюдая их сигнатуру</span>. Фронтенд трогать <span class="hl-text">нельзя</span>. После описания всех функций, программа должна работать <span class="hl-text">корректно</span>.</p>
+        <p><span class="hl-text">Teston Lebra</span> написал фронтенд программы. Но другой программист не смог составить
+          бэкенд. <span class="hl-text">Опишите только функции, соблюдая их сигнатуру</span>. Фронтенд трогать <span
+            class="hl-text">нельзя</span>. После описания всех функций, программа должна работать <span
+            class="hl-text">корректно</span>.</p>
         <h3>Код:</h3>
         <div class="console">
-          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
-              <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
+          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15"
+              height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
+              <path fill="currentColor" fill-rule="evenodd"
+                d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z"
+                clip-rule="evenodd"></path>
             </svg>
             Copy code</button>
           <pre><code class="python">def create_account(login: str, password: str, balance: int) -> list:
@@ -336,7 +379,7 @@ def get_user_subscribe(account: list) -> bool:
     """
     Функция возвращает статус подписки из полученного аккаунта.
     :param account: Аккаунт в виде списка.
-    :return: Статус подписки в виде булевого значения.
+    :return: Статус подписки в виде булево значения.
     """
     pass
 
@@ -531,11 +574,15 @@ while not is_exit:
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 30.6</h2>
-        <p>Измените указанный ниже код так, чтобы <span class="hl-text">функции перестали использовать глобальную переменную</span>.</p>
+        <p>Измените указанный ниже код так, чтобы <span class="hl-text">функции перестали использовать глобальную
+            переменную</span>.</p>
         <h3>Код:</h3>
         <div class="console">
-          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
-              <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
+          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15"
+              height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
+              <path fill="currentColor" fill-rule="evenodd"
+                d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z"
+                clip-rule="evenodd"></path>
             </svg>
             Copy code</button>
           <pre><code class="python">student_list = list()
@@ -655,7 +702,9 @@ while True:
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 30.7 (Необязательное)</h2>
-        <p>Измените исходный код из <span class="hl-text">Домашнего Задания 30.6</span> таким образом, чтобы <span class="grey"><b>student_list</b></span> перестал быть глобальной переменной, используя <span class="hl-text">замыкание</span>.</p>
+        <p>Измените исходный код из <span class="hl-text">Домашнего Задания 30.6</span> таким образом, чтобы <span
+            class="grey"><b>student_list</b></span> перестал быть глобальной переменной, используя <span
+            class="hl-text">замыкание</span>.</p>
       </div>
     </div>
   </div>
@@ -676,13 +725,13 @@ while True:
       button.innerHTML = `
         <svg width="15" height="15" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="icon-sm"><path fill-rule="evenodd" clip-rule="evenodd" d="M18.0633 5.67375C18.5196 5.98487 18.6374 6.607 18.3262 7.06331L10.8262 18.0633C10.6585 18.3093 10.3898 18.4678 10.0934 18.4956C9.79688 18.5234 9.50345 18.4176 9.29289 18.2071L4.79289 13.7071C4.40237 13.3166 4.40237 12.6834 4.79289 12.2929C5.18342 11.9023 5.81658 11.9023 6.20711 12.2929L9.85368 15.9394L16.6738 5.93664C16.9849 5.48033 17.607 5.36263 18.0633 5.67375Z" fill="currentColor"></path></svg>Copied!
     `;
-      setTimeout(function() {
+      setTimeout(function () {
         button.innerHTML = originalHTML;
       }, 2000);
     }
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       const codeBlocks = document.querySelectorAll('code.python');
-      codeBlocks.forEach(function(codeBlock, index) {
+      codeBlocks.forEach(function (codeBlock, index) {
         let innerHTML = codeBlock.innerHTML;
         console.log(index, innerHTML);
         // STRING
