--- a/Урок 28-34. Функции. Модули/Python - PT29.html
+++ b/Урок 28-34. Функции. Модули/Python - PT29.html
@@ -4,7 +4,9 @@
   <title>Python - PT29</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #CCCCCC 0%, #BFBFBF 52%, #C9C9C9 100%);
@@ -186,16 +188,29 @@
     <div class="right-block">
       <div class="right-rect">
         <h2>Практическое Задание 29.1</h2>
-        <p>Напишите функцию <span class="function"><b>draw_quad</b></span>, которая <span class="hl-text">принимает ширину</span>, <span class="hl-text">высоту</span> и <span class="hl-text">символ</span>. По умолчанию <span class="hl-text">третий параметр равен</span> <span class="string"><b>"*"</b></span>. Функция должна <span class="hl-text">рисовать в консоли четырёхугольник из указанного символа</span> и <span class="hl-text">указанного размера</span>.</p>
+        <p>Напишите функцию <span class="function"><b>draw_quad</b></span>, которая <span class="hl-text">принимает
+            ширину</span>, <span class="hl-text">высоту</span> и <span class="hl-text">символ</span>. По умолчанию <span
+            class="hl-text">третий параметр равен</span> <span class="string"><b>"*"</b></span>. Функция должна <span
+            class="hl-text">рисовать в консоли четырёхугольник из указанного символа</span> и <span
+            class="hl-text">указанного размера</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 29.2</h2>
-        <p>В магазине <span class="hl-text">"Всё Не Дорого"</span> ввели кэшбек от стоимости покупки. Поэтому им потребовалась универсальная функция <span class="function"><b>get_cashback</b></span>, которая <span class="hl-text">принимает необязательную скидку</span> (по умолчанию <span class="number"><b>5%</b></span>) и <span class="hl-text">список цен</span> (числа). Затем функция должна <span class="hl-text">возвращать сумму кэшбека</span>.</p>
+        <p>В магазине <span class="hl-text">"Всё Не Дорого"</span> ввели кэшбэк от стоимости покупки. Поэтому им
+          потребовалась универсальная функция <span class="function"><b>get_cashback</b></span>, которая <span
+            class="hl-text">принимает необязательную скидку</span> (по умолчанию <span class="number"><b>5%</b></span>)
+          и <span class="hl-text">список цен</span> (числа). Затем функция должна <span class="hl-text">возвращать сумму
+            кэшбэка</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 29.3</h2>
-        <p>Напишите функцию <span class="function"><b>generate_list</b></span>, которая <span class="hl-text">принимает необязательную строку чисел через пробел</span> (по умолчанию <span class="string"><b>"10 20 30 40 50"</b></span>). Функция должна <span class="hl-text">сформировать список из последовательности чисел. Затем функция должна <span class="hl-text">вернуть полученный список</span>.</p>
-        <p>Напишите функцию <span class="function"><b>show_list</b></span>, которая <span class="hl-text">принимает список</span>. Функция должна <span class="hl-text">вывести в консоль в одну строчку через пробел данные списка</span>.</p>
+        <p>Напишите функцию <span class="function"><b>generate_list</b></span>, которая <span class="hl-text">принимает
+            необязательную строку чисел через пробел</span> (по умолчанию <span class="string"><b>"10 20 30 40
+              50"</b></span>). Функция должна <span class="hl-text">сформировать список из последовательности чисел.
+            Затем функция должна <span class="hl-text">вернуть полученный список</span>.</p>
+        <p>Напишите функцию <span class="function"><b>show_list</b></span>, которая <span class="hl-text">принимает
+            список</span>. Функция должна <span class="hl-text">вывести в консоль в одну строчку через пробел данные
+            списка</span>.</p>
         <p>После этого реализуйте меню, которое будет использовать созданные функции:
         <div class="console">
           <pre><code>1. Показать данные списка
@@ -204,23 +219,41 @@
         </div>
         </p>
 
-        <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">показывает в консоли список чисел</span>.</p>
-        <p>При выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">запрашивает с консоли числа через пробел</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">показывает в консоли список
+            чисел</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">запрашивает с консоли числа
+            через пробел</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 29.4</h2>
-        <p>Напишите функцию <span class="function"><b>start_game</b></span>, которая <span class="hl-text">принимает сложность, как необязательное число от <span class="number"><b>1</b></span> до <span class="number"><b>3</b></span> включительно</span> (по умолчанию <span class="number"><b>1</b></span>), и <span class="hl-text">запускает игру</span> <span class="string"><b>"Угадай число"</b></span>. Функция должна <span class="hl-text">загадать число в диапазоне в зависимости от сложности</span> и <span class="hl-text">запрашивать с консоли ввод числа</span>. Если введённое число не совпадает, то функция <span class="hl-text">выводит в консоль</span> <span class="string"><b>"Загаданное число больше."</b></span> или <span class="string"><b>"Загаданное число меньше."</b></span> и затем <span class="hl-text">снова запрашивает ввод с консоли</span>. Если введённое число совпало с загаднным, то функция должна <span class="hl-text">вывести в консоль количество попыток, потраченные на угадывание</span>.</p>
+        <p>Напишите функцию <span class="function"><b>start_game</b></span>, которая <span class="hl-text">принимает
+            сложность, как необязательное число от <span class="number"><b>1</b></span> до <span
+              class="number"><b>3</b></span> включительно</span> (по умолчанию <span class="number"><b>1</b></span>), и
+          <span class="hl-text">запускает игру</span> <span class="string"><b>"Угадай число"</b></span>. Функция должна
+          <span class="hl-text">загадать число в диапазоне в зависимости от сложности</span> и <span
+            class="hl-text">запрашивать с консоли ввод числа</span>. Если введённое число не совпадает, то функция <span
+            class="hl-text">выводит в консоль</span> <span class="string"><b>"Загаданное число больше."</b></span> или
+          <span class="string"><b>"Загаданное число меньше."</b></span> и затем <span class="hl-text">снова запрашивает
+            ввод с консоли</span>. Если введённое число совпало с загаданным, то функция должна <span
+            class="hl-text">вывести в консоль количество попыток, потраченные на угадывание</span>.
+        </p>
         <p>Зависимость диапазона от сложности:
-          <br>— <span class="hl-text"><b>Сложность 1:</b></span> диапазон [<span class="number"><b>1</b></span>, <span class="number"><b>100</b></span>]
-          <br>— <span class="hl-text"><b>Сложность 2:</b></span> диапазон [<span class="number"><b>1</b></span>, <span class="number"><b>300</b></span>]
-          <br>— <span class="hl-text"><b>Сложность 3:</b></span> диапазон [<span class="number"><b>1</b></span>, <span class="number"><b>500</b></span>]
+          <br>— <span class="hl-text"><b>Сложность 1:</b></span> диапазон [<span class="number"><b>1</b></span>, <span
+            class="number"><b>100</b></span>]
+          <br>— <span class="hl-text"><b>Сложность 2:</b></span> диапазон [<span class="number"><b>1</b></span>, <span
+            class="number"><b>300</b></span>]
+          <br>— <span class="hl-text"><b>Сложность 3:</b></span> диапазон [<span class="number"><b>1</b></span>, <span
+            class="number"><b>500</b></span>]
         </p>
 
         <h3>Подсказка:</h3>
         <p>Используйте следующий код, чтобы генерировать числа:
         <div class="console">
-          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
-              <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
+          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15"
+              height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
+              <path fill="currentColor" fill-rule="evenodd"
+                d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z"
+                clip-rule="evenodd"></path>
             </svg>
             Copy code</button>
           <pre><code class="python">from random import randint  # Подключение модуля random и импорт функции randint
@@ -248,13 +281,13 @@ number = randint(start, end)  # Использование функции для
       button.innerHTML = `
         <svg width="15" height="15" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="icon-sm"><path fill-rule="evenodd" clip-rule="evenodd" d="M18.0633 5.67375C18.5196 5.98487 18.6374 6.607 18.3262 7.06331L10.8262 18.0633C10.6585 18.3093 10.3898 18.4678 10.0934 18.4956C9.79688 18.5234 9.50345 18.4176 9.29289 18.2071L4.79289 13.7071C4.40237 13.3166 4.40237 12.6834 4.79289 12.2929C5.18342 11.9023 5.81658 11.9023 6.20711 12.2929L9.85368 15.9394L16.6738 5.93664C16.9849 5.48033 17.607 5.36263 18.0633 5.67375Z" fill="currentColor"></path></svg>Copied!
     `;
-      setTimeout(function() {
+      setTimeout(function () {
         button.innerHTML = originalHTML;
       }, 2000);
     }
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       const codeBlocks = document.querySelectorAll('code.python');
-      codeBlocks.forEach(function(codeBlock, index) {
+      codeBlocks.forEach(function (codeBlock, index) {
         let innerHTML = codeBlock.innerHTML;
         console.log(index, innerHTML);
         // STRING
