--- a/Урок 35-36. Сортировка. Поиск/Python - HW36.html
+++ b/Урок 35-36. Сортировка. Поиск/Python - HW36.html
@@ -4,7 +4,9 @@
   <title>Python - HW36</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #333333 0%, #404040 57%, #363636 100%);
@@ -186,10 +188,15 @@
     <div class="right-block">
       <div class="right-rect">
         <h2><strong>Примечание</strong></h2>
-        <p>Оформляйте ввод и вывод данных. Используйте только то, что было пройденно до этого урока включительно. Не используйте в условии оператор <code class="python"><b>in</b></code>. Не используйте готовые методы, только если в заданиях не говорится об использовании тех или иных методов. Можно использовать <code><b>append()</b></code>, <code><b>split()</b></code>, <code class="python"><b>len()</b></code>, <code class="python"><b>sorted()</b></code>. Не используйте срезы.
+        <p>Оформляйте ввод и вывод данных. Используйте только то, что было пройдено до этого урока включительно. Не
+          используйте в условии оператор <code class="python"><b>in</b></code>. Не используйте готовые методы, только
+          если в заданиях не говорится об использовании тех или иных методов. Можно использовать
+          <code><b>append()</b></code>, <code><b>split()</b></code>, <code class="python"><b>len()</b></code>, <code
+            class="python"><b>sorted()</b></code>. Не используйте срезы.
         <p>
 
-        <p>Сайт с визуализацией сортировок: <a href="https://airtucha.github.io/SortVis/">https://airtucha.github.io/SortVis/</a></p>
+        <p>Сайт с визуализацией сортировок: <a
+            href="https://airtucha.github.io/SortVis/">https://airtucha.github.io/SortVis/</a></p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 36.1</h2>
@@ -202,7 +209,8 @@
         </div>
         </p>
 
-        <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">выводит в консоль всех сотрудников в формате</span>:
+        <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">выводит в консоль всех
+            сотрудников в формате</span>:
         <div class="console">
           <pre><code>Имя: {Имя}        Возраст: {Возраст}
 Имя: {Имя}        Возраст: {Возраст}
@@ -210,7 +218,8 @@
         </div>
         </p>
 
-        <p>При выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">сортирует копию списка по имени</span> и <span class="hl-text">выводит в консоль всех сотрудников в формате</span>:
+        <p>При выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">сортирует копию списка по
+            имени</span> и <span class="hl-text">выводит в консоль всех сотрудников в формате</span>:
         <div class="console">
           <pre><code>Имя: {Имя}        Возраст: {Возраст}
 Имя: {Имя}        Возраст: {Возраст}
@@ -218,7 +227,8 @@
         </div>
         </p>
 
-        <p>При выборе <span class="hl-text">пункта 3</span> программа <span class="hl-text">сортирует копию списка по возрасту</span> и <span class="hl-text">выводит в консоль всех сотрудников в формате</span>:
+        <p>При выборе <span class="hl-text">пункта 3</span> программа <span class="hl-text">сортирует копию списка по
+            возрасту</span> и <span class="hl-text">выводит в консоль всех сотрудников в формате</span>:
         <div class="console">
           <pre><code>Имя: {Имя}        Возраст: {Возраст}
 Имя: {Имя}        Возраст: {Возраст}
@@ -226,13 +236,20 @@
         </div>
         </p>
 
-        <p>При выборе <span class="hl-text">пункта 4 программа запрашивает с консоли Имя</span> и <span class="hl-text">Возраст</span>, затем <span class="hl-text">добавляет в список сотрудников данные в виде</span> <code><b>[<span class="string"> "Имя"</span>, <span class="number">&ltВозраст&gt </span>]</b></code>.</p>
+        <p>При выборе <span class="hl-text">пункта 4 программа запрашивает с консоли Имя</span> и <span
+            class="hl-text">Возраст</span>, затем <span class="hl-text">добавляет в список сотрудников данные в
+            виде</span>
+          <code><b>[<span class="string"> "Имя"</span>, <span class="number">&ltВозраст&gt </span>]</b></code>.
+        </p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 36.2</h2>
         <p>В программе есть следующий список:
-        <div class="console"><button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
-              <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
+        <div class="console"><button class="copy-button" onclick="copyCode(this)"><svg
+              xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
+              <path fill="currentColor" fill-rule="evenodd"
+                d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z"
+                clip-rule="evenodd"></path>
             </svg>
             Copy code</button>
           <pre><code class="python">matrix = [[1,  4,  7,  8, 12, 16],
@@ -242,8 +259,14 @@
           [7, 11, 16, 19, 23, 28]]</code></pre>
         </div>
         </p>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число</span>, затем <span class="hl-text">находит первое вхождение числа</span> и <span class="hl-text">выводит в консоль индексы введённого числа</span>. Например, если ввести число <code class="python"><b>14</b></code>, то программа выведет <code class="python"><b>[2, 3]</b></code>, то есть строка с индексом <code class="python"><b>2</b></code> и столбец с индексом <code class="python"><b>3</b></code>.</p>
-        <p>У этого задания есть как минимум <code class="python"><b>3</b></code> решения. Попробуйте реализовать все <code class="python"><b>3</b></code>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число</span>, затем <span
+            class="hl-text">находит первое вхождение числа</span> и <span class="hl-text">выводит в консоль индексы
+            введённого числа</span>. Например, если ввести число <code class="python"><b>14</b></code>, то программа
+          выведет <code class="python"><b>[2, 3]</b></code>, то есть строка с индексом <code
+            class="python"><b>2</b></code> и столбец с индексом <code class="python"><b>3</b></code>.</p>
+        <p>У этого задания есть как минимум <code class="python"><b>3</b></code> решения. Попробуйте реализовать все
+          <code class="python"><b>3</b></code>.
+        </p>
       </div>
     </div>
   </div>
@@ -264,13 +287,13 @@
       button.innerHTML = `
         <svg width="15" height="15" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="icon-sm"><path fill-rule="evenodd" clip-rule="evenodd" d="M18.0633 5.67375C18.5196 5.98487 18.6374 6.607 18.3262 7.06331L10.8262 18.0633C10.6585 18.3093 10.3898 18.4678 10.0934 18.4956C9.79688 18.5234 9.50345 18.4176 9.29289 18.2071L4.79289 13.7071C4.40237 13.3166 4.40237 12.6834 4.79289 12.2929C5.18342 11.9023 5.81658 11.9023 6.20711 12.2929L9.85368 15.9394L16.6738 5.93664C16.9849 5.48033 17.607 5.36263 18.0633 5.67375Z" fill="currentColor"></path></svg>Copied!
     `;
-      setTimeout(function() {
+      setTimeout(function () {
         button.innerHTML = originalHTML;
       }, 2000);
     }
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       const codeBlocks = document.querySelectorAll('code.python');
-      codeBlocks.forEach(function(codeBlock, index) {
+      codeBlocks.forEach(function (codeBlock, index) {
         let innerHTML = codeBlock.innerHTML;
         console.log(index, innerHTML);
         // STRING
