--- a/Урок 37-40. Кортежи. Множества. Словари/Python - PT37.html
+++ b/Урок 37-40. Кортежи. Множества. Словари/Python - PT37.html
@@ -4,7 +4,9 @@
   <title>Python - PT37</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #CCCCCC 0%, #BFBFBF 52%, #C9C9C9 100%);
@@ -186,20 +188,28 @@
     <div class="right-block">
       <div class="right-rect">
         <h2>Практическое Задание 37.1</h2>
-        <p>Напишите функцию <code><b><span class="function">has_date_expired</span></b></code>, которая <span class="hl-text">принимает паспортные данные в виде кортежа</span> и <span class="hl-text">проверяет дату истечения срока</span>. Если текущая дата не превышает дату истечения срока, то функция <span class="hl-text">возвращает</span> <code class="python"><b>False</b></code>. В противном случае <span class="hl-text">возвращает</span> <code class="python"><b>True</b></code>.</p>
+        <p>Напишите функцию <code><b><span class="function">has_date_expired</span></b></code>, которая <span
+            class="hl-text">принимает паспортные данные в виде кортежа</span> и <span class="hl-text">проверяет дату
+            истечения срока</span>. Если текущая дата не превышает дату истечения срока, то функция <span
+            class="hl-text">возвращает</span> <code class="python"><b>False</b></code>. В противном случае <span
+            class="hl-text">возвращает</span> <code class="python"><b>True</b></code>.</p>
         <h3>Шаблон кортежа:</h3>
         <div class="console">
-          <pre><code class="python">("Фамилия", "Имя", "Дата рождения", "Дата истечения срока")</code></pre>
+          <pre><code>(<span class="string">{фамилия}</span>, <span class="string">{имя}</span>, <span class="string">{дата_рождения}</span>, <span class="string">{дата_истечения_срока}</span>)</code></pre>
         </div>
         <h3>Пример кортежа:</h3>
         <div class="console">
           <pre><code class="python">("Lebra", "Teston", "10/02/2000", "28/04/2028")</code></pre>
         </div>
         <h3>Подсказка:</h3>
-        <p>Используйте следующий код, чтобы получить текущую дату для проверки истечения срока и чтобы конвертировать строку в дату:</p>
+        <p>Используйте следующий код, чтобы получить текущую дату для проверки истечения срока и чтобы конвертировать
+          строку в дату:</p>
         <div class="console">
-          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
-              <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
+          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15"
+              height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
+              <path fill="currentColor" fill-rule="evenodd"
+                d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z"
+                clip-rule="evenodd"></path>
             </svg>
             Copy code</button>
           <pre><code class="python">from datetime import datetime  # Подключение модуля datetime и импорт класса datetime
@@ -214,15 +224,25 @@ date_obj = datetime.strptime("28/04/2028", "%d/%m/%Y")</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 37.2</h2>
-        <p>Напишите функцию <code><b><span class="function">change_tuple_item</span></b></code>, которая <span class="hl-text">принимает кортеж</span>, <span class="hl-text">элемент поиска</span> и <span class="hl-text">элемент замены</span>. Функция должна <span class="hl-text">найти элемент поиска в кортеже</span> и <span class="hl-text">заменить его на элемент замены</span>, затем <span class="hl-text">вернуть полученный кортеж</span>.</p>
+        <p>Напишите функцию <code><b><span class="function">change_tuple_item</span></b></code>, которая <span
+            class="hl-text">принимает кортеж</span>, <span class="hl-text">элемент поиска</span> и <span
+            class="hl-text">элемент замены</span>. Функция должна <span class="hl-text">найти элемент поиска в
+            кортеже</span> и <span class="hl-text">заменить его на элемент замены</span>, затем <span
+            class="hl-text">вернуть полученный кортеж</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 37.3</h2>
-        <p>Напишите функцию <code><b><span class="function">get_сommon_friends</span></b></code>, которая <span class="hl-text">принимает множество друзей одного аккаунта</span> и <span class="hl-text">множество друзей другого аккаунта</span>. Функция должна <span class="hl-text">вернуть множество общих друзей</span>.</p>
+        <p>Напишите функцию <code><b><span class="function">get_common_friends</span></b></code>, которая <span
+            class="hl-text">принимает множество друзей одного аккаунта</span> и <span class="hl-text">множество друзей
+            другого аккаунта</span>. Функция должна <span class="hl-text">вернуть множество общих друзей</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 37.4</h2>
-        <p>Напишите функцию <code><b><span class="function">are_all_codes_included</span></b></code>, которая <span class="hl-text">принимает множество кодов</span> и <span class="hl-text">список кодов</span>. Если множество содержит все коды из списка, то функция <span class="hl-text">возвращает</span> <code class="python"><b>True</b></code>. В противном случае <span class="hl-text">возвращает</span> <code class="python"><b>False</b></code>.</p>
+        <p>Напишите функцию <code><b><span class="function">are_all_codes_included</span></b></code>, которая <span
+            class="hl-text">принимает множество кодов</span> и <span class="hl-text">список кодов</span>. Если множество
+          содержит все коды из списка, то функция <span class="hl-text">возвращает</span> <code
+            class="python"><b>True</b></code>. В противном случае <span class="hl-text">возвращает</span> <code
+            class="python"><b>False</b></code>.</p>
       </div>
     </div>
   </div>
@@ -243,13 +263,13 @@ date_obj = datetime.strptime("28/04/2028", "%d/%m/%Y")</code></pre>
       button.innerHTML = `
         <svg width="15" height="15" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="icon-sm"><path fill-rule="evenodd" clip-rule="evenodd" d="M18.0633 5.67375C18.5196 5.98487 18.6374 6.607 18.3262 7.06331L10.8262 18.0633C10.6585 18.3093 10.3898 18.4678 10.0934 18.4956C9.79688 18.5234 9.50345 18.4176 9.29289 18.2071L4.79289 13.7071C4.40237 13.3166 4.40237 12.6834 4.79289 12.2929C5.18342 11.9023 5.81658 11.9023 6.20711 12.2929L9.85368 15.9394L16.6738 5.93664C16.9849 5.48033 17.607 5.36263 18.0633 5.67375Z" fill="currentColor"></path></svg>Copied!
     `;
-      setTimeout(function() {
+      setTimeout(function () {
         button.innerHTML = originalHTML;
       }, 2000);
     }
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       const codeBlocks = document.querySelectorAll('code.python');
-      codeBlocks.forEach(function(codeBlock, index) {
+      codeBlocks.forEach(function (codeBlock, index) {
         let innerHTML = codeBlock.innerHTML;
         console.log(index, innerHTML);
         // STRING
