--- a/Урок 37-40. Кортежи. Множества. Словари/Python - PT38.html
+++ b/Урок 37-40. Кортежи. Множества. Словари/Python - PT38.html
@@ -4,7 +4,9 @@
   <title>Python - PT38</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+    rel="stylesheet">
   <style>
     body {
       background: linear-gradient(to right, #CCCCCC 0%, #BFBFBF 52%, #C9C9C9 100%);
@@ -202,23 +204,33 @@
         </div>
         </p>
 
-        <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">выводит в консоль данные в следующем виде</span>:
+        <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">выводит в консоль данные в
+            следующем виде</span>:
         <div class="console">
-          <pre><code>Логин - Пароль
-Логин - Пароль
+          <pre><code>{логин} - {пароль}
+{логин} - {пароль}
 ...</code></pre>
         </div>
         </p>
 
-        <p>При выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">запрашивает с консоли новые логин</span> и <span class="hl-text">пароль</span>. Если логин уже существует, то программа должна <span class="hl-text">сообщить об этом</span>. В противном случае <span class="hl-text">в словарь добавлятся пара логин</span> и <span class="hl-text">пароль</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">запрашивает с консоли новые
+            логин</span> и <span class="hl-text">пароль</span>. Если логин уже существует, то программа должна <span
+            class="hl-text">сообщить об этом</span>. В противном случае <span class="hl-text">в словарь добавятся пара
+            логин</span> и <span class="hl-text">пароль</span>.</p>
 
-        <p>При выборе <span class="hl-text">пункта 3</span> программа <span class="hl-text">запрашивает с консоли существующий логин</span>. Если логин не существует, то программа должна <span class="hl-text">сообщить об этом</span>. В противном случае <span class="hl-text">из словаря удаляется пара логин</span> и <span class="hl-text">пароль</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 3</span> программа <span class="hl-text">запрашивает с консоли
+            существующий логин</span>. Если логин не существует, то программа должна <span class="hl-text">сообщить об
+            этом</span>. В противном случае <span class="hl-text">из словаря удаляется пара логин</span> и <span
+            class="hl-text">пароль</span>.</p>
 
-        <p>При выборе <span class="hl-text">пункта 4</span> программа <span class="hl-text">запрашивает с консоли существующий логин</span> и <span class="hl-text">новый пароль</span>. Если логин не существует, то программа должна <span class="hl-text">сообщить об этом</span>. В противном случае <span class="hl-text">меняется пароль у введённого логина</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 4</span> программа <span class="hl-text">запрашивает с консоли
+            существующий логин</span> и <span class="hl-text">новый пароль</span>. Если логин не существует, то
+          программа должна <span class="hl-text">сообщить об этом</span>. В противном случае <span
+            class="hl-text">меняется пароль у введённого логина</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 38.2</h2>
-        <p>Реализуйте следюущее меню:
+        <p>Реализуйте следующее меню:
         <div class="console">
           <pre><code>1. Показать данные студента
 2. Изменить Фамилию и Имя
@@ -237,21 +249,35 @@
         </p>
         <p>Дата рождения хранится как объект <code><b>datetime.date()</b></code>.</p>
 
-        <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">выводит в консоль данные в следующем виде</span>:
+        <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">выводит в консоль данные в
+            следующем виде</span>:
         <div class="console">
-          <pre><code>"Имя" "Фамилия"
-Возраст: <число>
-Оценки: <число> <число> <число> ...</code></pre>
+          <pre><code>{имя} {фамилия}
+Возраст: {возраст}
+Оценки: {оценка} {оценка} {оценка} ...</code></pre>
         </div>
         </p>
 
-        <p>Для вычисления возраста напишите функцию <code><b><span class="function">сalculate_age</span></b></code>, которая <span class="hl-text">принимает день рождения</span> и <span class="hl-text">возвращает возраст</span>. Используйте <code><b>datetime.now()</b></code>, чтобы получить текущую дату, и свойства <code><b>day</b></code>, <code><b>month</b></code> и <code><b>year</b></code>, чтобы получить <span class="hl-text">день</span>, <span class="hl-text">месяц</span> и <span class="hl-text">год</span> соответственно из даты.</p>
+        <p>Для вычисления возраста напишите функцию <code><b><span class="function">calculate_age</span></b></code>,
+          которая <span class="hl-text">принимает день рождения</span> и <span class="hl-text">возвращает
+            возраст</span>. Используйте <code><b>datetime.now()</b></code>, чтобы получить текущую дату, и свойства
+          <code><b>day</b></code>, <code><b>month</b></code> и <code><b>year</b></code>, чтобы получить <span
+            class="hl-text">день</span>, <span class="hl-text">месяц</span> и <span class="hl-text">год</span>
+          соответственно из даты.
+        </p>
 
-        <p>При выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">запрашивает с консоли новые фамилию</span> и <span class="hl-text">имя</span>, затем <span class="hl-text">меняет значения у студента</span>.</p>
-        <p>При выборе <span class="hl-text">пункта 3</span> программа <span class="hl-text">запрашивает с консоли дату рождения в формате</span> <code class="python"><b>"%d/%m/%Y"</b></code>, затем <span class="hl-text">меняет значение у студента</span>. Используйте следующий код для сохранения объекта <code><b>datetime</b></code>:
+        <p>При выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">запрашивает с консоли новые
+            фамилию</span> и <span class="hl-text">имя</span>, затем <span class="hl-text">меняет значения у
+            студента</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 3</span> программа <span class="hl-text">запрашивает с консоли дату
+            рождения в формате</span> <code class="python"><b>"%d/%m/%Y"</b></code>, затем <span class="hl-text">меняет
+            значение у студента</span>. Используйте следующий код для сохранения объекта <code><b>datetime</b></code>:
         <div class="console">
-          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
-              <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
+          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15"
+              height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
+              <path fill="currentColor" fill-rule="evenodd"
+                d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z"
+                clip-rule="evenodd"></path>
             </svg>
             Copy code</button>
           <pre><code class="python">from datetime import datetime  # Подключение модуля datetime и импорт класса datetime
@@ -262,9 +288,14 @@ birth_date = datetime.strptime("10/02/2000", "%d/%m/%Y").date()</code></pre>
         </div>
         </p>
 
-        <p>При выборе <span class="hl-text">пункта 4</span> программа <span class="hl-text">запрашивает с консоли новую оценку от <code class="python"><b>1</b></code> до <code class="python"><b>12</b></code> включительно</span>, затем <span class="hl-text">добавляет её студенту</span>.</p>
-        <p>При выборе <span class="hl-text">пункта 5</span> программа <span class="hl-text">запрашивает с консоли порядковый номер оценки</span>, затем <span class="hl-text">удаляет у студента оценку по номеру</span>.</p>
-        <p>При выборе <span class="hl-text">пункта 6</span> программа <span class="hl-text">запрашивает с консоли порядковый номер оценки</span> и <span class="hl-text">новую оценку</span>, затем <span class="hl-text">заменяет у студента оценку по номеру</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 4</span> программа <span class="hl-text">запрашивает с консоли новую
+            оценку от <code class="python"><b>1</b></code> до <code class="python"><b>12</b></code> включительно</span>,
+          затем <span class="hl-text">добавляет её студенту</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 5</span> программа <span class="hl-text">запрашивает с консоли
+            порядковый номер оценки</span>, затем <span class="hl-text">удаляет у студента оценку по номеру</span>.</p>
+        <p>При выборе <span class="hl-text">пункта 6</span> программа <span class="hl-text">запрашивает с консоли
+            порядковый номер оценки</span> и <span class="hl-text">новую оценку</span>, затем <span
+            class="hl-text">заменяет у студента оценку по номеру</span>.</p>
       </div>
     </div>
   </div>
@@ -285,13 +316,13 @@ birth_date = datetime.strptime("10/02/2000", "%d/%m/%Y").date()</code></pre>
       button.innerHTML = `
         <svg width="15" height="15" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="icon-sm"><path fill-rule="evenodd" clip-rule="evenodd" d="M18.0633 5.67375C18.5196 5.98487 18.6374 6.607 18.3262 7.06331L10.8262 18.0633C10.6585 18.3093 10.3898 18.4678 10.0934 18.4956C9.79688 18.5234 9.50345 18.4176 9.29289 18.2071L4.79289 13.7071C4.40237 13.3166 4.40237 12.6834 4.79289 12.2929C5.18342 11.9023 5.81658 11.9023 6.20711 12.2929L9.85368 15.9394L16.6738 5.93664C16.9849 5.48033 17.607 5.36263 18.0633 5.67375Z" fill="currentColor"></path></svg>Copied!
     `;
-      setTimeout(function() {
+      setTimeout(function () {
         button.innerHTML = originalHTML;
       }, 2000);
     }
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       const codeBlocks = document.querySelectorAll('code.python');
-      codeBlocks.forEach(function(codeBlock, index) {
+      codeBlocks.forEach(function (codeBlock, index) {
         let innerHTML = codeBlock.innerHTML;
         console.log(index, innerHTML);
         // STRING
